@@ -1,4 +1,4 @@
-// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.codeInspection.bytecodeAnalysis;
 
 import com.intellij.codeInspection.bytecodeAnalysis.Direction.ParamValueBasedDirection;
@@ -25,7 +25,7 @@ import static org.jetbrains.org.objectweb.asm.Opcodes.*;
 abstract class ContractAnalysis extends Analysis<Result> {
   static final ResultUtil resultUtil = new ResultUtil(new ELattice<>(Value.Bot, Value.Top));
 
-  final private ExpandableArray<State> pending;
+  private final ExpandableArray<State> pending;
   final InOutInterpreter interpreter;
   final Value inValue;
   private final int generalizeShift;
@@ -59,8 +59,7 @@ abstract class ContractAnalysis extends Analysis<Result> {
   }
 
   @Override
-  @NotNull
-  protected Equation analyze() throws AnalyzerException {
+  protected @NotNull Equation analyze() throws AnalyzerException {
     pendingPush(createStartState());
     int steps = 0;
     while (pendingTop > 0 && earlyResult == null) {
@@ -279,9 +278,8 @@ class InOutAnalysis extends ContractAnalysis {
         else if (stackTop instanceof ParamValue) {
           subResult = inValue;
         }
-        else if (stackTop instanceof CallResultValue) {
-          Set<EKey> keys = ((CallResultValue)stackTop).inters;
-          subResult = new Pending(new Component[]{new Component(Value.Top, keys)});
+        else if (stackTop instanceof CallResultValue callResultValue) {
+          subResult = new Pending(new Component[]{new Component(Value.Top, callResultValue.inters)});
         }
         else {
           earlyResult = Value.Top;
@@ -341,7 +339,7 @@ class InThrowAnalysis extends ContractAnalysis {
   }
 
   private void updateThrowPaths(State state) {
-    Set<EKey> throwKeys = interpreter.throwKeys;
+    List<EKey> throwKeys = interpreter.throwKeys;
     interpreter.throwKeys = null;
     if (myThrowKeys == null) return;
     Set<EKey> prevKeys = myThrowKeys.remove(state);
@@ -350,12 +348,12 @@ class InThrowAnalysis extends ContractAnalysis {
       return;
     }
     if (prevKeys == null || prevKeys.isEmpty()) {
-      prevKeys = throwKeys != null ? throwKeys : Collections.emptySet();
+      prevKeys = throwKeys != null ? Set.copyOf(throwKeys) : Collections.emptySet();
     } else {
       if (throwKeys != null && !throwKeys.isEmpty()) {
         prevKeys = new HashSet<>(prevKeys);
         prevKeys.addAll(throwKeys);
-        if (prevKeys.size() > 32) {
+        if (prevKeys.size() > 8) {
           myThrowKeys = null;
           return;
         }
@@ -417,7 +415,7 @@ class InOutInterpreter extends BasicInterpreter {
   final InsnList insns;
   final boolean[] resultOrigins;
   final boolean nullAnalysis;
-  Set<EKey> throwKeys = null;
+  List<EKey> throwKeys = null;
 
   boolean deReferenced;
 
@@ -557,7 +555,7 @@ class InOutInterpreter extends BasicInterpreter {
           boolean isRefRetType = retType.getSort() == Type.OBJECT || retType.getSort() == Type.ARRAY;
           if (propagate && !Type.VOID_TYPE.equals(retType) || isThrowAnalysis()) {
             if (direction != null) {
-              HashSet<EKey> keys = new HashSet<>();
+              List<EKey> keys = new ArrayList<>();
               for (int i = shift; i < values.size(); i++) {
                 Direction direction = null;
                 BasicValue value = values.get(i);
@@ -585,7 +583,7 @@ class InOutInterpreter extends BasicInterpreter {
               }
             }
             else if (isRefRetType) {
-              return new CallResultValue(retType, Collections.singleton(new EKey(method, Out, stable)));
+              return new CallResultValue(retType, List.of(new EKey(method, Out, stable)));
             }
           }
         }
