@@ -1,11 +1,14 @@
-// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.codeInsight.intention.impl.config;
 
 import com.intellij.codeInsight.CodeInsightWorkspaceSettings;
 import com.intellij.codeInsight.actions.OptimizeImportsProcessor;
 import com.intellij.codeInsight.daemon.JavaErrorBundle;
 import com.intellij.codeInsight.daemon.QuickFixBundle;
-import com.intellij.codeInsight.daemon.impl.*;
+import com.intellij.codeInsight.daemon.impl.DaemonCodeAnalyzerEx;
+import com.intellij.codeInsight.daemon.impl.DaemonListeners;
+import com.intellij.codeInsight.daemon.impl.HighlightInfoType;
+import com.intellij.codeInsight.daemon.impl.SilentChangeVetoer;
 import com.intellij.codeInsight.daemon.impl.analysis.IncreaseLanguageLevelFix;
 import com.intellij.codeInsight.daemon.impl.analysis.UpgradeSdkFix;
 import com.intellij.codeInsight.daemon.impl.quickfix.*;
@@ -18,17 +21,17 @@ import com.intellij.codeInsight.intention.impl.*;
 import com.intellij.codeInspection.*;
 import com.intellij.codeInspection.actions.UnimplementInterfaceAction;
 import com.intellij.codeInspection.dataFlow.fix.DeleteSwitchLabelFix;
-import com.intellij.codeInspection.deadCode.UnusedDeclarationInspectionBase;
 import com.intellij.codeInspection.ex.EntryPointsManagerBase;
-import com.intellij.codeInspection.unusedSymbol.UnusedSymbolLocalInspectionBase;
+import com.intellij.codeInspection.ex.InspectionToolWrapper;
+import com.intellij.codeInspection.ex.QuickFixWrapper;
 import com.intellij.codeInspection.util.IntentionName;
-import com.intellij.codeInspection.util.SpecialAnnotationsUtil;
 import com.intellij.diagnostic.CoreAttachmentFactory;
 import com.intellij.ide.scratch.ScratchUtil;
 import com.intellij.java.JavaBundle;
 import com.intellij.lang.annotation.HighlightSeverity;
 import com.intellij.lang.java.request.CreateConstructorFromUsage;
 import com.intellij.lang.java.request.CreateMethodFromUsage;
+import com.intellij.modcommand.*;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.editor.Document;
@@ -37,10 +40,12 @@ import com.intellij.openapi.module.Module;
 import com.intellij.openapi.module.ModuleUtilCore;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.Comparing;
+import com.intellij.openapi.util.NlsSafe;
 import com.intellij.openapi.util.TextRange;
 import com.intellij.openapi.vfs.NonPhysicalFileSystem;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.pom.java.LanguageLevel;
+import com.intellij.profile.codeInspection.InspectionProfileManager;
 import com.intellij.psi.*;
 import com.intellij.psi.tree.IElementType;
 import com.intellij.psi.util.ClassKind;
@@ -52,335 +57,277 @@ import com.intellij.util.DocumentUtil;
 import com.intellij.util.IncorrectOperationException;
 import com.intellij.util.ObjectUtils;
 import com.intellij.util.ThreeState;
+import com.intellij.util.concurrency.ThreadingAssertions;
 import com.siyeh.ig.controlflow.UnnecessaryDefaultInspection;
 import com.siyeh.ig.fixes.*;
+import com.siyeh.ipp.imports.ReplaceOnDemandImportIntention;
 import com.siyeh.ipp.modifiers.ChangeModifierIntention;
 import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.Unmodifiable;
 
 import java.util.*;
-import java.util.function.Function;
 
 public final class QuickFixFactoryImpl extends QuickFixFactory {
   private static final Logger LOG = Logger.getInstance(QuickFixFactoryImpl.class);
 
-  @NotNull
   @Override
-  public LocalQuickFixAndIntentionActionOnPsiElement createModifierListFix(@NotNull PsiModifierList modifierList,
-                                                                           @NotNull String modifier,
-                                                                           boolean shouldHave,
-                                                                           boolean showContainingClass) {
-    return new ModifierFix(modifierList, modifier, shouldHave,showContainingClass);
+  public @NotNull LocalQuickFixAndIntentionActionOnPsiElement createModifierListFix(@NotNull PsiModifierList modifierList,
+                                                                                    @NotNull String modifier,
+                                                                                    boolean shouldHave,
+                                                                                    boolean showContainingClass) {
+    return LocalQuickFixAndIntentionActionOnPsiElement.from(new ModifierFix(modifierList, modifier, shouldHave, showContainingClass),
+                                                            modifierList.getParent());
   }
 
-  @NotNull
   @Override
-  public LocalQuickFixAndIntentionActionOnPsiElement createModifierListFix(@NotNull PsiModifierListOwner owner,
-                                                                           @NotNull final String modifier,
-                                                                           final boolean shouldHave,
-                                                                           final boolean showContainingClass) {
-    return new ModifierFix(owner, modifier, shouldHave, showContainingClass);
+  public @NotNull LocalQuickFixAndIntentionActionOnPsiElement createModifierListFix(@NotNull PsiModifierListOwner owner,
+                                                                                    final @NotNull String modifier,
+                                                                                    final boolean shouldHave,
+                                                                                    final boolean showContainingClass) {
+    return LocalQuickFixAndIntentionActionOnPsiElement.from(new ModifierFix(owner, modifier, shouldHave, showContainingClass), owner);
   }
 
-  @NotNull
   @Override
-  public LocalQuickFixAndIntentionActionOnPsiElement createMethodReturnFix(@NotNull PsiMethod method,
-                                                                           @NotNull PsiType toReturn,
-                                                                           boolean fixWholeHierarchy) {
+  public @NotNull LocalQuickFixAndIntentionActionOnPsiElement createMethodReturnFix(@NotNull PsiMethod method,
+                                                                                    @NotNull PsiType toReturn,
+                                                                                    boolean fixWholeHierarchy) {
     return new MethodReturnTypeFix(method, toReturn, fixWholeHierarchy);
   }
 
-  @NotNull
   @Override
-  public LocalQuickFixAndIntentionActionOnPsiElement createMethodReturnFix(@NotNull PsiMethod method,
-                                                                           @NotNull PsiType toReturn,
-                                                                           boolean fixWholeHierarchy,
-                                                                           boolean suggestSuperTypes) {
+  public @NotNull LocalQuickFixAndIntentionActionOnPsiElement createMethodReturnFix(@NotNull PsiMethod method,
+                                                                                    @NotNull PsiType toReturn,
+                                                                                    boolean fixWholeHierarchy,
+                                                                                    boolean suggestSuperTypes) {
     return new MethodReturnTypeFix(method, toReturn, fixWholeHierarchy, suggestSuperTypes);
   }
 
-  @NotNull
   @Override
-  public LocalQuickFixAndIntentionActionOnPsiElement createAnnotationMethodReturnFix(@NotNull PsiMethod method,
-                                                                                     @NotNull PsiType toReturn,
-                                                                                     boolean fromDefaultValue) {
+  public @NotNull LocalQuickFixAndIntentionActionOnPsiElement createAnnotationMethodReturnFix(@NotNull PsiMethod method,
+                                                                                              @NotNull PsiType toReturn,
+                                                                                              boolean fromDefaultValue) {
     return new AnnotationMethodReturnTypeFix(method, toReturn, fromDefaultValue);
   }
 
-  @NotNull
   @Override
-  public LocalQuickFixAndIntentionActionOnPsiElement createAddMethodFix(@NotNull PsiMethod method, @NotNull PsiClass toClass) {
-    return new AddMethodFix(method, toClass);
-  }
-
-  @NotNull
-  @Override
-  public LocalQuickFixAndIntentionActionOnPsiElement createAddMethodFix(@NotNull String methodText,
-                                                                        @NotNull PsiClass toClass,
-                                                                        String @NotNull ... exceptions) {
-    return new AddMethodFix(methodText, toClass, exceptions);
-  }
-
-  @NotNull
-  @Override
-  public LocalQuickFixAndIntentionActionOnPsiElement createImplementMethodsFix(@NotNull PsiClass aClass) {
+  public @NotNull LocalQuickFixAndIntentionActionOnPsiElement createImplementMethodsFix(@NotNull PsiClass aClass) {
     return new ImplementMethodsFix(aClass);
   }
 
-  @NotNull
   @Override
-  public LocalQuickFixAndIntentionActionOnPsiElement createImplementMethodsFix(@NotNull PsiElement psiElement) {
+  public @NotNull LocalQuickFixAndIntentionActionOnPsiElement createImplementMethodsFix(@NotNull PsiElement psiElement) {
     return new ImplementMethodsFix(psiElement);
   }
 
-  @NotNull
   @Override
-  public LocalQuickFixAndIntentionActionOnPsiElement createAssignmentToComparisonFix(@NotNull PsiAssignmentExpression expr) {
-    return new ReplaceAssignmentWithComparisonFix(expr);
-  }
-
-  @NotNull
-  @Override
-  public LocalQuickFixAndIntentionActionOnPsiElement createMethodThrowsFix(@NotNull PsiMethod method,
-                                                         @NotNull PsiClassType exceptionClass,
-                                                         boolean shouldThrow,
-                                                         boolean showContainingClass) {
-    return shouldThrow
-           ? new MethodThrowsFix.Add(method, exceptionClass, showContainingClass)
-           : new MethodThrowsFix.Remove(method, exceptionClass, showContainingClass);
-  }
-
-  @NotNull
-  @Override
-  public LocalQuickFixAndIntentionActionOnPsiElement createAddDefaultConstructorFix(@NotNull PsiClass aClass) {
-    return new AddDefaultConstructorFix(aClass);
+  public @NotNull IntentionAction createAssignmentToComparisonFix(@NotNull PsiAssignmentExpression expr) {
+    return new ReplaceAssignmentWithComparisonFix(expr).asIntention();
   }
 
   @Override
-  public LocalQuickFixAndIntentionActionOnPsiElement createAddConstructorFix(@NotNull PsiClass aClass, @NotNull String modifier) {
-    return aClass.getName() != null ? new AddDefaultConstructorFix(aClass, modifier) : null;
+  public @NotNull LocalQuickFixAndIntentionActionOnPsiElement createMethodThrowsFix(@NotNull PsiMethod method,
+                                                                                    @NotNull PsiClassType exceptionClass,
+                                                                                    boolean shouldThrow,
+                                                                                    boolean showContainingClass) {
+    ModCommandAction action = shouldThrow
+                              ? new MethodThrowsFix.Add(method, exceptionClass, showContainingClass)
+                              : new MethodThrowsFix.Remove(method, exceptionClass, showContainingClass);
+    return LocalQuickFixAndIntentionActionOnPsiElement.from(action, method);
   }
 
-  @NotNull
   @Override
-  public LocalQuickFixAndIntentionActionOnPsiElement createMethodParameterTypeFix(@NotNull PsiMethod method,
-                                                                                  int index,
-                                                                                  @NotNull PsiType newType,
-                                                                                  boolean fixWholeHierarchy) {
+  public @NotNull LocalQuickFixAndIntentionActionOnPsiElement createAddDefaultConstructorFix(@NotNull PsiClass aClass) {
+    return LocalQuickFixAndIntentionActionOnPsiElement.from(new AddDefaultConstructorFix(aClass), aClass);
+  }
+
+  @Override
+  public @NotNull LocalQuickFixAndIntentionActionOnPsiElement createMethodParameterTypeFix(@NotNull PsiMethod method,
+                                                                                           int index,
+                                                                                           @NotNull PsiType newType,
+                                                                                           boolean fixWholeHierarchy) {
     return new MethodParameterFix(method, newType, index, fixWholeHierarchy);
   }
 
-  @NotNull
   @Override
-  public LocalQuickFixAndIntentionActionOnPsiElement createMakeClassInterfaceFix(@NotNull PsiClass aClass, final boolean makeInterface) {
-    return new MakeClassInterfaceFix(aClass, makeInterface);
-  }
-
-  @NotNull
-  @Override
-  public LocalQuickFixAndIntentionActionOnPsiElement createExtendsListFix(@NotNull PsiClass aClass,
-                                                                          @NotNull PsiClassType typeToExtendFrom,
-                                                                          boolean toAdd) {
+  public @NotNull LocalQuickFixAndIntentionActionOnPsiElement createExtendsListFix(@NotNull PsiClass aClass,
+                                                                                   @NotNull PsiClassType typeToExtendFrom,
+                                                                                   boolean toAdd) {
     return new ExtendsListFix(aClass, typeToExtendFrom, toAdd);
   }
 
-  @NotNull
   @Override
-  public LocalQuickFixAndIntentionActionOnPsiElement createRemoveUnusedParameterFix(@NotNull PsiParameter parameter) {
+  public @NotNull LocalQuickFixAndIntentionActionOnPsiElement createRemoveUnusedParameterFix(@NotNull PsiParameter parameter) {
     return new RemoveUnusedParameterFix(parameter);
   }
 
-  @NotNull
   @Override
-  public IntentionAction createRemoveUnusedVariableFix(@NotNull PsiVariable variable) {
-    return new RemoveUnusedVariableFix(variable);
+  public @NotNull IntentionAction createRemoveUnusedVariableFix(@NotNull PsiVariable variable) {
+    return new RemoveUnusedVariableFix(variable).asIntention();
   }
 
   @Override
-  @Nullable
-  public IntentionAction createCreateClassOrPackageFix(@NotNull PsiElement context,
-                                                       @NotNull String qualifiedName,
-                                                       boolean createClass,
-                                                       String superClass) {
+  public @Nullable IntentionAction createCreateClassOrPackageFix(@NotNull PsiElement context,
+                                                                 @NotNull String qualifiedName,
+                                                                 boolean createClass,
+                                                                 String superClass) {
     return CreateClassOrPackageFix.createFix(qualifiedName, context, createClass ? ClassKind.CLASS : null, superClass);
   }
 
   @Override
-  @Nullable
-  public IntentionAction createCreateClassOrInterfaceFix(@NotNull PsiElement context,
-                                                         @NotNull String qualifiedName,
-                                                         boolean createClass,
-                                                         String superClass) {
+  public @Nullable IntentionAction createCreateClassOrInterfaceFix(@NotNull PsiElement context,
+                                                                   @NotNull String qualifiedName,
+                                                                   boolean createClass,
+                                                                   String superClass) {
     return CreateClassOrPackageFix.createFix(qualifiedName, context, createClass ? ClassKind.CLASS : ClassKind.INTERFACE, superClass);
   }
 
-  @NotNull
   @Override
-  public IntentionAction createCreateFieldOrPropertyFix(@NotNull PsiClass aClass,
-                                                        @NotNull String name,
-                                                        @NotNull PsiType type,
-                                                        @NotNull PropertyMemberType targetMember,
-                                                        PsiAnnotation @NotNull ... annotations) {
-    return new CreateFieldOrPropertyFix(aClass, name, type, targetMember, annotations);
+  public @NotNull IntentionAction createCreateFieldOrPropertyFix(@NotNull PsiClass aClass,
+                                                                 @NotNull String name,
+                                                                 @NotNull PsiType type,
+                                                                 @NotNull PropertyMemberType targetMember,
+                                                                 PsiAnnotation @NotNull ... annotations) {
+    return new CreateFieldOrPropertyFix(aClass, name, type, targetMember, annotations).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createAddExceptionToCatchFix() {
+  public @NotNull IntentionAction createAddExceptionToCatchFix() {
     return new AddExceptionToCatchFix(true).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createAddExceptionToThrowsFix(@NotNull PsiElement element) {
-    return new AddExceptionToThrowsFix(element);
+  public @NotNull IntentionAction createAddExceptionToThrowsFix(@NotNull PsiElement element) {
+    return new AddExceptionToThrowsFix(element).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createAddExceptionFromFieldInitializerToConstructorThrowsFix(@NotNull PsiElement element) {
-    return new AddExceptionFromFieldInitializerToConstructorThrowsFix(element);
+  public @NotNull IntentionAction createAddExceptionToThrowsFix(@NotNull PsiElement element, 
+                                                                @NotNull Collection<PsiClassType> exceptionsToAdd) {
+    return new AddExceptionToThrowsFix(element, exceptionsToAdd).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createSurroundWithTryCatchFix(@NotNull PsiElement element) {
-    return new SurroundWithTryCatchFix(element);
+  public @NotNull IntentionAction createAddExceptionFromFieldInitializerToConstructorThrowsFix(@NotNull PsiElement element) {
+    return new AddExceptionFromFieldInitializerToConstructorThrowsFix(element).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createAddExceptionToExistingCatch(@NotNull PsiElement element) {
-    return new AddExceptionToExistingCatchFix(element);
+  public @NotNull IntentionAction createSurroundWithTryCatchFix(@NotNull PsiElement element) {
+    return new SurroundWithTryCatchFix(element).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createChangeToAppendFix(@NotNull IElementType sign,
-                                                 @NotNull PsiType type,
-                                                 @NotNull PsiAssignmentExpression assignment) {
+  public @NotNull IntentionAction createAddExceptionToExistingCatch(@NotNull PsiElement element) {
+    return new AddExceptionToExistingCatchFix(element).asIntention();
+  }
+
+  @Override
+  public @NotNull IntentionAction createChangeToAppendFix(@NotNull IElementType sign,
+                                                          @NotNull PsiType type,
+                                                          @NotNull PsiAssignmentExpression assignment) {
     return new ChangeToAppendFix(sign, type, assignment).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createAddTypeCastFix(@NotNull PsiType type, @NotNull PsiExpression expression) {
-    return new AddTypeCastFix(type, expression);
+  public @NotNull IntentionAction createAddTypeCastFix(@NotNull PsiType type, @NotNull PsiExpression expression) {
+    return new AddTypeCastFix(type, expression).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createReuseVariableDeclarationFix(@NotNull PsiLocalVariable variable) {
-    return new ReuseVariableDeclarationFix(variable);
+  public @NotNull IntentionAction createReuseVariableDeclarationFix(@NotNull PsiLocalVariable variable) {
+    return new ReuseVariableDeclarationFix(variable).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createNavigateToAlreadyDeclaredVariableFix(@NotNull PsiVariable variable) {
-    return new NavigateToAlreadyDeclaredVariableFix(variable);
+  public @NotNull IntentionAction createNavigateToAlreadyDeclaredVariableFix(@NotNull PsiVariable variable) {
+    return new NavigateToAlreadyDeclaredVariableFix(variable).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createNavigateToDuplicateElementFix(@NotNull NavigatablePsiElement element) {
-    return new NavigateToDuplicateElementFix(element);
+  public @NotNull IntentionAction createNavigateToDuplicateElementFix(@NotNull NavigatablePsiElement element) {
+    return new NavigateToDuplicateElementFix(element).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createConvertToStringLiteralAction() {
-    return new ConvertToStringLiteralAction();
+  public @NotNull IntentionAction createConvertToStringLiteralAction() {
+    return new ConvertToStringLiteralAction().asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createDeleteReturnFix(@NotNull PsiMethod method, @NotNull PsiReturnStatement returnStatement) {
-    return new DeleteReturnFix(method, returnStatement);
+  public @NotNull IntentionAction createDeleteReturnFix(@NotNull PsiMethod method, @NotNull PsiReturnStatement returnStatement) {
+    return new DeleteReturnFix(method, returnStatement).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createDeleteCatchFix(@NotNull PsiParameter parameter) {
-    return new DeleteCatchFix(parameter);
+  public @NotNull IntentionAction createDeleteCatchFix(@NotNull PsiParameter parameter) {
+    return new DeleteCatchFix(parameter).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createDeleteMultiCatchFix(@NotNull PsiTypeElement element) {
-    return new DeleteMultiCatchFix(element);
+  public @NotNull IntentionAction createDeleteMultiCatchFix(@NotNull PsiTypeElement element) {
+    return new DeleteMultiCatchFix(element).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createConvertSwitchToIfIntention(@NotNull PsiSwitchStatement statement) {
-    return new ConvertSwitchToIfIntention(statement);
+  public @NotNull IntentionAction createConvertSwitchToIfIntention(@NotNull PsiSwitchStatement statement) {
+    return new ConvertSwitchToIfIntention(statement).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createNegationBroadScopeFix(@NotNull PsiPrefixExpression expr) {
-    return new NegationBroadScopeFix(expr);
+  public @NotNull IntentionAction createNegationBroadScopeFix(@NotNull PsiPrefixExpression expr) {
+    return new NegationBroadScopeFix(expr).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createCreateFieldFromUsageFix(@NotNull PsiReferenceExpression place) {
+  public @NotNull IntentionAction createCreateFieldFromUsageFix(@NotNull PsiReferenceExpression place) {
     return new CreateFieldFromUsageFix(place);
   }
 
-  @NotNull
   @Override
-  public IntentionAction createReplaceWithListAccessFix(@NotNull PsiArrayAccessExpression expression) {
-    return new ReplaceWithListAccessFix(expression);
+  public @NotNull IntentionAction createReplaceWithListAccessFix(@NotNull PsiArrayAccessExpression expression) {
+    return new ReplaceWithListAccessFix(expression).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createAddNewArrayExpressionFix(@NotNull PsiArrayInitializerExpression expression) {
+  public @NotNull IntentionAction createAddNewArrayExpressionFix(@NotNull PsiArrayInitializerExpression expression) {
     return new AddNewArrayExpressionFix(expression).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createMoveCatchUpFix(@NotNull PsiCatchSection section, @NotNull PsiCatchSection section1) {
-    return new MoveCatchUpFix(section, section1);
+  public @NotNull IntentionAction createMoveCatchUpFix(@NotNull PsiCatchSection section, @NotNull PsiCatchSection section1) {
+    return new MoveCatchUpFix(section, section1).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createRenameWrongRefFix(@NotNull PsiReferenceExpression ref) {
+  public @NotNull IntentionAction createRenameWrongRefFix(@NotNull PsiReferenceExpression ref) {
     return new RenameWrongRefFix(ref);
   }
 
-  @NotNull
   @Override
-  public IntentionAction createRemoveQualifierFix(@NotNull PsiExpression qualifier,
-                                                  @NotNull PsiReferenceExpression expression,
-                                                  @NotNull PsiClass resolved) {
-    return new RemoveQualifierFix(qualifier, expression, resolved);
+  public @NotNull IntentionAction createRemoveQualifierFix(@NotNull PsiExpression qualifier,
+                                                           @NotNull PsiReferenceExpression expression,
+                                                           @NotNull PsiClass resolved) {
+    return new RemoveQualifierFix(expression, resolved).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createRemoveParameterListFix(@NotNull PsiMethod parent) {
-    return new RemoveParameterListFix(parent);
+  public @NotNull IntentionAction createRemoveParameterListFix(@NotNull PsiMethod parent) {
+    return new RemoveParameterListFix(parent).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createShowModulePropertiesFix(@NotNull PsiElement element) {
+  public @NotNull IntentionAction createShowModulePropertiesFix(@NotNull PsiElement element) {
     return new ShowModulePropertiesFix(element);
   }
-  @NotNull
   @Override
-  public IntentionAction createShowModulePropertiesFix(@NotNull Module module) {
+  public @NotNull IntentionAction createShowModulePropertiesFix(@NotNull Module module) {
     return new ShowModulePropertiesFix(module);
   }
 
-  @NotNull
   @Override
-  public IntentionAction createIncreaseLanguageLevelFix(@NotNull LanguageLevel level) {
+  public @NotNull IntentionAction createIncreaseLanguageLevelFix(@NotNull LanguageLevel level) {
     return new IncreaseLanguageLevelFix(level);
   }
 
@@ -389,49 +336,43 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
     return new UpgradeSdkFix(level);
   }
 
-  @NotNull
   @Override
-  public IntentionAction createChangeParameterClassFix(@NotNull PsiClass aClass, @NotNull PsiClassType type) {
+  public @NotNull IntentionAction createChangeParameterClassFix(@NotNull PsiClass aClass, @NotNull PsiClassType type) {
     return new ChangeParameterClassFix(aClass, type);
   }
 
-  @NotNull
   @Override
-  public IntentionAction createReplaceInaccessibleFieldWithGetterSetterFix(@NotNull PsiElement element,
-                                                                           @NotNull PsiMethod getter,
-                                                                           boolean isSetter) {
-    return new ReplaceInaccessibleFieldWithGetterSetterFix(element, getter, isSetter);
+  public @NotNull IntentionAction createReplaceInaccessibleFieldWithGetterSetterFix(@NotNull PsiReferenceExpression element,
+                                                                                    @NotNull PsiMethod getter,
+                                                                                    boolean isSetter) {
+    return new ReplaceInaccessibleFieldWithGetterSetterFix(element, getter, isSetter).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createSurroundWithArrayFix(@Nullable PsiCall methodCall, @Nullable PsiExpression expression) {
-    return new SurroundWithArrayFix(methodCall, expression);
+  public @NotNull IntentionAction createSurroundWithArrayFix(@Nullable PsiCall methodCall, @Nullable PsiExpression expression) {
+    return new SurroundWithArrayFix(methodCall, expression).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createImplementAbstractClassMethodsFix(@NotNull PsiElement elementToHighlight) {
+  public @NotNull IntentionAction createImplementAbstractClassMethodsFix(@NotNull PsiElement elementToHighlight) {
     return new ImplementAbstractClassMethodsFix(elementToHighlight);
   }
 
-  @NotNull
   @Override
-  public IntentionAction createMoveClassToSeparateFileFix(@NotNull PsiClass aClass) {
-    return new MoveClassToSeparateFileFix(aClass);
+  public @NotNull IntentionAction createMoveClassToSeparateFileFix(@NotNull PsiClass aClass) {
+    return new MoveClassToSeparateFileFix(aClass).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createRenameFileFix(@NotNull String newName) {
+  public @NotNull IntentionAction createRenameFileFix(@NotNull String newName) {
     return new RenameFileFix(newName);
   }
 
-  @Nullable
   @Override
-  public IntentionAction createRenameFix(@NotNull PsiElement element) {
+  public @Nullable IntentionAction createRenameFix(@NotNull PsiElement element) {
     PsiFile file = element.getContainingFile();
     if (file == null) return null;
+    if(!element.isPhysical()) return null;
     ProblemDescriptor descriptor = new ProblemDescriptorBase(element,
                                          element,
                                          "",
@@ -441,100 +382,86 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
                                          null,
                                          true,
                                          false);
-    return new LocalQuickFixAsIntentionAdapter(new RenameFix(), descriptor);
+    return QuickFixWrapper.wrap(descriptor, new RenameFix());
   }
 
-  @NotNull
   @Override
-  public LocalQuickFixAndIntentionActionOnPsiElement createRenameElementFix(@NotNull PsiNamedElement element) {
+  public @NotNull LocalQuickFixAndIntentionActionOnPsiElement createRenameElementFix(@NotNull PsiNamedElement element) {
     return new RenameElementFix(element);
   }
 
-  @NotNull
   @Override
-  public LocalQuickFixAndIntentionActionOnPsiElement createRenameElementFix(@NotNull PsiNamedElement element, @NotNull String newName) {
+  public @NotNull LocalQuickFixAndIntentionActionOnPsiElement createRenameElementFix(@NotNull PsiNamedElement element, @NotNull String newName) {
     return new RenameElementFix(element, newName);
   }
 
-  @NotNull
   @Override
-  public IntentionAction createChangeExtendsToImplementsFix(@NotNull PsiClass aClass, @NotNull PsiClassType classToExtendFrom) {
-    return new ChangeExtendsToImplementsFix(aClass, classToExtendFrom);
+  public @NotNull IntentionAction createChangeExtendsToImplementsFix(@NotNull PsiClass aClass, @NotNull PsiClassType classToExtendFrom) {
+    return new ChangeExtendsToImplementsFix(aClass, classToExtendFrom).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createCreateConstructorMatchingSuperFix(@NotNull PsiClass aClass) {
+  public @NotNull IntentionAction createCreateConstructorMatchingSuperFix(@NotNull PsiClass aClass) {
     return new CreateConstructorMatchingSuperFix(aClass);
   }
 
-  @NotNull
   @Override
-  public IntentionAction createRemoveNewQualifierFix(@NotNull PsiNewExpression expression, PsiClass aClass) {
-    return new RemoveNewQualifierFix(expression, aClass);
+  public @NotNull IntentionAction createRemoveNewQualifierFix(@NotNull PsiNewExpression expression, PsiClass aClass) {
+    return new RemoveNewQualifierFix(expression, aClass).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createSuperMethodReturnFix(@NotNull PsiMethod superMethod, @NotNull PsiType superMethodType) {
+  public @NotNull IntentionAction createSuperMethodReturnFix(@NotNull PsiMethod superMethod, @NotNull PsiType superMethodType) {
     return new MethodReturnTypeFix(superMethod, superMethodType, false, false, true);
   }
 
-  @NotNull
   @Override
-  public IntentionAction createInsertNewFix(@NotNull PsiMethodCallExpression call, @NotNull PsiClass aClass) {
-    return new InsertNewFix(call, aClass);
+  public @NotNull IntentionAction createInsertNewFix(@NotNull PsiMethodCallExpression call, @NotNull PsiClass aClass) {
+    return new InsertNewFix(call, aClass).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createAddMethodBodyFix(@NotNull PsiMethod method) {
-    return new AddMethodBodyFix(method);
+  public @NotNull IntentionAction createAddMethodBodyFix(@NotNull PsiMethod method) {
+    return new AddMethodBodyFix(method).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createAddMethodBodyFix(@NotNull PsiMethod method, @NotNull @Nls String text) {
-    return new AddMethodBodyFix(method, text);
+  public @NotNull IntentionAction createAddMethodBodyFix(@NotNull PsiMethod method, @NotNull @Nls String text) {
+    return new AddMethodBodyFix(method, text).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createDeleteMethodBodyFix(@NotNull PsiMethod method) {
-    return new DeleteMethodBodyFix(method);
+  public @NotNull IntentionAction createDeleteMethodBodyFix(@NotNull PsiMethod method) {
+    return new DeleteMethodBodyFix(method).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createInsertSuperFix(@NotNull PsiMethod constructor) {
-    return new InsertSuperFix(constructor);
+  public @NotNull IntentionAction createInsertSuperFix(@NotNull PsiMethod constructor) {
+    return new InsertSuperFix(constructor).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createInsertThisFix(@NotNull PsiMethod constructor) {
-    return new InsertThisFix(constructor);
+  public @NotNull IntentionAction createInsertThisFix(@NotNull PsiMethod constructor) {
+    return new InsertThisFix(constructor).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createChangeMethodSignatureFromUsageFix(@NotNull PsiMethod targetMethod,
-                                                                 PsiExpression @NotNull [] expressions,
-                                                                 @NotNull PsiSubstitutor substitutor,
-                                                                 @NotNull PsiElement context,
-                                                                 boolean changeAllUsages,
-                                                                 int minUsagesNumberToShowDialog) {
+  public @NotNull IntentionAction createChangeMethodSignatureFromUsageFix(@NotNull PsiMethod targetMethod,
+                                                                          PsiExpression @NotNull [] expressions,
+                                                                          @NotNull PsiSubstitutor substitutor,
+                                                                          @NotNull PsiElement context,
+                                                                          boolean changeAllUsages,
+                                                                          int minUsagesNumberToShowDialog) {
     return new ChangeMethodSignatureFromUsageFix(targetMethod, expressions, substitutor, context, changeAllUsages, minUsagesNumberToShowDialog);
   }
 
-  @NotNull
   @Override
-  public IntentionAction createChangeMethodSignatureFromUsageReverseOrderFix(@NotNull PsiMethod targetMethod,
-                                                                             PsiExpression @NotNull [] expressions,
-                                                                             @NotNull PsiSubstitutor substitutor,
-                                                                             @NotNull PsiElement context,
-                                                                             boolean changeAllUsages,
-                                                                             int minUsagesNumberToShowDialog) {
+  public @NotNull IntentionAction createChangeMethodSignatureFromUsageReverseOrderFix(@NotNull PsiMethod targetMethod,
+                                                                                      PsiExpression @NotNull [] expressions,
+                                                                                      @NotNull PsiSubstitutor substitutor,
+                                                                                      @NotNull PsiElement context,
+                                                                                      boolean changeAllUsages,
+                                                                                      int minUsagesNumberToShowDialog) {
     return new ChangeMethodSignatureFromUsageReverseOrderFix(targetMethod,
                                                              expressions,
                                                              substitutor,
@@ -543,21 +470,18 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
                                                              minUsagesNumberToShowDialog);
   }
 
-  @NotNull
   @Override
-  public List<IntentionAction> createCreateMethodFromUsageFixes(@NotNull PsiMethodCallExpression call) {
+  public @NotNull List<IntentionAction> createCreateMethodFromUsageFixes(@NotNull PsiMethodCallExpression call) {
     return CreateMethodFromUsage.generateActions(call);
   }
 
-  @NotNull
   @Override
-  public IntentionAction createCreateMethodFromUsageFix(@NotNull PsiMethodReferenceExpression methodReferenceExpression) {
+  public @NotNull IntentionAction createCreateMethodFromUsageFix(@NotNull PsiMethodReferenceExpression methodReferenceExpression) {
     return new CreateMethodFromMethodReferenceFix(methodReferenceExpression);
   }
 
-  @NotNull
   @Override
-  public List<IntentionAction> createCreateConstructorFromCallExpressionFixes(@NotNull PsiMethodCallExpression call) {
+  public @NotNull List<IntentionAction> createCreateConstructorFromCallExpressionFixes(@NotNull PsiMethodCallExpression call) {
     return CreateConstructorFromUsage.generateConstructorActions(call);
   }
 
@@ -565,92 +489,78 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   public @NotNull IntentionAction createReplaceWithTypePatternFix(@NotNull PsiReferenceExpression exprToReplace,
                                                                   @NotNull PsiClass resolvedExprClass,
                                                                   @NotNull String patternVarName) {
-    return new ReplaceWithTypePatternFix(exprToReplace, resolvedExprClass, patternVarName);
+    return new ReplaceWithTypePatternFix(exprToReplace, resolvedExprClass, patternVarName).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createStaticImportMethodFix(@NotNull PsiMethodCallExpression call) {
+  public @NotNull IntentionAction createStaticImportMethodFix(@NotNull PsiMethodCallExpression call) {
     return new StaticImportMethodFix(call.getContainingFile(), call);
   }
 
-  @NotNull
   @Override
-  public IntentionAction createQualifyStaticMethodCallFix(@NotNull PsiMethodCallExpression call) {
+  public @NotNull IntentionAction createQualifyStaticMethodCallFix(@NotNull PsiMethodCallExpression call) {
     return new QualifyStaticMethodCallFix(call.getContainingFile(), call);
   }
 
-  @NotNull
   @Override
-  public IntentionAction createReplaceAddAllArrayToCollectionFix(@NotNull PsiMethodCallExpression call) {
-    return new ReplaceAddAllArrayToCollectionFix(call);
+  public @NotNull IntentionAction createReplaceAddAllArrayToCollectionFix(@NotNull PsiMethodCallExpression call) {
+    return new ReplaceAddAllArrayToCollectionFix(call).asIntention();
   }
 
-  @NotNull
   @Override
-  public List<IntentionAction> createCreateConstructorFromUsageFixes(@NotNull PsiConstructorCall call) {
+  public @NotNull List<IntentionAction> createCreateConstructorFromUsageFixes(@NotNull PsiConstructorCall call) {
     return CreateConstructorFromUsage.generateConstructorActions(call);
   }
 
-  @NotNull
   @Override
-  public List<IntentionAction> getVariableTypeFromCallFixes(@NotNull PsiMethodCallExpression call, @NotNull PsiExpressionList list) {
+  public @NotNull List<IntentionAction> getVariableTypeFromCallFixes(@NotNull PsiMethodCallExpression call, @NotNull PsiExpressionList list) {
     return VariableTypeFromCallFix.getQuickFixActions(call, list);
   }
 
-  @NotNull
   @Override
-  public IntentionAction createAddReturnFix(@NotNull PsiParameterListOwner methodOrLambda) {
-    return new AddReturnFix(methodOrLambda);
+  public @NotNull IntentionAction createAddReturnFix(@NotNull PsiParameterListOwner methodOrLambda) {
+    return new AddReturnFix(methodOrLambda).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createAddVariableInitializerFix(@NotNull PsiVariable variable) {
-    return new AddVariableInitializerFix(variable);
+  public @NotNull IntentionAction createAddVariableInitializerFix(@NotNull PsiVariable variable) {
+    return new AddVariableInitializerFix(variable).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createDeferFinalAssignmentFix(@NotNull PsiVariable variable, @NotNull PsiReferenceExpression expression) {
-    return new DeferFinalAssignmentFix(variable, expression);
+  public @NotNull IntentionAction createDeferFinalAssignmentFix(@NotNull PsiVariable variable, @NotNull PsiReferenceExpression expression) {
+    return new DeferFinalAssignmentFix(variable, expression).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createVariableAccessFromInnerClassFix(@NotNull PsiVariable variable, @NotNull PsiElement scope) {
+  public @NotNull IntentionAction createVariableAccessFromInnerClassFix(@NotNull PsiVariable variable, @NotNull PsiElement scope) {
     return new VariableAccessFromInnerClassFix(variable, scope);
   }
 
-  @NotNull
   @Override
-  public IntentionAction createCreateConstructorParameterFromFieldFix(@NotNull PsiField field) {
-    return new CreateConstructorParameterFromFieldFix(field);
+  public @NotNull IntentionAction createCreateConstructorParameterFromFieldFix(@NotNull PsiField field) {
+    return new CreateConstructorParameterFromFieldFix(field).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createInitializeFinalFieldInConstructorFix(@NotNull PsiField field) {
-    return new InitializeFinalFieldInConstructorFix(field);
+  public @NotNull IntentionAction createInitializeFinalFieldInConstructorFix(@NotNull PsiField field) {
+    return new InitializeFinalFieldInConstructorFix(field).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createChangeClassSignatureFromUsageFix(@NotNull PsiClass owner, @NotNull PsiReferenceParameterList parameterList) {
+  public @NotNull IntentionAction createChangeClassSignatureFromUsageFix(@NotNull PsiClass owner, @NotNull PsiReferenceParameterList parameterList) {
     return new ChangeClassSignatureFromUsageFix(owner, parameterList);
   }
 
-  @NotNull
   @Override
-  public IntentionAction createReplacePrimitiveWithBoxedTypeAction(@NotNull PsiTypeElement element,
-                                                                   @NotNull String typeName,
-                                                                   @NotNull String boxedTypeName) {
-    return new ReplacePrimitiveWithBoxedTypeAction(element, typeName, boxedTypeName);
+  public @NotNull IntentionAction createReplacePrimitiveWithBoxedTypeAction(@NotNull PsiTypeElement element,
+                                                                            @NotNull String typeName,
+                                                                            @NotNull String boxedTypeName) {
+    return new ReplacePrimitiveWithBoxedTypeAction(element, typeName, boxedTypeName).asIntention();
   }
 
-  @Nullable
   @Override
-  public IntentionAction createReplacePrimitiveWithBoxedTypeAction(@NotNull PsiType operandType, @NotNull PsiTypeElement checkTypeElement) {
+  public @Nullable IntentionAction createReplacePrimitiveWithBoxedTypeAction(@NotNull PsiType operandType, @NotNull PsiTypeElement checkTypeElement) {
     PsiPrimitiveType primitiveType = ObjectUtils.tryCast(checkTypeElement.getType(), PsiPrimitiveType.class);
     if (primitiveType == null) return null;
     PsiClassType boxedType = primitiveType.getBoxedType(checkTypeElement);
@@ -660,22 +570,19 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
                                                      primitiveType.getBoxedTypeName());
   }
 
-  @NotNull
   @Override
-  public IntentionAction createMakeVarargParameterLastFix(@NotNull PsiVariable parameter) {
-    return new MakeVarargParameterLastFix(parameter);
+  public @NotNull IntentionAction createMakeVarargParameterLastFix(@NotNull PsiVariable parameter) {
+    return new MakeVarargParameterLastFix(parameter).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createMakeReceiverParameterFirstFix(@NotNull PsiReceiverParameter parameter) {
-    return new MakeReceiverParameterFirstFix(parameter);
+  public @NotNull IntentionAction createMakeReceiverParameterFirstFix(@NotNull PsiReceiverParameter parameter) {
+    return new MakeReceiverParameterFirstFix(parameter).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createMoveBoundClassToFrontFix(@NotNull PsiClass aClass, @NotNull PsiClassType type) {
-    return new MoveBoundClassToFrontFix(aClass, type);
+  public @NotNull IntentionAction createMoveBoundClassToFrontFix(@NotNull PsiTypeParameter aClass, @NotNull PsiClassType type) {
+    return new MoveBoundClassToFrontFix(aClass, type).asIntention();
   }
 
   @Override
@@ -683,19 +590,17 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
     PullAsAbstractUpFix.registerQuickFix(method, registrar);
   }
 
-  @NotNull
   @Override
-  public IntentionAction createCreateAnnotationMethodFromUsageFix(@NotNull PsiNameValuePair pair) {
+  public @NotNull IntentionAction createCreateAnnotationMethodFromUsageFix(@NotNull PsiNameValuePair pair) {
     return new CreateAnnotationMethodFromUsageFix(pair);
   }
 
-  @NotNull
   @Override
-  public IntentionAction createOptimizeImportsFix(final boolean onTheFly, @NotNull PsiFile file) {
+  public @NotNull IntentionAction createOptimizeImportsFix(final boolean fixOnTheFly, @NotNull PsiFile file) {
     ApplicationManager.getApplication().assertIsNonDispatchThread();
     VirtualFile virtualFile = file.getVirtualFile();
-    boolean isInContent = virtualFile != null && ModuleUtilCore.projectContainsFile(file.getProject(), virtualFile, false);
-    return new OptimizeImportsFix(onTheFly, isInContent, virtualFile == null ? ThreeState.UNSURE : SilentChangeVetoer.extensionsAllowToChangeFileSilently(file.getProject(), virtualFile));
+    boolean isInContent = virtualFile != null && (ModuleUtilCore.projectContainsFile(file.getProject(), virtualFile, false) || ScratchUtil.isScratch(virtualFile));
+    return new OptimizeImportsFix(fixOnTheFly, isInContent, virtualFile == null ? ThreeState.UNSURE : SilentChangeVetoer.extensionsAllowToChangeFileSilently(file.getProject(), virtualFile));
   }
 
   private static final class OptimizeImportsFix implements IntentionAction {
@@ -710,21 +615,22 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
       myInContent = isInContent;
     }
 
-    @NotNull
     @Override
-    public String getText() {
+    public @NotNull String getText() {
       return QuickFixBundle.message("optimize.imports.fix");
     }
 
-    @NotNull
     @Override
-    public String getFamilyName() {
+    public @NotNull String getFamilyName() {
       return QuickFixBundle.message("optimize.imports.fix");
     }
 
     @Override
     public boolean isAvailable(@NotNull Project project, Editor editor, PsiFile file) {
-      if (myOnTheFly && !timeToOptimizeImports(file, myInContent, extensionsAllowToChangeFileSilently) || !(file instanceof PsiJavaFile)) {
+      if (!(file instanceof PsiJavaFile)) {
+        return false;
+      }
+      if (ApplicationManager.getApplication().isDispatchThread() && myOnTheFly && !timeToOptimizeImports(file, myInContent, extensionsAllowToChangeFileSilently)) {
         return false;
       }
       VirtualFile virtualFile = file.getViewProvider().getVirtualFile();
@@ -734,7 +640,7 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
     }
 
     @Override
-    public void invoke(@NotNull final Project project, final Editor editor, final PsiFile file) throws IncorrectOperationException {
+    public void invoke(final @NotNull Project project, final Editor editor, final PsiFile file) throws IncorrectOperationException {
       invokeOnTheFlyImportOptimizer(file);
     }
 
@@ -748,76 +654,75 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   public @NotNull IntentionAction createSafeDeleteUnusedParameterInHierarchyFix(@NotNull PsiParameter parameter,
                                                                                 boolean excludingHierarchy) {
     if (excludingHierarchy) {
-      Function<InspectionProfileEntry, InspectionProfileEntry> extractor =
-        profileEntry -> profileEntry instanceof UnusedDeclarationInspectionBase
-                        ? ((UnusedDeclarationInspectionBase)profileEntry).getSharedLocalInspectionTool()
-                        : profileEntry;
-      return SetInspectionOptionFix.createFix(UnusedSymbolLocalInspectionBase.SHORT_NAME, "myCheckParameterExcludingHierarchy",
-                                              JavaErrorBundle.message("parameter.excluding.hierarchy.disable.text"), false, extractor);
+      InspectionToolWrapper<?, ?> toolWrapper = Objects.requireNonNull(InspectionProfileManager.getInstance(parameter.getProject())
+                                                                         .getCurrentProfile().getInspectionTool("unused", parameter));
+      InspectionProfileEntry tool = toolWrapper.getTool();
+      return new UpdateInspectionOptionFix(tool, "members.myCheckParameterExcludingHierarchy",
+        JavaErrorBundle.message("parameter.excluding.hierarchy.disable.text"), false).asIntention();
     }
     else {
       return new SafeDeleteFix(parameter);
     }
   }
 
-  @NotNull
   @Override
-  public IntentionAction createAddToDependencyInjectionAnnotationsFix(@NotNull Project project,
-                                                                      @NotNull String qualifiedName) {
-    final EntryPointsManagerBase entryPointsManager = EntryPointsManagerBase.getInstance(project);
-    return SpecialAnnotationsUtil.createAddToSpecialAnnotationsListIntentionAction(
-      QuickFixBundle.message("fix.unused.symbol.injection.text", qualifiedName),
-      QuickFixBundle.message("fix.unused.symbol.injection.family"),
-      JavaBundle.message("separator.mark.as.entry.point.if.annotated.by"), entryPointsManager.ADDITIONAL_ANNOTATIONS, qualifiedName);
+  public @NotNull IntentionAction createAddToDependencyInjectionAnnotationsFix(@NotNull Project project,
+                                                                               @NotNull String qualifiedName) {
+    return EntryPointsManagerBase.createAddEntryPointAnnotation(qualifiedName).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createAddToImplicitlyWrittenFieldsFix(@NotNull Project project, @NotNull final String qualifiedName) {
-    EntryPointsManagerBase entryPointsManagerBase = EntryPointsManagerBase.getInstance(project);
-    return entryPointsManagerBase.new AddImplicitlyWriteAnnotation(qualifiedName);
+  public @NotNull IntentionAction createAddToImplicitlyWrittenFieldsFix(@NotNull Project project, final @NotNull String qualifiedName) {
+    return EntryPointsManagerBase.createAddImplicitWriteAnnotation(qualifiedName).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createCreateGetterOrSetterFix(boolean createGetter, boolean createSetter, @NotNull PsiField field) {
-    return new CreateGetterOrSetterFix(createGetter, createSetter, field);
+  public @NotNull IntentionAction createCreateGetterOrSetterFix(boolean createGetter, boolean createSetter, @NotNull PsiField field) {
+    if (createGetter && createSetter) {
+      return new CreateGetterOrSetterFix.CreateGetterAndSetterFix(field).asIntention();
+    }
+    if (createGetter) {
+      return new CreateGetterOrSetterFix.CreateGetterFix(field).asIntention();
+    }
+    if (createSetter) {
+      return new CreateGetterOrSetterFix.CreateSetterFix(field).asIntention();
+    }
+    throw new IllegalArgumentException();
   }
 
-  @NotNull
   @Override
-  public LocalQuickFixAndIntentionActionOnPsiElement createRenameToIgnoredFix(@NotNull PsiNamedElement namedElement,
-                                                                              boolean useElementNameAsSuffix) {
-    return RenameToIgnoredFix.createRenameToIgnoreFix(namedElement, useElementNameAsSuffix);
+  public @NotNull IntentionAction createRenameToIgnoredFix(@NotNull PsiVariable namedElement, boolean useElementNameAsSuffix) {
+    return RenameToIgnoredFix.createRenameToIgnoreFix(namedElement, useElementNameAsSuffix).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createEnableOptimizeImportsOnTheFlyFix() {
-    return new EnableOptimizeImportsOnTheFlyFix();
+  public @NotNull IntentionAction createEnableOptimizeImportsOnTheFlyFix() {
+    return new EnableOptimizeImportsOnTheFlyFix().asIntention();
   }
 
-  @NotNull
   @Override
-  public LocalQuickFixAndIntentionActionOnPsiElement createDeleteFix(@NotNull PsiElement element) {
-    return new DeleteElementFix(element);
+  public @NotNull LocalQuickFixAndIntentionActionOnPsiElement createDeleteFix(@NotNull PsiElement element) {
+    return LocalQuickFixAndIntentionActionOnPsiElement.from(new DeleteElementFix(element), element);
   }
 
   @Override
   public @NotNull IntentionAction createDeleteFix(@NotNull PsiElement @NotNull ... elements) {
-    return new DeleteElementFix.DeleteMultiFix(elements);
+    return new DeleteElementFix.DeleteMultiFix(elements).asIntention();
   }
 
-  @NotNull
   @Override
-  public LocalQuickFixAndIntentionActionOnPsiElement createDeleteFix(@NotNull PsiElement element, @Nls @NotNull String text) {
-    return new DeleteElementFix(element, text);
+  public @NotNull LocalQuickFixAndIntentionActionOnPsiElement createDeleteFix(@NotNull PsiElement element, @Nls @NotNull String text) {
+    return LocalQuickFixAndIntentionActionOnPsiElement.from(new DeleteElementFix(element, text), element);
   }
 
-  @NotNull
   @Override
-  public IntentionAction createSafeDeleteFix(@NotNull PsiElement element) {
+  public @NotNull IntentionAction createSafeDeleteFix(@NotNull PsiElement element) {
     return new SafeDeleteFix(element);
+  }
+
+  @Override
+  public @NotNull ModCommandAction createDeletePrivateMethodFix(@NotNull PsiMethod method) {
+    return new DeletePrivateMethodFix(method);
   }
 
   @Override
@@ -843,54 +748,48 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
     }
   }
 
-  @NotNull
   @Override
-  public IntentionAction createAddMissingRequiredAnnotationParametersFix(@NotNull final PsiAnnotation annotation,
-                                                                         final PsiMethod @NotNull [] annotationMethods,
-                                                                         @NotNull final Collection<String> missedElements) {
-    return new AddMissingRequiredAnnotationParametersFix(annotation, annotationMethods, missedElements);
+  public @NotNull IntentionAction createAddMissingRequiredAnnotationParametersFix(final @NotNull PsiAnnotation annotation,
+                                                                                  final PsiMethod @NotNull [] annotationMethods,
+                                                                                  final @NotNull Collection<String> missedElements) {
+    return new AddMissingRequiredAnnotationParametersFix(annotation, missedElements).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createSurroundWithQuotesAnnotationParameterValueFix(@NotNull PsiAnnotationMemberValue value,
-                                                                             @NotNull PsiType expectedType) {
-    return new SurroundWithQuotesAnnotationParameterValueFix(value, expectedType);
+  public @NotNull IntentionAction createSurroundWithQuotesAnnotationParameterValueFix(@NotNull PsiAnnotationMemberValue value,
+                                                                                      @NotNull PsiType expectedType) {
+    return new SurroundWithQuotesAnnotationParameterValueFix(value, expectedType).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction addMethodQualifierFix(@NotNull PsiMethodCallExpression methodCall) {
-    return new AddMethodQualifierFix(methodCall);
+  public @NotNull IntentionAction addMethodQualifierFix(@NotNull PsiMethodCallExpression methodCall) {
+    return new AddMethodQualifierFix(methodCall).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createWrapWithOptionalFix(@Nullable PsiType type, @NotNull PsiExpression expression) {
+  public @NotNull IntentionAction createWrapWithOptionalFix(@Nullable PsiType type, @NotNull PsiExpression expression) {
     return WrapObjectWithOptionalOfNullableFix.createFix(type, expression);
   }
 
-  @Nullable
   @Override
-  public IntentionAction createNotIterableForEachLoopFix(@NotNull PsiExpression expression) {
+  public @Nullable IntentionAction createNotIterableForEachLoopFix(@NotNull PsiExpression expression) {
     final PsiElement parent = expression.getParent();
-    if (parent instanceof PsiForeachStatement) {
+    if (parent instanceof PsiForeachStatement forEach) {
       final PsiType type = expression.getType();
       if (InheritanceUtil.isInheritor(type, CommonClassNames.JAVA_UTIL_ITERATOR)) {
-        return new ReplaceIteratorForEachLoopWithIteratorForLoopFix((PsiForeachStatement)parent);
+        return new ReplaceIteratorForEachLoopWithIteratorForLoopFix(forEach).asIntention();
       }
     }
     return null;
   }
 
-  @NotNull
   @Override
-  public List<IntentionAction> createAddAnnotationAttributeNameFixes(@NotNull PsiNameValuePair pair) {
+  public @Unmodifiable @NotNull List<IntentionAction> createAddAnnotationAttributeNameFixes(@NotNull PsiNameValuePair pair) {
     return AddAnnotationAttributeNameFix.createFixes(pair);
   }
 
   private static boolean timeToOptimizeImports(@NotNull PsiFile file, boolean isInContent, @NotNull ThreeState extensionsAllowToChangeFileSilently) {
-    ApplicationManager.getApplication().assertIsDispatchThread();
+    ThreadingAssertions.assertEventDispatchThread();
     if (!CodeInsightWorkspaceSettings.getInstance(file.getProject()).isOptimizeImportsOnTheFly()) {
       return false;
     }
@@ -914,7 +813,7 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
     //noinspection UnnecessaryLocalVariable
     boolean hasErrorsBesideUnresolvedImports = !DaemonCodeAnalyzerEx
       .processHighlights(document, file.getProject(), HighlightSeverity.ERROR, 0, document.getTextLength(), error -> {
-        if (error.type instanceof LocalInspectionsPass.InspectionHighlightInfoType) return true;
+        if (error.type.isInspectionHighlightInfoType()) return true;
         int infoStart = error.getActualStartOffset();
         int infoEnd = error.getActualEndOffset();
 
@@ -924,183 +823,189 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
     return hasErrorsBesideUnresolvedImports;
   }
 
-  @NotNull
   @Override
-  public IntentionAction createCollectionToArrayFix(@NotNull PsiExpression collectionExpression,
-                                                    @NotNull PsiExpression expressionToReplace,
-                                                    @NotNull PsiArrayType arrayType) {
-    return new ConvertCollectionToArrayFix(collectionExpression, expressionToReplace, arrayType);
+  public @NotNull IntentionAction createCollectionToArrayFix(@NotNull PsiExpression collectionExpression,
+                                                             @NotNull PsiExpression expressionToReplace,
+                                                             @NotNull PsiArrayType arrayType) {
+    return new ConvertCollectionToArrayFix(collectionExpression, expressionToReplace, arrayType).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createInsertMethodCallFix(@NotNull PsiMethodCallExpression call, @NotNull PsiMethod method) {
-    return new InsertMethodCallFix(call, method);
+  public @NotNull IntentionAction createInsertMethodCallFix(@NotNull PsiMethodCallExpression call, @NotNull PsiMethod method) {
+    return new InsertMethodCallFix(call, method).asIntention();
   }
 
-  @NotNull
   @Override
-  public LocalQuickFixAndIntentionActionOnPsiElement createAccessStaticViaInstanceFix(@NotNull PsiReferenceExpression methodRef,
-                                                                                      @NotNull JavaResolveResult result) {
-    return new AccessStaticViaInstanceFix(methodRef, result, true);
+  public @NotNull LocalQuickFixAndIntentionActionOnPsiElement createAccessStaticViaInstanceFix(@NotNull PsiReferenceExpression methodRef,
+                                                                                               @NotNull JavaResolveResult result) {
+    return LocalQuickFixAndIntentionActionOnPsiElement.from(new AccessStaticViaInstanceFix(methodRef, result), methodRef);
   }
 
-  @NotNull
   @Override
-  public IntentionAction createWrapWithAdapterFix(@Nullable PsiType type, @NotNull PsiExpression expression) {
+  public @NotNull IntentionAction createWrapWithAdapterFix(@Nullable PsiType type, @NotNull PsiExpression expression) {
     return new WrapWithAdapterMethodCallFix(type, expression, null);
   }
 
-  @NotNull
   @Override
-  public IntentionAction createDeleteSideEffectAwareFix(@NotNull PsiExpressionStatement statement) {
-    return new DeleteSideEffectsAwareFix(statement, statement.getExpression());
+  public @NotNull IntentionAction createDeleteSideEffectAwareFix(@NotNull PsiExpressionStatement statement) {
+    return new DeleteSideEffectsAwareFix(statement, statement.getExpression()).asIntention();
   }
 
-  @Nullable
   @Override
-  public IntentionAction createCreateClassInPackageInModuleFix(@NotNull Module module, @Nullable String packageName) {
+  public @Nullable IntentionAction createCreateClassInPackageInModuleFix(@NotNull Module module, @Nullable String packageName) {
     return CreateClassInPackageInModuleFix.createFix(module, packageName);
   }
 
-  @NotNull
   @Override
-  public IntentionAction createPushDownMethodFix() {
+  public @NotNull IntentionAction createPushDownMethodFix() {
     return new RunRefactoringAction(JavaRefactoringActionHandlerFactory.getInstance().createPushDownHandler(),
                                     JavaBundle.message("push.method.down.command.name")) {
-      @NotNull
       @Override
-      public Priority getPriority() {
+      public @NotNull Priority getPriority() {
         return Priority.NORMAL;
       }
     };
   }
 
-  @NotNull
   @Override
-  public IntentionAction createSameErasureButDifferentMethodsFix(@NotNull PsiMethod method, @NotNull PsiMethod superMethod) {
-    return new SameErasureButDifferentMethodsFix(method, superMethod);
+  public @NotNull IntentionAction createSameErasureButDifferentMethodsFix(@NotNull PsiMethod method, @NotNull PsiMethod superMethod) {
+    return new SameErasureButDifferentMethodsFix(method, superMethod).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createAddMissingEnumBranchesFix(@NotNull PsiSwitchBlock switchBlock, @NotNull Set<String> missingCases) {
-    return new CreateEnumMissingSwitchBranchesFix(switchBlock, missingCases);
+  public @NotNull IntentionAction createAddMissingEnumBranchesFix(@NotNull PsiSwitchBlock switchBlock, @NotNull Set<String> missingCases) {
+    return new CreateEnumMissingSwitchBranchesFix(switchBlock, missingCases).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createAddMissingSealedClassBranchesFix(@NotNull PsiSwitchBlock switchBlock,
-                                                                @NotNull Set<String> missingCases,
-                                                                @NotNull List<String> allNames) {
-    return new CreateSealedClassMissingSwitchBranchesFix(switchBlock, missingCases, allNames);
+  public @NotNull IntentionAction createAddMissingSealedClassBranchesFix(@NotNull PsiSwitchBlock switchBlock,
+                                                                         @NotNull @Unmodifiable Set<String> missingCases,
+                                                                         @NotNull List<String> allNames) {
+    return new CreateSealedClassMissingSwitchBranchesFix(switchBlock, missingCases, allNames).asIntention();
   }
 
-  @Nullable
   @Override
-  public IntentionAction createAddMissingRecordClassBranchesFix(@NotNull PsiSwitchBlock switchBlock,
-                                                                @NotNull PsiClass selectorType,
-                                                                @NotNull Map<PsiType, Set<List<PsiType>>> branches,
-                                                                @NotNull List<? extends PsiCaseLabelElement> elements) {
-    return CreateMissingDeconstructionRecordClassBranchesFix.create(switchBlock, selectorType, branches, elements);
+  public @Nullable IntentionAction createAddMissingSealedClassBranchesFixWithNull(@NotNull PsiSwitchBlock switchBlock,
+                                                                                  @NotNull Set<String> missingCases,
+                                                                                  @NotNull List<String> allNames) {
+    PsiBasedModCommandAction<PsiSwitchBlock> withNull =
+      CreateSealedClassMissingSwitchBranchesFix.createWithNull(switchBlock, missingCases, allNames);
+    if (withNull == null) {
+      return null;
+    }
+    return withNull.asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createAddSwitchDefaultFix(@NotNull PsiSwitchBlock switchBlock, @IntentionName String message) {
-    return new CreateDefaultBranchFix(switchBlock, message);
+  public @Nullable IntentionAction createAddMissingBooleanPrimitiveBranchesFix(@NotNull PsiSwitchBlock block) {
+    CreateMissingBooleanPrimitiveBranchesFix fix = CreateMissingBooleanPrimitiveBranchesFix.createFix(block);
+    if (fix == null) return null;
+    return fix.asIntention();
   }
 
-  @Nullable
   @Override
-  public IntentionAction createCollapseAnnotationsFix(@NotNull PsiAnnotation annotation) {
+  public @Nullable IntentionAction createAddMissingBooleanPrimitiveBranchesFixWithNull(@NotNull PsiSwitchBlock block) {
+    @Nullable PsiBasedModCommandAction<PsiSwitchBlock> fix = CreateMissingBooleanPrimitiveBranchesFix.createWithNull(block);
+    if (fix == null) return null;
+    return fix.asIntention();
+  }
+
+  @Override
+  public @Nullable IntentionAction createAddMissingRecordClassBranchesFix(@NotNull PsiSwitchBlock switchBlock,
+                                                                          @NotNull PsiClass selectorType,
+                                                                          @NotNull Map<PsiType, Set<List<PsiType>>> branches,
+                                                                          @NotNull List<? extends PsiCaseLabelElement> elements) {
+    CreateMissingDeconstructionRecordClassBranchesFix fix =
+      CreateMissingDeconstructionRecordClassBranchesFix.create(switchBlock, selectorType, branches, elements);
+    return fix == null ? null : fix.asIntention();
+  }
+
+  @Override
+  public @NotNull IntentionAction createAddSwitchDefaultFix(@NotNull PsiSwitchBlock switchBlock, @IntentionName String message) {
+    return new CreateDefaultBranchFix(switchBlock, message).asIntention();
+  }
+
+  @Override
+  public @Nullable IntentionAction createCollapseAnnotationsFix(@NotNull PsiAnnotation annotation) {
     return CollapseAnnotationsFix.from(annotation);
   }
 
-  @NotNull
   @Override
-  public IntentionAction createChangeModifierFix() {
+  public @NotNull IntentionAction createChangeModifierFix() {
     return new ChangeModifierIntention(true);
   }
 
-  @NotNull
   @Override
-  public IntentionAction createWrapSwitchRuleStatementsIntoBlockFix(@NotNull PsiSwitchLabeledRuleStatement rule) {
-    return new WrapSwitchRuleStatementsIntoBlockFix(rule);
+  public @NotNull IntentionAction createWrapSwitchRuleStatementsIntoBlockFix(@NotNull PsiSwitchLabeledRuleStatement rule) {
+    return new WrapSwitchRuleStatementsIntoBlockFix(rule).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createAddParameterListFix(@NotNull PsiMethod method) {
-    return new AddParameterListFix(method);
+  public @NotNull IntentionAction createAddParameterListFix(@NotNull PsiMethod method) {
+    return new AddParameterListFix(method).asIntention();
   }
 
-  @NotNull
   @Override
-  public IntentionAction createAddEmptyRecordHeaderFix(@NotNull PsiClass psiClass) {
+  public @NotNull IntentionAction createAddEmptyRecordHeaderFix(@NotNull PsiClass psiClass) {
     return new AddEmptyRecordHeaderFix(psiClass).asIntention();
   }
 
   @Override
-  public @NotNull IntentionAction createCreateFieldFromParameterFix() {
-    return new CreateFieldFromParameterAction(true);
+  public @NotNull IntentionAction createCreateFieldFromParameterFix(@NotNull PsiParameter parameter) {
+    return new CreateFieldFromParameterAction(parameter).asIntention();
   }
 
   @Override
-  public @NotNull IntentionAction createAssignFieldFromParameterFix() {
-    return new AssignFieldFromParameterAction(true);
+  public @NotNull IntentionAction createAssignFieldFromParameterFix(@NotNull PsiParameter parameter) {
+    return new AssignFieldFromParameterAction(parameter).asIntention();
   }
 
   @Override
   public @NotNull IntentionAction createFillPermitsListFix(@NotNull PsiIdentifier classIdentifier) {
-    return new FillPermitsListFix(classIdentifier);
+    return new FillPermitsListFix(classIdentifier).asIntention();
   }
 
   @Override
   public @NotNull IntentionAction createAddToPermitsListFix(@NotNull PsiClass subClass,
                                                             @NotNull PsiClass superClass) {
-    return new AddToPermitsListFix(subClass, superClass);
+    return new AddToPermitsListFix(subClass, superClass).asIntention();
   }
 
   @Override
   public @NotNull IntentionAction createMoveClassToPackageFix(@NotNull PsiClass classToMove, @NotNull String packageName) {
-    return new MoveToPackageFix(classToMove.getContainingFile(), packageName);
+    return new MoveToPackageFix(classToMove, packageName);
   }
 
   @Override
   public @NotNull List<IntentionAction> createExtendSealedClassFixes(@NotNull PsiJavaCodeReferenceElement subclassRef,
                                                                      @NotNull PsiClass parentClass,
                                                                      @NotNull PsiClass subClass) {
-    return Arrays.asList(ImplementOrExtendFix.createActions(subclassRef, subClass, parentClass, false));
+    ModCommandAction fix = ImplementOrExtendFix.createFix(subClass, parentClass);
+    return fix == null ? List.of() : List.of(fix.asIntention());
   }
 
   @Override
   public @NotNull IntentionAction createSealClassFromPermitsListFix(@NotNull PsiClass classFromPermitsList) {
-    return new SealClassFromPermitsListAction(classFromPermitsList);
+    return new SealClassFromPermitsListAction(classFromPermitsList).asIntention();
   }
 
   @Override
   public @NotNull IntentionAction createRemoveDuplicateExtendsAction(@NotNull String className) {
-    return new UnimplementInterfaceAction.RemoveDuplicateExtendFix(className);
-  }
-
-  @Override
-  public @NotNull IntentionAction createMoveMemberIntoClassFix(@NotNull PsiErrorElement errorElement) {
-    return new MoveMemberIntoClassFix(errorElement);
+    return new UnimplementInterfaceAction.RemoveDuplicateExtendFix(className).asIntention();
   }
 
   @Override
   public @NotNull IntentionAction createReceiverParameterTypeFix(@NotNull PsiReceiverParameter parameter, @NotNull PsiType newType) {
-    return new ReceiverParameterTypeFix(parameter, newType);
+    return new ReceiverParameterTypeFix(parameter, newType).asIntention();
   }
 
-  private final static class ReceiverParameterTypeFix extends SetVariableTypeFix {
+  private static final class ReceiverParameterTypeFix extends SetVariableTypeFix {
     private ReceiverParameterTypeFix(@NotNull PsiReceiverParameter receiverParameter, @NotNull PsiType enclosingClassType) {
       super(receiverParameter, enclosingClassType);
     }
 
     @Override
-    public @NotNull String getText() {
+    protected @NotNull String getText() {
       return QuickFixBundle.message("fix.receiver.parameter.type.text");
     }
 
@@ -1112,13 +1017,13 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
 
   @Override
   public @NotNull IntentionAction createConvertInterfaceToClassFix(@NotNull PsiClass aClass) {
-    return new ConvertInterfaceToClassFix(aClass);
+    return new ConvertInterfaceToClassIntention(aClass).asIntention();
   }
 
   @Override
-  @Nullable
-  public IntentionAction createUnwrapArrayInitializerMemberValueAction(@NotNull PsiArrayInitializerMemberValue arrayValue) {
-    return UnwrapArrayInitializerMemberValueAction.createFix(arrayValue);
+  public @Nullable IntentionAction createUnwrapArrayInitializerMemberValueAction(@NotNull PsiArrayInitializerMemberValue arrayValue) {
+    UnwrapArrayInitializerMemberValueAction fix = UnwrapArrayInitializerMemberValueAction.createFix(arrayValue);
+    return fix == null ? null : fix.asIntention();
   }
 
   @Override
@@ -1138,15 +1043,12 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
 
   @Override
   public @NotNull IntentionAction createDeleteSwitchLabelFix(@NotNull PsiCaseLabelElement labelElement) {
-    return new DeleteSwitchLabelFix(labelElement, false);
+    return new DeleteSwitchLabelFix(labelElement, false).asIntention();
   }
 
   @Override
-  public @NotNull IntentionAction createDeleteDefaultFix(@NotNull PsiFile file, @NotNull PsiElement duplicateElement) {
-    ProblemDescriptor descriptor =
-      new ProblemDescriptorBase(duplicateElement, duplicateElement, "", null, ProblemHighlightType.GENERIC_ERROR_OR_WARNING, false, null,
-                                false, false);
-    return new LocalQuickFixAsIntentionAdapter(new UnnecessaryDefaultInspection.DeleteDefaultFix(), descriptor);
+  public @NotNull IntentionAction createDeleteDefaultFix(@Nullable PsiFile file, @NotNull PsiElement defaultElement) {
+    return new UnnecessaryDefaultInspection.DeleteDefaultFix().asIntention();
   }
 
 
@@ -1157,50 +1059,54 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   }
 
   @Override
-  @Nullable
-  public IntentionAction createMergeDuplicateAttributesFix(@NotNull PsiNameValuePair pair) {
+  public @Nullable IntentionAction createMergeDuplicateAttributesFix(@NotNull PsiNameValuePair pair) {
     final PsiReference reference = pair.getReference();
     if (reference == null) return null;
     final PsiMethod resolved = ObjectUtils.tryCast(reference.resolve(), PsiMethod.class);
     if (resolved == null) return null;
     final PsiType returnType = resolved.getReturnType();
     if (!(returnType instanceof PsiArrayType)) return null;
-    return new MergeDuplicateAttributesFix(pair);
+    return new MergeDuplicateAttributesFix(pair).asIntention();
   }
 
   @Override
   public @NotNull IntentionAction createMoveSwitchBranchUpFix(@NotNull PsiCaseLabelElement moveBeforeLabel,
                                                               @NotNull PsiCaseLabelElement labelElement) {
-    return new MoveSwitchBranchUpFix(moveBeforeLabel, labelElement);
+    return new MoveSwitchBranchUpFix(moveBeforeLabel, labelElement).asIntention();
   }
 
   @Override
   public @NotNull IntentionAction createSimplifyBooleanFix(@NotNull PsiExpression expression, boolean value) {
-    return new SimplifyBooleanExpressionFix(expression, value);
+    return new SimplifyBooleanExpressionFix(expression, value).asIntention();
   }
 
   @Override
   public @NotNull IntentionAction createSetVariableTypeFix(@NotNull PsiVariable variable, @NotNull PsiType type) {
-    return new SetVariableTypeFix(variable, type);
+    return new SetVariableTypeFix(variable, type).asIntention();
   }
 
   @Override
   public @NotNull IntentionAction createReceiverParameterNameFix(@NotNull PsiReceiverParameter parameter, @NotNull String newName) {
-    return new ReceiverParameterNameFix(parameter, newName);
+    return new ReceiverParameterNameFix(parameter, newName).asIntention();
   }
 
   @Override
   public @NotNull IntentionAction createRemoveRedundantLambdaParameterTypesFix(@NotNull PsiLambdaExpression lambdaExpression,
                                                                                @IntentionName String message) {
-    return new RemoveRedundantLambdaParameterTypesFix(lambdaExpression, message);
+    return new RemoveRedundantLambdaParameterTypesFix(lambdaExpression, message).asIntention();
   }
 
   @Override
   public @NotNull IntentionAction createConvertAnonymousToInnerAction(@NotNull PsiAnonymousClass anonymousClass) {
-    return new MoveAnonymousToInnerFix(anonymousClass);
+    return new MoveAnonymousOrLocalToInnerFix(anonymousClass);
   }
 
-  private final static class RemoveRedundantLambdaParameterTypesFix extends RemoveRedundantParameterTypesFix {
+  @Override
+  public @NotNull IntentionAction createConvertLocalToInnerAction(@NotNull PsiClass localClass) {
+    return new MoveAnonymousOrLocalToInnerFix(localClass);
+  }
+
+  private static final class RemoveRedundantLambdaParameterTypesFix extends RemoveRedundantParameterTypesFix {
     private final @IntentionName String myMessage;
 
     private RemoveRedundantLambdaParameterTypesFix(@NotNull PsiLambdaExpression lambdaExpression, @IntentionName String message) {
@@ -1208,16 +1114,15 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
       myMessage = message;
     }
 
-    @Nls
     @Override
-    public @NotNull String getText() {
-      return myMessage;
+    protected @NotNull Presentation getPresentation(@NotNull ActionContext context, @NotNull PsiLambdaExpression element) {
+      return Presentation.of(myMessage);
     }
   }
 
   @Override
   public @NotNull IntentionAction createSplitSwitchBranchWithSeveralCaseValuesAction() {
-    return new SplitSwitchBranchWithSeveralCaseValuesAction();
+    return new SplitSwitchBranchWithSeveralCaseValuesAction().asIntention();
   }
 
   @Override
@@ -1227,6 +1132,46 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
 
   @Override
   public @NotNull IntentionAction createDeleteFix(@NotNull PsiElement @NotNull [] elements, @NotNull @Nls String text) {
-    return new DeleteElementFix.DeleteMultiFix(elements, text);
+    return new DeleteElementFix.DeleteMultiFix(elements, text).asIntention();
+  }
+
+  @Override
+  public @NotNull ModCommandAction createReplaceCaseDefaultWithDefaultFix(@NotNull PsiCaseLabelElementList list){
+    return new ReplaceCaseDefaultWithDefaultFix(list);
+  }
+
+  @Override
+  public @NotNull ModCommandAction createReverseCaseDefaultNullFixFix(@NotNull PsiCaseLabelElementList list){
+    return new ReverseCaseDefaultNullFix(list);
+  }
+
+  @Override
+  public @NotNull IntentionAction createAddMainMethodFix(@NotNull PsiImplicitClass implicitClass) {
+    return new AddMainMethodFix(implicitClass).asIntention();
+  }
+
+  @Override
+  public @NotNull ModCommandAction createReplaceOnDemandImport(@NotNull PsiImportModuleStatement importModuleStatement, @NotNull @Nls String text) {
+    return new ReplaceOnDemandImportAction(importModuleStatement, text);
+  }
+
+  private static class ReplaceOnDemandImportAction extends PsiUpdateModCommandAction<PsiImportModuleStatement> {
+    @NlsSafe private final String text;
+
+    private ReplaceOnDemandImportAction(PsiImportModuleStatement element, @NlsSafe String text) {
+      super(element);
+      this.text = text;
+    }
+
+    @Override
+    public @NotNull String getFamilyName() {
+      return text;
+    }
+
+    @Override
+    protected void invoke(@NotNull ActionContext context, @NotNull PsiImportModuleStatement element, @NotNull ModPsiUpdater updater) {
+      element = updater.getWritable(element);
+      ReplaceOnDemandImportIntention.replaceOnDemand(element);
+    }
   }
 }
