@@ -1,19 +1,15 @@
-// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.codeInsight.daemon.impl.quickfix;
 
 import com.intellij.JavaTestUtil;
 import com.intellij.codeInsight.intention.IntentionAction;
 import com.intellij.codeInsight.intention.IntentionActionDelegate;
-import com.intellij.psi.PsiNamedElement;
 import com.intellij.testFramework.fixtures.JavaCodeInsightFixtureTestCase;
-import com.intellij.util.Function;
-import com.intellij.util.containers.ContainerUtil;
+import com.intellij.ui.ChooserInterceptor;
+import com.intellij.ui.UiInterceptors;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.Set;
-import java.util.TreeSet;
 
 /**
  * @author Dmitry Batkovich
@@ -26,26 +22,30 @@ public class AddMethodQualifierTest extends JavaCodeInsightFixtureTestCase {
   }
 
   public void testNonStaticMethod() {
-    doTest("fieldElement", "staticElement", "localElement1", "paramElement");
+    doTest("localElement1", "paramElement", "fieldElement", "staticElement");
   }
 
   public void testStaticMethod() {
-    doTest("staticElement", "localElement1", "paramElement");
+    doTest("localElement1", "paramElement", "staticElement");
   }
 
   public void testNestedMethod() {
-    doTest("fieldElement", "localElement1", "nestedField", "nestedParamElement", "staticElement", "paramElement");
+    doTest("localElement1", "nestedParamElement", "nestedField", "paramElement", "fieldElement", "staticElement");
   }
 
   public void testConstructor() {
-    doTest("fieldElement", "staticElement", "localElement1");
+    doTest("localElement1", "fieldElement", "staticElement");
   }
 
   public void testStaticInitializer() {
-    doTest("staticElement", "localElement1");
+    doTest("localElement1", "staticElement");
   }
 
   public void testFix() {
+    doTestFix();
+  }
+
+  public void testFixArguments() {
     doTestFix();
   }
 
@@ -55,29 +55,15 @@ public class AddMethodQualifierTest extends JavaCodeInsightFixtureTestCase {
   }
 
   private void doTestFix() {
-    myFixture.configureByFile(getTestName(false) + "Before.java");
-    final AddMethodQualifierFix quickFix = getQuickFix();
-    assertNotNull(quickFix);
-    myFixture.checkPreviewAndLaunchAction(quickFix);
-    myFixture.checkResultByFile(getTestName(false) + "After.java");
+    myFixture.configureByFile(getTestName(false) + ".java");
+    IntentionAction action = myFixture.findSingleIntention("Add ");
+    myFixture.checkPreviewAndLaunchAction(action);
+    myFixture.checkResultByFile(getTestName(false) + "_after.java");
   }
 
   private void doTest(final String... candidatesNames) {
-    myFixture.configureByFile(getTestName(false) + ".java");
-    final AddMethodQualifierFix addMethodQualifierFix = getQuickFix();
-    if (candidatesNames.length == 0) {
-      assertNull(addMethodQualifierFix);
-      return;
-    }
-    assertNotNull(addMethodQualifierFix);
-    final Set<String> actualCandidatesNames =
-      new TreeSet<>(ContainerUtil.map(addMethodQualifierFix.getCandidates(), (Function<PsiNamedElement, String>)psiNamedElement -> {
-        final String name = psiNamedElement.getName();
-        assertNotNull(name);
-        return name;
-      }));
-    final Set<String> expectedCandidatesNames = new TreeSet<>(Arrays.asList(candidatesNames));
-    assertEquals(expectedCandidatesNames, actualCandidatesNames);
+    UiInterceptors.register(new ChooserInterceptor(List.of(candidatesNames), candidatesNames[0]));
+    doTestFix();
   }
 
   @Nullable
