@@ -1,9 +1,8 @@
-// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.jps.cmdline;
 
 import com.intellij.openapi.diagnostic.Logger;
-import com.intellij.openapi.util.io.NioFiles;
-import com.intellij.util.SystemProperties;
+import com.intellij.openapi.util.io.FileUtilRt;
 import com.intellij.util.containers.FileCollectionFactory;
 import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
@@ -17,7 +16,6 @@ import org.jetbrains.jps.builders.impl.BuildRootIndexImpl;
 import org.jetbrains.jps.builders.impl.BuildTargetIndexImpl;
 import org.jetbrains.jps.builders.impl.BuildTargetRegistryImpl;
 import org.jetbrains.jps.builders.java.JavaModuleBuildTargetType;
-import org.jetbrains.jps.builders.java.dependencyView.Callbacks;
 import org.jetbrains.jps.builders.logging.BuildLoggingManager;
 import org.jetbrains.jps.builders.storage.BuildDataPaths;
 import org.jetbrains.jps.incremental.*;
@@ -25,10 +23,7 @@ import org.jetbrains.jps.incremental.fs.BuildFSState;
 import org.jetbrains.jps.incremental.messages.BuildMessage;
 import org.jetbrains.jps.incremental.messages.CompilerMessage;
 import org.jetbrains.jps.incremental.relativizer.PathRelativizerService;
-import org.jetbrains.jps.incremental.storage.BuildDataManager;
-import org.jetbrains.jps.incremental.storage.BuildTargetsState;
-import org.jetbrains.jps.incremental.storage.ProjectStamps;
-import org.jetbrains.jps.incremental.storage.StampsStorage;
+import org.jetbrains.jps.incremental.storage.*;
 import org.jetbrains.jps.indices.ModuleExcludeIndex;
 import org.jetbrains.jps.indices.impl.IgnoredFileIndexImpl;
 import org.jetbrains.jps.indices.impl.ModuleExcludeIndexImpl;
@@ -37,11 +32,15 @@ import org.jetbrains.jps.model.JpsProject;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.file.Path;
 import java.util.*;
 
 import static org.jetbrains.jps.api.CmdlineRemoteProto.Message.ControllerMessage.ParametersMessage.TargetTypeBuildScope;
+import static org.jetbrains.jps.backwardRefs.JavaBackwardReferenceIndexWriter.isCompilerReferenceFSCaseSensitive;
 
 public final class BuildRunner {
+  private static final boolean USE_EXPERIMENTAL_STORAGE = Boolean.getBoolean("jps.use.experimental.storage");
+
   private static final Logger LOG = Logger.getInstance(BuildRunner.class);
   private final JpsModelLoader myModelLoader;
   private List<String> myFilePaths = Collections.emptyList();
@@ -53,18 +52,26 @@ public final class BuildRunner {
   }
 
   public void setFilePaths(@Nullable List<String> filePaths) {
-    myFilePaths = filePaths != null? filePaths : Collections.emptyList();
+    myFilePaths = filePaths == null ? Collections.emptyList() : filePaths;
   }
 
   public void setBuilderParams(@Nullable Map<String, String> builderParams) {
-    myBuilderParams = builderParams != null? builderParams : Collections.emptyMap();
+    myBuilderParams = builderParams == null ? Collections.emptyMap() : builderParams;
   }
 
   public @NotNull JpsProject loadModelAndGetJpsProject() throws IOException {
     return myModelLoader.loadModel().getProject();
   }
 
+  /**
+   * @deprecated please use {@link #load(MessageHandler, Path, BuildFSState)}
+   */
+  @Deprecated(forRemoval = true)
   public ProjectDescriptor load(@NotNull MessageHandler msgHandler, @NotNull File dataStorageRoot, @NotNull BuildFSState fsState) throws IOException {
+    return load(msgHandler, dataStorageRoot.toPath(), fsState);
+  }
+
+  public ProjectDescriptor load(@NotNull MessageHandler msgHandler, @NotNull Path dataStorageRoot, @NotNull BuildFSState fsState) throws IOException {
     final JpsModel jpsModel = myModelLoader.loadModel();
     BuildDataPaths dataPaths = new BuildDataPathsImpl(dataStorageRoot);
     BuildTargetRegistryImpl targetRegistry = new BuildTargetRegistryImpl(jpsModel);
@@ -72,47 +79,59 @@ public final class BuildRunner {
     IgnoredFileIndexImpl ignoredFileIndex = new IgnoredFileIndexImpl(jpsModel);
     BuildRootIndexImpl buildRootIndex = new BuildRootIndexImpl(targetRegistry, jpsModel, index, dataPaths, ignoredFileIndex);
     BuildTargetIndexImpl targetIndex = new BuildTargetIndexImpl(targetRegistry, buildRootIndex);
-    BuildTargetsState targetsState = new BuildTargetsState(dataPaths, jpsModel, buildRootIndex);
 
-    PathRelativizerService relativizer = new PathRelativizerService(jpsModel.getProject());
+    PathRelativizerService relativizer = new PathRelativizerService(jpsModel.getProject(), isCompilerReferenceFSCaseSensitive());
 
-    ProjectStamps projectStamps = null;
     BuildDataManager dataManager = null;
+    StorageManager storageManager = null;
     try {
-      projectStamps = new ProjectStamps(dataStorageRoot, targetsState, relativizer);
-      dataManager = new BuildDataManager(dataPaths, targetsState, relativizer);
+      storageManager = createStorageManager(dataStorageRoot);
+      dataManager = new BuildDataManager(dataPaths, new BuildTargetsState(new BuildTargetStateManagerImpl(dataPaths, jpsModel)), relativizer, storageManager);
       if (dataManager.versionDiffers()) {
         myForceCleanCaches = true;
-        msgHandler.processMessage(new CompilerMessage(getRootCompilerName(), BuildMessage.Kind.INFO,
-                                                      JpsBuildBundle.message("build.message.dependency.data.format.has.changed.project.rebuild.required")));
+        msgHandler.processMessage(new CompilerMessage(
+          getRootCompilerName(), BuildMessage.Kind.INFO, JpsBuildBundle.message("build.message.dependency.data.format.has.changed.project.rebuild.required")
+        ));
       }
     }
     catch (Exception e) {
       // second try
       LOG.info(e);
-      if (projectStamps != null) {
-        projectStamps.close();
+
+      if (storageManager != null) {
+        storageManager.forceClose();
       }
       if (dataManager != null) {
         dataManager.close();
       }
+
       myForceCleanCaches = true;
-      NioFiles.deleteRecursively(dataStorageRoot.toPath());
-      targetsState = new BuildTargetsState(dataPaths, jpsModel, buildRootIndex);
-      projectStamps = new ProjectStamps(dataStorageRoot, targetsState, relativizer);
-      dataManager = new BuildDataManager(dataPaths, targetsState, relativizer);
-      // second attempt succeeded
-      msgHandler.processMessage(new CompilerMessage(getRootCompilerName(), BuildMessage.Kind.INFO,
-                                                    JpsBuildBundle.message("build.message.project.rebuild.forced.0", e.getMessage())));
+      FileUtilRt.deleteRecursively(dataStorageRoot);
+
+      dataManager = new BuildDataManager(dataPaths, new BuildTargetsState(new BuildTargetStateManagerImpl(dataPaths, jpsModel)), relativizer, createStorageManager(dataStorageRoot));
+      // the second attempt succeeded
+      msgHandler.processMessage(new CompilerMessage(
+        getRootCompilerName(), BuildMessage.Kind.INFO, JpsBuildBundle.message("build.message.project.rebuild.forced.0", e.getMessage()))
+      );
     }
 
     return new ProjectDescriptor(
-      jpsModel, fsState, projectStamps, dataManager, BuildLoggingManager.DEFAULT, index, targetIndex, buildRootIndex, ignoredFileIndex
+      jpsModel, fsState, dataManager, BuildLoggingManager.DEFAULT, index, targetIndex, buildRootIndex, ignoredFileIndex
     );
   }
 
-  @NotNull
-  public static @Nls String getRootCompilerName() {
+  private static @Nullable StorageManager createStorageManager(@NotNull Path dataStorageRoot) {
+    if (USE_EXPERIMENTAL_STORAGE || ProjectStamps.PORTABLE_CACHES) {
+      StorageManager manager = new StorageManager(dataStorageRoot.resolve("jps-portable-cache.db"));
+      manager.open();
+      return manager;
+    }
+    else {
+      return null;
+    }
+  }
+
+  public static @NotNull @Nls String getRootCompilerName() {
     return JpsBuildBundle.message("builder.name.root");
   }
 
@@ -120,25 +139,12 @@ public final class BuildRunner {
     myForceCleanCaches = forceCleanCaches;
   }
 
-  /**
-   * @deprecated Use {@link #runBuild(ProjectDescriptor, CanceledStatus, MessageHandler, BuildType, List, boolean)} instead.
-   * constantSearch parameter is ignored
-   */
-  @Deprecated(forRemoval = true)
-  public void runBuild(ProjectDescriptor pd,
-                       CanceledStatus cs,
-                       @Nullable Callbacks.ConstantAffectionResolver constantSearch,
-                       MessageHandler msgHandler,
-                       BuildType buildType,
-                       List<TargetTypeBuildScope> scopes, final boolean includeDependenciesToScope) throws Exception {
-    runBuild(pd, cs, msgHandler, buildType, scopes, includeDependenciesToScope);
-  }
-
   public void runBuild(@NotNull ProjectDescriptor pd,
                        @NotNull CanceledStatus cs,
                        @NotNull MessageHandler msgHandler,
                        @NotNull BuildType buildType,
-                       @NotNull List<TargetTypeBuildScope> scopes, final boolean includeDependenciesToScope) throws Exception {
+                       @NotNull List<TargetTypeBuildScope> scopes,
+                       boolean includeDependenciesToScope) throws Exception {
     for (int attempt = 0; attempt < 2 && !cs.isCanceled(); attempt++) {
       final boolean forceClean = myForceCleanCaches && myFilePaths.isEmpty();
       final CompileScope compileScope = createCompilationScope(pd, scopes, myFilePaths, forceClean, includeDependenciesToScope);
@@ -151,7 +157,7 @@ public final class BuildRunner {
             break;
 
           case CLEAN:
-            //todo[nik]
+            //todo
     //        new ProjectBuilder(new GantBinding(), project).clean();
             break;
           case UP_TO_DATE_CHECK:
@@ -177,8 +183,11 @@ public final class BuildRunner {
     return createCompilationScope(pd, scopes, myFilePaths, forceClean, false);
   }
 
-  private static CompileScope createCompilationScope(ProjectDescriptor pd, List<TargetTypeBuildScope> scopes, Collection<String> paths,
-                                                     final boolean forceClean, final boolean includeDependenciesToScope) throws Exception {
+  private static CompileScope createCompilationScope(@NotNull ProjectDescriptor projectDescriptor,
+                                                     @NotNull List<TargetTypeBuildScope> scopes,
+                                                     @NotNull Collection<String> paths,
+                                                     boolean forceClean,
+                                                     boolean includeDependenciesToScope) throws Exception {
     Set<BuildTargetType<?>> targetTypes = new HashSet<>();
     Set<BuildTargetType<?>> targetTypesToForceBuild = new HashSet<>();
     Set<BuildTarget<?>> targets = new HashSet<>();
@@ -198,7 +207,7 @@ public final class BuildRunner {
         targetTypes.add(targetType);
       }
       else {
-        BuildTargetLoader<?> loader = targetType.createLoader(pd.getModel());
+        BuildTargetLoader<?> loader = targetType.createLoader(projectDescriptor.getModel());
         for (String targetId : scope.getTargetIdList()) {
           BuildTarget<?> target = loader.createTarget(targetId);
           if (target != null) {
@@ -211,11 +220,13 @@ public final class BuildRunner {
       }
     }
     if (includeDependenciesToScope) {
-      includeDependenciesToScope(targetTypes, targets, targetTypesToForceBuild, pd);
+      includeDependenciesToScope(targetTypes, targets, targetTypesToForceBuild, projectDescriptor);
     }
 
-    final StampsStorage<? extends StampsStorage.Stamp> stampsStorage = pd.getProjectStamps().getStampStorage();
-    if (!paths.isEmpty()) {
+    if (paths.isEmpty()) {
+      files = Collections.emptyMap();
+    }
+    else {
       boolean forceBuildAllModuleBasedTargets = false;
       for (BuildTargetType<?> type : targetTypesToForceBuild) {
         if (type instanceof JavaModuleBuildTargetType) {
@@ -226,7 +237,7 @@ public final class BuildRunner {
       files = new HashMap<>();
       for (String path : paths) {
         final File file = new File(path);
-        final Collection<BuildRootDescriptor> descriptors = pd.getBuildRootIndex().findAllParentDescriptors(file, null);
+        final Collection<BuildRootDescriptor> descriptors = projectDescriptor.getBuildRootIndex().findAllParentDescriptors(file, null);
         for (BuildRootDescriptor descriptor : descriptors) {
           Set<File> fileSet = files.get(descriptor.getTarget());
           if (fileSet == null) {
@@ -237,26 +248,25 @@ public final class BuildRunner {
           if (added) {
             final BuildTargetType<?> targetType = descriptor.getTarget().getTargetType();
             if (targetTypesToForceBuild.contains(targetType) || (forceBuildAllModuleBasedTargets && targetType instanceof ModuleBasedBuildTargetType)) {
-              pd.fsState.markDirty(null, file, descriptor, stampsStorage, false);
+              StampsStorage<?> stampStorage = projectDescriptor.dataManager.getFileStampStorage(descriptor.getTarget());
+              projectDescriptor.fsState.markDirty(null, file, descriptor, stampStorage, false);
             }
           }
         }
       }
     }
-    else {
-      files = Collections.emptyMap();
-    }
-
     return new CompileScopeImpl(targetTypes, targetTypesToForceBuild, targets, files);
   }
 
-  private static void includeDependenciesToScope(Set<? extends BuildTargetType<?>> targetTypes, Set<BuildTarget<?>> targets,
-                                                 Set<? super BuildTargetType<?>> targetTypesToForceBuild, ProjectDescriptor descriptor) {
-    //todo[nik] get rid of CompileContext parameter for BuildTargetIndex.getDependencies() and use it here
+  private static void includeDependenciesToScope(Set<? extends BuildTargetType<?>> targetTypes,
+                                                 Set<BuildTarget<?>> targets,
+                                                 Set<? super BuildTargetType<?>> targetTypesToForceBuild,
+                                                 ProjectDescriptor descriptor) {
+    //todo get rid of CompileContext parameter for BuildTargetIndex.getDependencies() and use it here
     TargetOutputIndex dummyIndex = new TargetOutputIndex() {
       @Override
       public Collection<BuildTarget<?>> getTargetsByOutputFile(@NotNull File file) {
-        return Collections.emptyList();
+        return List.of();
       }
     };
 
@@ -279,10 +289,15 @@ public final class BuildRunner {
   }
 
   public static boolean isParallelBuildEnabled() {
-    return SystemProperties.getBooleanProperty(GlobalOptions.COMPILE_PARALLEL_OPTION, false);
+    return Boolean.parseBoolean(System.getProperty(GlobalOptions.COMPILE_PARALLEL_OPTION));
   }
 
   public static boolean isParallelBuildAutomakeEnabled() {
-    return isParallelBuildEnabled() && SystemProperties.getBooleanProperty(GlobalOptions.ALLOW_PARALLEL_AUTOMAKE_OPTION, true);
+    if (!isParallelBuildEnabled()) {
+      return false;
+    }
+
+    String value = System.getProperty(GlobalOptions.ALLOW_PARALLEL_AUTOMAKE_OPTION);
+    return value == null || Boolean.parseBoolean(value);
   }
 }
