@@ -1,4 +1,4 @@
-// Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.jps.incremental;
 
 import com.intellij.openapi.diagnostic.Logger;
@@ -7,7 +7,9 @@ import com.intellij.openapi.util.io.FileUtilRt;
 import com.intellij.util.containers.CollectionFactory;
 import it.unimi.dsi.fastutil.objects.Object2LongMap;
 import it.unimi.dsi.fastutil.objects.Object2LongOpenHashMap;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Unmodifiable;
 import org.jetbrains.jps.builders.BuildTargetType;
 import org.jetbrains.jps.builders.java.JavaModuleBuildTargetType;
 import org.jetbrains.jps.service.JpsServiceManager;
@@ -23,10 +25,11 @@ public final class BuilderRegistry {
   private static final class Holder {
     static final BuilderRegistry ourInstance = new BuilderRegistry();
   }
-  private final Map<BuilderCategory, List<ModuleLevelBuilder>> myModuleLevelBuilders = new HashMap<>();
-  private final Object2LongMap<BuildTargetType<?>> myExpectedBuildTime = new Object2LongOpenHashMap<>();
-  private final List<TargetBuilder<?,?>> myTargetBuilders = new ArrayList<>();
-  private final FileFilter myModuleBuilderFileFilter;
+  private final Map<BuilderCategory, List<ModuleLevelBuilder>> moduleLevelBuilders = new HashMap<>();
+  private final List<JvmClassFileInstrumenter> myClassFileInstrumenters = new ArrayList<>();
+  private final Object2LongMap<BuildTargetType<?>> expectedBuildTime = new Object2LongOpenHashMap<>();
+  private final List<TargetBuilder<?,?>> targetBuilders = new ArrayList<>();
+  private final FileFilter moduleBuilderFileFilter;
 
   public static @NotNull BuilderRegistry getInstance() {
     return Holder.ourInstance;
@@ -34,14 +37,13 @@ public final class BuilderRegistry {
 
   private BuilderRegistry() {
     for (BuilderCategory category : BuilderCategory.values()) {
-      myModuleLevelBuilders.put(category, new ArrayList<>());
+      moduleLevelBuilders.put(category, new ArrayList<>());
     }
 
     Set<String> compilableFileExtensions = CollectionFactory.createFilePathSet();
     for (BuilderService service : JpsServiceManager.getInstance().getExtensions(BuilderService.class)) {
-      myTargetBuilders.addAll(service.createBuilders());
-      final List<? extends ModuleLevelBuilder> moduleLevelBuilders = service.createModuleLevelBuilders();
-      for (ModuleLevelBuilder builder : moduleLevelBuilders) {
+      targetBuilders.addAll(service.createBuilders());
+      for (ModuleLevelBuilder builder : service.createModuleLevelBuilders()) {
         try {
           List<String> extensions = builder.getCompilableFileExtensions();
           if (compilableFileExtensions != null) {
@@ -52,35 +54,40 @@ public final class BuilderRegistry {
           LOG.info(builder.getClass().getName() + " builder doesn't implement 'getCompilableFileExtensions' method so ModuleBuildTarget will process all files under source roots.");
           compilableFileExtensions = null;
         }
-        myModuleLevelBuilders.get(builder.getCategory()).add(builder);
+        moduleLevelBuilders.get(builder.getCategory()).add(builder);
+        if (builder instanceof JvmClassFileInstrumenter) {
+          myClassFileInstrumenters.add((JvmClassFileInstrumenter)builder);
+        }
       }
     }
+    Collections.sort(myClassFileInstrumenters, Comparator.comparing(JvmClassFileInstrumenter::getId));
+    
     if (compilableFileExtensions == null) {
-      myModuleBuilderFileFilter = FileFilters.EVERYTHING;
+      moduleBuilderFileFilter = FileFilters.EVERYTHING;
     }
     else {
-      final Set<String> finalCompilableFileExtensions = compilableFileExtensions;
-      myModuleBuilderFileFilter = file -> finalCompilableFileExtensions.contains(FileUtilRt.getExtension(file.getName()));
+      Set<String> finalCompilableFileExtensions = compilableFileExtensions;
+      moduleBuilderFileFilter = file -> finalCompilableFileExtensions.contains(FileUtilRt.getExtension(file.getName()));
     }
 
     long moduleTargetBuildTime = 0;
     for (ModuleLevelBuilder builder : getModuleLevelBuilders()) {
       moduleTargetBuildTime += builder.getExpectedBuildTime();
     }
-    myExpectedBuildTime.put(JavaModuleBuildTargetType.PRODUCTION, moduleTargetBuildTime);
-    myExpectedBuildTime.put(JavaModuleBuildTargetType.TEST, moduleTargetBuildTime);
+    expectedBuildTime.put(JavaModuleBuildTargetType.PRODUCTION, moduleTargetBuildTime);
+    expectedBuildTime.put(JavaModuleBuildTargetType.TEST, moduleTargetBuildTime);
 
-    for (TargetBuilder<?, ?> targetBuilder : myTargetBuilders) {
+    for (TargetBuilder<?, ?> targetBuilder : targetBuilders) {
       long buildTime = targetBuilder.getExpectedBuildTime();
       for (BuildTargetType<?> type : targetBuilder.getTargetTypes()) {
-        long total = myExpectedBuildTime.getLong(type);
-        myExpectedBuildTime.put(type, total + buildTime);
+        long total = expectedBuildTime.getLong(type);
+        expectedBuildTime.put(type, total + buildTime);
       }
     }
   }
 
   public @NotNull FileFilter getModuleBuilderFileFilter() {
-    return myModuleBuilderFileFilter;
+    return moduleBuilderFileFilter;
   }
 
   public int getModuleLevelBuilderCount() {
@@ -91,19 +98,27 @@ public final class BuilderRegistry {
     return count;
   }
 
-  public List<BuildTask> getBeforeTasks(){
-    return Collections.emptyList(); // todo
+  /**
+   * Returns the list of all available class-file instrumenters in the sorted order. 
+   */
+  @ApiStatus.Internal
+  public @NotNull List<JvmClassFileInstrumenter> getClassFileInstrumenters() {
+    return myClassFileInstrumenters;
   }
 
-  public List<BuildTask> getAfterTasks(){
-    return Collections.emptyList(); // todo
+  public @NotNull @Unmodifiable List<BuildTask> getBeforeTasks(){
+    return List.of(); // todo
   }
 
-  public List<ModuleLevelBuilder> getBuilders(BuilderCategory category){
-    return Collections.unmodifiableList(myModuleLevelBuilders.get(category));
+  public @NotNull @Unmodifiable List<BuildTask> getAfterTasks(){
+    return List.of(); // todo
   }
 
-  public List<ModuleLevelBuilder> getModuleLevelBuilders() {
+  public @NotNull @Unmodifiable List<ModuleLevelBuilder> getBuilders(BuilderCategory category){
+    return Collections.unmodifiableList(moduleLevelBuilders.get(category));
+  }
+
+  public @NotNull @Unmodifiable List<ModuleLevelBuilder> getModuleLevelBuilders() {
     List<ModuleLevelBuilder> result = new ArrayList<>();
     for (BuilderCategory category : BuilderCategory.values()) {
       result.addAll(getBuilders(category));
@@ -111,8 +126,8 @@ public final class BuilderRegistry {
     return result;
   }
 
-  public List<TargetBuilder<?,?>> getTargetBuilders() {
-    return myTargetBuilders;
+  public @NotNull @Unmodifiable List<TargetBuilder<?,?>> getTargetBuilders() {
+    return targetBuilders;
   }
 
   /**
@@ -120,7 +135,7 @@ public final class BuilderRegistry {
    * @see Builder#getExpectedBuildTime()
    */
   public long getExpectedBuildTimeForTarget(BuildTargetType<?> targetType) {
-    //it may happen that there is no builders registered for a given type, so it won't be built at all.
-    return myExpectedBuildTime.getLong(targetType);
+    // it may happen that there are no builders registered for a given type, so it won't be built at all
+    return expectedBuildTime.getLong(targetType);
   }
 }
