@@ -1,13 +1,13 @@
-// Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.jps.incremental.artifacts;
 
 import com.intellij.openapi.diagnostic.Logger;
-import com.intellij.openapi.util.io.FileUtil;
-import com.intellij.openapi.util.text.StringUtil;
+import com.intellij.openapi.util.io.FileUtilRt;
+import com.intellij.openapi.util.text.Strings;
 import com.intellij.util.containers.CollectionFactory;
 import com.intellij.util.containers.MultiMap;
-import it.unimi.dsi.fastutil.ints.Int2ObjectMap;
 import it.unimi.dsi.fastutil.ints.Int2ObjectOpenHashMap;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.jps.builders.BuildOutputConsumer;
@@ -33,28 +33,29 @@ import java.io.File;
 import java.io.IOException;
 import java.util.*;
 
-public class IncArtifactBuilder extends TargetBuilder<ArtifactRootDescriptor, ArtifactBuildTarget> {
+@ApiStatus.Internal
+public final class IncArtifactBuilder extends TargetBuilder<ArtifactRootDescriptor, ArtifactBuildTarget> {
   private static final Logger LOG = Logger.getInstance(IncArtifactBuilder.class);
   public static final String BUILDER_ID = "artifacts-builder";
 
   public IncArtifactBuilder() {
-    super(Collections.singletonList(ArtifactBuildTargetType.INSTANCE));
+    super(List.of(ArtifactBuildTargetType.INSTANCE));
   }
 
   @Override
   public void build(@NotNull ArtifactBuildTarget target,
                     @NotNull DirtyFilesHolder<ArtifactRootDescriptor, ArtifactBuildTarget> holder,
-                    @NotNull BuildOutputConsumer outputConsumer, @NotNull final CompileContext context) throws ProjectBuildException {
+                    @NotNull BuildOutputConsumer outputConsumer, final @NotNull CompileContext context) throws ProjectBuildException {
     try {
       new IncArtifactBuilderHelper(target, outputConsumer, context).build(holder);
-    } catch (IOException e) {
+    }
+    catch (IOException e) {
       throw new ProjectBuildException(e);
     }
   }
 
-  @NotNull
   @Override
-  public String getPresentableName() {
+  public @NotNull String getPresentableName() {
     return getBuilderName();
   }
 
@@ -62,7 +63,7 @@ public class IncArtifactBuilder extends TargetBuilder<ArtifactRootDescriptor, Ar
     return JpsBuildBundle.message("builder.name.artifacts.builder");
   }
 
-  private static class IncArtifactBuilderHelper {
+  private static final class IncArtifactBuilderHelper {
     private final @NotNull ArtifactBuildTarget target;
     private final @NotNull JpsArtifact artifact;
     private final @NotNull BuildOutputConsumer outputConsumer;
@@ -70,7 +71,8 @@ public class IncArtifactBuilder extends TargetBuilder<ArtifactRootDescriptor, Ar
     private final ProjectDescriptor pd;
     private final ArtifactOutputToSourceMapping outSrcMapping;
 
-    private final Int2ObjectMap<Set<String>> filesToProcess = new Int2ObjectOpenHashMap<>();
+    @SuppressWarnings("SSBasedInspection")
+    private final Int2ObjectOpenHashMap<Set<String>> filesToProcess = new Int2ObjectOpenHashMap<>();
     private final Set<JarInfo> changedJars = new HashSet<>();
 
     private IncArtifactBuilderHelper(@NotNull ArtifactBuildTarget target,
@@ -103,7 +105,7 @@ public class IncArtifactBuilder extends TargetBuilder<ArtifactRootDescriptor, Ar
 
     private boolean startBuild() {
       String outputFilePath = artifact.getOutputFilePath();
-      if (StringUtil.isEmpty(outputFilePath)) {
+      if (Strings.isEmpty(outputFilePath)) {
         context.processMessage(new CompilerMessage(getBuilderName(), BuildMessage.Kind.ERROR,
                                                    JpsBuildBundle.message("build.message.cannot.build.0.artifact.output.path.is.not.specified", artifact.getName())));
         return false;
@@ -153,7 +155,7 @@ public class IncArtifactBuilder extends TargetBuilder<ArtifactRootDescriptor, Ar
         @Override
         public boolean apply(@NotNull ArtifactBuildTarget target, @NotNull File file, @NotNull ArtifactRootDescriptor root) throws IOException {
           int rootIndex = root.getRootIndex();
-          String sourcePath = FileUtil.toSystemIndependentName(file.getPath());
+          String sourcePath = FileUtilRt.toSystemIndependentName(file.getPath());
           addFileToProcess(rootIndex, sourcePath, deletedFiles);
           final Collection<String> outputPaths = srcOutMapping.getOutputs(sourcePath);
           if (outputPaths != null) {
@@ -237,7 +239,7 @@ public class IncArtifactBuilder extends TargetBuilder<ArtifactRootDescriptor, Ar
           }
           else {
             List<ArtifactOutputToSourceMapping.SourcePathAndRootIndex> sources = outSrcMapping.getState(destination.getOutputFilePath());
-            if (sources == null || sources.size() > 0 && sources.get(0).getRootIndex() == descriptor.getRootIndex()) {
+            if (sources == null || !sources.isEmpty() && sources.get(0).getRootIndex() == descriptor.getRootIndex()) {
               outSrcMapping.update(destination.getOutputFilePath(), Collections.emptyList());
               changedJars.add(((JarDestinationInfo)destination).getJarInfo());
             }
@@ -319,7 +321,7 @@ public class IncArtifactBuilder extends TargetBuilder<ArtifactRootDescriptor, Ar
 
         boolean deleted = deletedPaths.contains(filePath);
         if (!deleted) {
-          deleted = FileUtil.delete(new File(filePath));
+          deleted = FileUtilRt.delete(new File(filePath));
         }
 
         if (deleted) {
