@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.jps.incremental.dependencies;
 
 import org.jetbrains.annotations.NotNull;
@@ -13,7 +13,6 @@ import org.jetbrains.jps.indices.IgnoredFileIndex;
 import org.jetbrains.jps.indices.ModuleExcludeIndex;
 import org.jetbrains.jps.model.JpsModel;
 
-import java.io.File;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -38,21 +37,19 @@ public final class ProjectDependenciesResolver extends TargetBuilder<BuildRootDe
                     @NotNull CompileContext context) {
     context.processMessage(new ProgressMessage(JpsBuildBundle.message("progress.message.resolving.repository.libraries.in.the.project")));
     try {
-      DependencyResolvingBuilder.resolveMissingDependencies(context, context.getProjectDescriptor().getProject().getModules(),
-                                                            BuildTargetChunk.forSingleTarget(target));
+      DependencyResolvingBuilder.resolveAllMissingDependenciesInProject(context, BuildTargetChunk.forSingleTarget(target));
     }
     catch (Exception e) {
       DependencyResolvingBuilder.reportError(context, "project", e);
     }
   }
 
-  @NotNull
   @Override
-  public String getPresentableName() {
+  public @NotNull String getPresentableName() {
     return JpsBuildBundle.message("builder.name.project.dependencies.resolver");
   }
 
-  public static class ProjectDependenciesResolvingTarget extends BuildTarget<BuildRootDescriptor> {
+  public static final class ProjectDependenciesResolvingTarget extends BuildTarget<BuildRootDescriptor> {
     public ProjectDependenciesResolvingTarget() {
       super(ProjectDependenciesResolvingTargetType.INSTANCE);
     }
@@ -67,51 +64,40 @@ public final class ProjectDependenciesResolver extends TargetBuilder<BuildRootDe
       return Collections.emptyList();
     }
 
-    @NotNull
     @Override
-    public List<BuildRootDescriptor> computeRootDescriptors(@NotNull JpsModel model,
-                                                            @NotNull ModuleExcludeIndex index,
-                                                            @NotNull IgnoredFileIndex ignoredFileIndex,
-                                                            @NotNull BuildDataPaths dataPaths) {
+    public @NotNull List<BuildRootDescriptor> computeRootDescriptors(@NotNull JpsModel model,
+                                                                     @NotNull ModuleExcludeIndex index,
+                                                                     @NotNull IgnoredFileIndex ignoredFileIndex,
+                                                                     @NotNull BuildDataPaths dataPaths) {
       return Collections.emptyList();
     }
 
-    @Nullable
     @Override
-    public BuildRootDescriptor findRootDescriptor(@NotNull String rootId, @NotNull BuildRootIndex rootIndex) {
+    public @Nullable BuildRootDescriptor findRootDescriptor(@NotNull String rootId, @NotNull BuildRootIndex rootIndex) {
       return null;
     }
 
-    @NotNull
     @Override
-    public String getPresentableName() {
+    public @NotNull String getPresentableName() {
       return "Project Dependencies Resolving";
-    }
-
-    @NotNull
-    @Override
-    public Collection<File> getOutputRoots(@NotNull CompileContext context) {
-      return Collections.emptyList();
     }
   }
 
-  public static class ProjectDependenciesResolvingTargetType extends BuildTargetType<ProjectDependenciesResolvingTarget> {
+  public static final class ProjectDependenciesResolvingTargetType extends BuildTargetType<ProjectDependenciesResolvingTarget> {
     public static final ProjectDependenciesResolvingTargetType INSTANCE = new ProjectDependenciesResolvingTargetType();
 
     public ProjectDependenciesResolvingTargetType() {
       super(TARGET_TYPE_ID);
     }
 
-    @NotNull
     @Override
-    public List<ProjectDependenciesResolvingTarget> computeAllTargets(@NotNull JpsModel model) {
-      return Collections.singletonList(new ProjectDependenciesResolvingTarget());
+    public @NotNull List<ProjectDependenciesResolvingTarget> computeAllTargets(@NotNull JpsModel model) {
+      return List.of(new ProjectDependenciesResolvingTarget());
     }
 
-    @NotNull
     @Override
-    public BuildTargetLoader<ProjectDependenciesResolvingTarget> createLoader(@NotNull JpsModel model) {
-      return new BuildTargetLoader<ProjectDependenciesResolvingTarget>() {
+    public @NotNull BuildTargetLoader<ProjectDependenciesResolvingTarget> createLoader(@NotNull JpsModel model) {
+      return new BuildTargetLoader<>() {
         @Override
         public ProjectDependenciesResolvingTarget createTarget(@NotNull String targetId) {
           return new ProjectDependenciesResolvingTarget();
