@@ -1,12 +1,13 @@
-// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.jps.model.java.impl;
 
 import com.intellij.openapi.diagnostic.Logger;
-import com.intellij.openapi.util.SystemInfo;
+import com.intellij.openapi.util.SystemInfoRt;
 import com.intellij.openapi.vfs.CharsetToolkit;
 import com.intellij.util.io.BaseOutputReader;
 import com.intellij.util.lang.JavaVersion;
 import com.intellij.util.system.CpuArch;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.jps.model.java.JdkVersionDetector;
@@ -15,8 +16,8 @@ import org.jetbrains.jps.service.SharedThreadPool;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
+import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Properties;
 import java.util.concurrent.CopyOnWriteArrayList;
@@ -26,6 +27,7 @@ import java.util.jar.Attributes;
 import java.util.jar.JarFile;
 import java.util.jar.Manifest;
 
+@ApiStatus.Internal
 public class JdkVersionDetectorImpl extends JdkVersionDetector {
   private static final Logger LOG = Logger.getInstance(JdkVersionDetectorImpl.class);
 
@@ -49,37 +51,46 @@ public class JdkVersionDetectorImpl extends JdkVersionDetector {
   }
 
   private static @Nullable JdkVersionInfo detectFromRelease(String homePath) {
-    Path releaseFile = Paths.get(homePath, "release");
-    if (Files.isRegularFile(releaseFile)) {
-      Properties p = new Properties();
-      try (InputStream stream = Files.newInputStream(releaseFile)) {
-        p.load(stream);
-        String versionString = p.getProperty("JAVA_FULL_VERSION", p.getProperty("JAVA_VERSION"));
-        if (versionString != null) {
-          JavaVersion version = JavaVersion.parse(versionString);
+    final Path releaseFile;
+    try {
+      releaseFile = Path.of(homePath, "release");
+    }
+    catch (InvalidPathException ignored) {
+      return null;
+    }
 
-          Variant variant = detectVariant(p);
-          if (variant == null && version.feature < 9) {
-            // pre-modular release files rarely contain enough information
-            JdkVersionInfo fromJar = detectFromJar(homePath);
-            if (fromJar != null) variant = fromJar.variant;
-          }
+    if (!Files.isRegularFile(releaseFile)) {
+      return null;
+    }
 
-          CpuArch arch = CpuArch.fromString(unquoteProperty(p, "OS_ARCH"));
+    Properties p = new Properties();
+    try (InputStream stream = Files.newInputStream(releaseFile)) {
+      p.load(stream);
+      String versionString = p.getProperty("JAVA_FULL_VERSION", p.getProperty("JAVA_VERSION"));
+      if (versionString != null) {
+        JavaVersion version = JavaVersion.parse(versionString);
 
-          return new JdkVersionInfo(version, variant, arch);
+        Variant variant = detectVariant(p);
+        if (variant == null && version.feature < 9) {
+          // pre-modular release files rarely contain enough information
+          JdkVersionInfo fromJar = detectFromJar(homePath);
+          if (fromJar != null) variant = fromJar.variant;
         }
+
+        CpuArch arch = CpuArch.fromString(unquoteProperty(p, "OS_ARCH"));
+
+        return new JdkVersionInfo(version, variant, arch, unquoteProperty(p, "GRAALVM_VERSION"));
       }
-      catch (IOException | IllegalArgumentException e) {
-        LOG.info(releaseFile.toString(), e);
-      }
+    }
+    catch (IOException | IllegalArgumentException e) {
+      LOG.info(releaseFile.toString(), e);
     }
 
     return null;
   }
 
   private static @Nullable JdkVersionInfo detectFromJar(String homePath) {
-    Path rtFile = Paths.get(homePath, "jre/lib/rt.jar");
+    Path rtFile = Path.of(homePath, "jre/lib/rt.jar");
     if (Files.isRegularFile(rtFile)) {
       try (JarFile rtJar = new JarFile(rtFile.toFile(), false)) {
         Manifest manifest = rtJar.getManifest();
@@ -87,10 +98,10 @@ public class JdkVersionDetectorImpl extends JdkVersionDetector {
           String versionString = manifest.getMainAttributes().getValue(Attributes.Name.IMPLEMENTATION_VERSION);
           if (versionString != null) {
             JavaVersion version = JavaVersion.parse(versionString);
-            boolean x64 = SystemInfo.isMac || Files.isDirectory(rtFile.resolveSibling("amd64"));
+            boolean x64 = SystemInfoRt.isMac || Files.isDirectory(rtFile.resolveSibling("amd64"));
             String vendorString = manifest.getMainAttributes().getValue(Attributes.Name.IMPLEMENTATION_VENDOR);
             Variant variant = vendorString != null ? detectVendor(vendorString) : null;
-            return new JdkVersionInfo(version, variant, x64 ? CpuArch.X86_64 : CpuArch.UNKNOWN);
+            return new JdkVersionInfo(version, variant, x64 ? CpuArch.X86_64 : CpuArch.UNKNOWN, null);
           }
         }
       }
@@ -103,7 +114,7 @@ public class JdkVersionDetectorImpl extends JdkVersionDetector {
   }
 
   private static @Nullable JdkVersionInfo detectFromOutput(String homePath, ExecutorService runner) {
-    Path javaExe = Paths.get(homePath, "bin/" + (SystemInfo.isWindows ? "java.exe" : "java"));
+    Path javaExe = Path.of(homePath, "bin/" + (SystemInfoRt.isWindows ? "java.exe" : "java"));
     if (Files.isExecutable(javaExe)) {
       try {
         Process process = new ProcessBuilder(javaExe.toString(), "-version").redirectErrorStream(true).start();
@@ -124,7 +135,7 @@ public class JdkVersionDetectorImpl extends JdkVersionDetector {
           JavaVersion base = JavaVersion.parse(lines.get(0));
           JavaVersion rt = JavaVersion.tryParse(lines.size() > 2 ? lines.get(1) : null);
           JavaVersion version = rt != null && rt.feature == base.feature && rt.minor == base.minor ? rt : base;
-          return new JdkVersionInfo(version, null, CpuArch.UNKNOWN);
+          return new JdkVersionInfo(version, null, CpuArch.UNKNOWN, null);
         }
       }
       catch (IOException | IllegalArgumentException e) {
@@ -153,6 +164,7 @@ public class JdkVersionDetectorImpl extends JdkVersionDetector {
       if (implementorVersion.startsWith("JBR-")) return Variant.JBR;
       if (implementorVersion.startsWith("SapMachine")) return Variant.SapMachine;
       if (implementorVersion.startsWith("Zulu")) return Variant.Zulu;
+      if (implementorVersion.startsWith("Homebrew")) return Variant.Homebrew;
     }
 
     String implementor = unquoteProperty(p, "IMPLEMENTOR");
@@ -161,7 +173,12 @@ public class JdkVersionDetectorImpl extends JdkVersionDetector {
         String variant = unquoteProperty(p, "JVM_VARIANT");
         return "OpenJ9".equalsIgnoreCase(variant) ? Variant.AdoptOpenJdk_J9 : Variant.AdoptOpenJdk_HS;
       }
-      if (implementor.startsWith("GraalVM")) return Variant.GraalVM;
+
+      if (p.getProperty("GRAALVM_VERSION") != null) {
+        if (implementor.startsWith("GraalVM")) return Variant.GraalVMCE;
+        return Variant.GraalVM;
+      }
+
       return detectVendor(implementor);
     }
 
@@ -171,15 +188,19 @@ public class JdkVersionDetectorImpl extends JdkVersionDetector {
   }
 
   private static @Nullable Variant detectVendor(String implementor) {
+    if (implementor.startsWith("Alibaba")) return Variant.Dragonwell;
     if (implementor.startsWith("Amazon")) return Variant.Corretto;
     if (implementor.startsWith("Azul")) return Variant.Zulu;
     if (implementor.startsWith("BellSoft")) return Variant.Liberica;
+    if (implementor.startsWith("BiSheng")) return Variant.BiSheng;
     if (implementor.startsWith("Eclipse")) return Variant.Temurin;
     if (implementor.startsWith("IBM")) return Variant.IBM;
     if (implementor.startsWith("International Business")) return Variant.Semeru;
     if (implementor.startsWith("JetBrains")) return Variant.JBR;
+    if (implementor.startsWith("Microsoft")) return Variant.Microsoft;
     if (implementor.startsWith("Oracle")) return Variant.Oracle;
     if (implementor.startsWith("SAP")) return Variant.SapMachine;
+    if (implementor.startsWith("Tencent")) return Variant.Kona;
     return null;
   }
 
