@@ -1,10 +1,11 @@
-// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.find.actions;
 
 import com.intellij.ide.util.gotoByName.ModelDiff;
-import com.intellij.internal.statistic.eventLog.events.EventPair;
-import com.intellij.openapi.actionSystem.*;
-import com.intellij.openapi.application.ApplicationManager;
+import com.intellij.openapi.actionSystem.CommonDataKeys;
+import com.intellij.openapi.actionSystem.DataSink;
+import com.intellij.openapi.actionSystem.LangDataKeys;
+import com.intellij.openapi.actionSystem.UiDataProvider;
 import com.intellij.openapi.application.ReadAction;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.popup.util.PopupUtil;
@@ -21,12 +22,14 @@ import com.intellij.usages.UsageToPsiElementProvider;
 import com.intellij.usages.UsageView;
 import com.intellij.usages.impl.*;
 import com.intellij.util.concurrency.AppExecutorUtil;
+import com.intellij.util.concurrency.ThreadingAssertions;
 import com.intellij.util.containers.ContainerUtil;
+import com.intellij.util.containers.SmartHashSet;
 import com.intellij.util.ui.ColumnInfo;
 import com.intellij.util.ui.JBUI;
 import com.intellij.util.ui.ListTableModel;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.Contract;
-import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -39,17 +42,21 @@ import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
+import java.util.function.Supplier;
 
-public class ShowUsagesTable extends JBTable implements DataProvider {
+@ApiStatus.Internal
+public final class ShowUsagesTable extends JBTable implements UiDataProvider {
   final Usage MORE_USAGES_SEPARATOR = new UsageAdapter();
   final Usage USAGES_OUTSIDE_SCOPE_SEPARATOR = new UsageAdapter();
   final Usage USAGES_FILTERED_OUT_SEPARATOR = new UsageAdapter();
 
-  private final ShowUsagesTableCellRenderer myRenderer;
-  private final UsageView myUsageView;
+  static final int MAX_COLUMN_WIDTH = 500;
+  static final int MIN_COLUMN_WIDTH = 200;
 
-  ShowUsagesTable(@NotNull ShowUsagesTableCellRenderer renderer, UsageView usageView) {
+  private final ShowUsagesTableCellRenderer myRenderer;
+  private final UsageViewImpl myUsageView;
+
+  ShowUsagesTable(@NotNull ShowUsagesTableCellRenderer renderer, UsageViewImpl usageView) {
     myRenderer = renderer;
     myUsageView = usageView;
     ScrollingUtil.installActions(this);
@@ -62,25 +69,16 @@ public class ShowUsagesTable extends JBTable implements DataProvider {
   }
 
   @Override
-  public Object getData(@NotNull @NonNls String dataId) {
-    if (LangDataKeys.POSITION_ADJUSTER_POPUP.is(dataId)) {
-      return PopupUtil.getPopupContainerFor(this);
-    }
-    if (PlatformCoreDataKeys.BGT_DATA_PROVIDER.is(dataId)) {
-      List<Object> selection = Arrays.stream(getSelectedRows())
-        .mapToObj(o -> getValueAt(o, 0))
-        .collect(Collectors.toList());
-      return (DataProvider)slowId -> getSlowData(slowId, selection);
-    }
-    return null;
-  }
-
-  private static @Nullable Object getSlowData(@NotNull String dataId, @NotNull List<Object> selection) {
-    if (CommonDataKeys.PSI_ELEMENT.is(dataId)) {
+  public void uiDataSnapshot(@NotNull DataSink sink) {
+    sink.set(LangDataKeys.POSITION_ADJUSTER_POPUP, PopupUtil.getPopupContainerFor(this));
+    sink.set(UsageView.USAGE_VIEW_KEY, myUsageView);
+    List<Object> selection = Arrays.stream(getSelectedRows())
+      .mapToObj(o -> getValueAt(o, 0))
+      .toList();
+    sink.lazy(CommonDataKeys.PSI_ELEMENT, () -> {
       Object single = ContainerUtil.getOnlyItem(selection);
       return single == null ? null : getPsiElementForHint(single);
-    }
-    return null;
+    });
   }
 
   @Override
@@ -117,6 +115,7 @@ public class ShowUsagesTable extends JBTable implements DataProvider {
       moreUsagesSelected.set(false);
       filteredOutUsagesSelected.set(null);
       java.util.List<Object> usages = null;
+      var nonDisposableUsageInfos = new SmartHashSet<UsageInfo>();
       //todo List<Usage>
       for (int i : getSelectedRows()) {
         Object value = getValueAt(i, 0);
@@ -138,11 +137,25 @@ public class ShowUsagesTable extends JBTable implements DataProvider {
             break;
           }
           if (usages == null) usages = new ArrayList<>();
-          usages.add(usage instanceof UsageInfo2UsageAdapter ? ((UsageInfo2UsageAdapter)usage).getUsageInfo().copy() : usage);
+          if (usage instanceof UsageInfo2UsageAdapter adapter) {
+            var usageInfo = adapter.getUsageInfo();
+            usages.add(usageInfo);
+            nonDisposableUsageInfos.add(usageInfo);
+          }
+          else {
+            usages.add(usage);
+          }
         }
       }
 
       selectedUsages.set(usages);
+      // The callback below is called after the popup is disposed,
+      // and when it happens, it disposes all smart pointers.
+      // This prevents some functionality in navigateTo.
+      // Therefore, we need to preserve the selected usages smart pointers.
+      // According to com.intellij.psi.SmartPointerManager.removePointer,
+      // disposing isn't mandatory so there should be no leaks here.
+      myUsageView.setNonDisposableUsageInfos(nonDisposableUsageInfos);
     });
 
     return () -> {
@@ -196,8 +209,7 @@ public class ShowUsagesTable extends JBTable implements DataProvider {
            || usage == USAGES_FILTERED_OUT_SEPARATOR;
   }
 
-  @Nullable
-  private static PsiElement getPsiElementForHint(Object selectedValue) {
+  private static @Nullable PsiElement getPsiElementForHint(Object selectedValue) {
     if (selectedValue instanceof UsageNode) {
       final Usage usage = ((UsageNode)selectedValue).getUsage();
       if (usage instanceof UsageInfo2UsageAdapter) {
@@ -216,8 +228,8 @@ public class ShowUsagesTable extends JBTable implements DataProvider {
   }
 
   @NotNull
-  MyModel setTableModel(@NotNull final List<UsageNode> data) {
-    ApplicationManager.getApplication().assertIsDispatchThread();
+  MyModel setTableModel(final @NotNull List<UsageNode> data) {
+    ThreadingAssertions.assertEventDispatchThread();
     final int columnCount = calcColumnCount(data);
     MyModel model = getModel() instanceof MyModel ? (MyModel)getModel() : null;
     if (model == null || model.getColumnCount() != columnCount) {
@@ -233,7 +245,7 @@ public class ShowUsagesTable extends JBTable implements DataProvider {
     return model;
   }
 
-  private static class MySpeedSearch extends SpeedSearchBase<JTable> {
+  private static final class MySpeedSearch extends SpeedSearchBase<JTable> {
     private MySpeedSearch(@NotNull ShowUsagesTable table) {
       super(table, null);
     }
@@ -288,15 +300,17 @@ public class ShowUsagesTable extends JBTable implements DataProvider {
 
   static final class MyModel extends ListTableModel<UsageNode> implements ModelDiff.Model<UsageNode> {
 
+    private final CellSizesCache cellSizesCache;
+
     private MyModel(@NotNull List<UsageNode> data, int cols) {
       super(cols(cols), data, 0);
+      cellSizesCache = new CellSizesCache(data.size(), cols);
     }
 
     private static ColumnInfo<UsageNode, UsageNode> @NotNull [] cols(int cols) {
       ColumnInfo<UsageNode, UsageNode> o = new ColumnInfo<>("") {
-        @Nullable
         @Override
-        public UsageNode valueOf(UsageNode node) {
+        public @Nullable UsageNode valueOf(UsageNode node) {
           return node;
         }
       };
@@ -308,9 +322,11 @@ public class ShowUsagesTable extends JBTable implements DataProvider {
     public void addToModel(int idx, UsageNode element) {
       if (idx < getRowCount()) {
         insertRow(idx, element);
+        cellSizesCache.addLine(idx);
       }
       else {
         addRow(element);
+        cellSizesCache.addLine();
       }
     }
 
@@ -318,7 +334,47 @@ public class ShowUsagesTable extends JBTable implements DataProvider {
     public void removeRangeFromModel(int start, int end) {
       for (int i = end; i >= start; i--) {
         removeRow(i);
+        cellSizesCache.removeLine(i);
       }
+    }
+
+    public int getOrCalcCellWidth(int row, int col, Supplier<Integer> supplier) {
+      return cellSizesCache.getOrCalculate(row, col, supplier);
+    }
+  }
+
+  static class CellSizesCache {
+
+    private final List<Integer[]> table;
+    private final int colsNumber;
+
+    private CellSizesCache(int rows, int cols) {
+      colsNumber = cols;
+      table = new ArrayList<>(rows);
+      for (int i = 0; i < rows; i++) {
+        table.add(new Integer[cols]);
+      }
+    }
+
+    void addLine() {
+      table.add(new Integer[colsNumber]);
+    }
+
+    void addLine(int row) {
+      table.add(row, new Integer[colsNumber]);
+    }
+
+    void removeLine(int row) {
+      table.remove(row);
+    }
+
+    int getOrCalculate(int row, int col, Supplier<Integer> supplier) {
+      Integer cached = table.get(row)[col];
+      if (cached != null) return cached;
+
+      Integer newVal = supplier.get();
+      table.get(row)[col] = newVal;
+      return newVal;
     }
   }
 }
