@@ -1,16 +1,21 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.projectRoots.impl;
 
 import com.intellij.execution.configurations.GeneralCommandLine;
 import com.intellij.execution.util.ExecUtil;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.io.File;
+import java.io.IOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.*;
+import java.util.function.Consumer;
+import java.util.stream.Stream;
 
+@ApiStatus.Internal
 public class JavaHomeFinderMac extends JavaHomeFinderBasic {
   public static final String JAVA_HOME_FIND_UTIL = "/usr/libexec/java_home";
 
@@ -28,6 +33,7 @@ public class JavaHomeFinderMac extends JavaHomeFinderBasic {
       roots.forEach(root -> {
         result.addAll(scanAll(root.resolve("System/Library/Java/JavaVirtualMachines"), true));
       });
+      result.addAll(findJavaInstalledByBrew());
       return result;
     });
 
@@ -44,15 +50,14 @@ public class JavaHomeFinderMac extends JavaHomeFinderBasic {
       homePath = ExecUtil.execAndReadLine(new GeneralCommandLine(JAVA_HOME_FIND_UTIL));
     }
     if (homePath != null) {
-      return Paths.get(homePath);
+      return Path.of(homePath);
     }
     return null;
   }
 
-  @NotNull
   @Override
-  protected List<Path> listPossibleJdkHomesFromInstallRoot(@NotNull Path path) {
-    return Arrays.asList(path, path.resolve("/Home"), path.resolve("Contents/Home"));
+  protected @NotNull List<Path> listPossibleJdkHomesFromInstallRoot(@NotNull Path path) {
+    return Arrays.asList(path, path.resolve("Home"), path.resolve("Contents/Home"));
   }
 
   @Override
@@ -77,5 +82,36 @@ public class JavaHomeFinderMac extends JavaHomeFinderBasic {
     }
 
     return result;
+  }
+
+  private static void processSubfolders(@Nullable Path dir, Consumer<? super Path> processor) {
+    if (dir == null || !Files.isDirectory(dir)) { return; }
+    try (Stream<Path> files = Files.list(dir)) {
+      files.forEach(candidate -> {
+        if (Files.isDirectory(candidate)) {
+          processor.accept(candidate);
+        }
+      });
+    } catch (IOException ignore) {}
+  }
+
+  /// Finds directories for JDKs installed by <a href="https://brew.sh/">homebrew</a>.
+  /// Searches in `homebrew/opt/` to return symlinks that are safe after updating the formula.
+  private @NotNull Set<String> findJavaInstalledByBrew() {
+    var found = new HashSet<String>();
+    var paths = List.of("/opt/homebrew/opt/", "/usr/homebrew/opt/");
+    for (String path : paths) {
+      Path parentFolder = getPathInUserHome(path);
+      // JDKs installed by Homebrew can be hidden in `libexec`
+      processSubfolders(parentFolder, formula -> {
+        processSubfolders(formula, subFolder -> {
+          if (subFolder.getFileName().toString().equals("libexec")) {
+            found.addAll(scanAll(subFolder, true));
+          }
+        });
+      });
+    }
+
+    return found;
   }
 }
