@@ -1,35 +1,35 @@
-// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.roots.ui.configuration;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.intellij.openapi.project.ProjectBundle;
 import com.intellij.openapi.projectRoots.Sdk;
 import com.intellij.openapi.ui.ComboBoxPopupState;
 import com.intellij.openapi.util.NlsContexts;
-import com.intellij.util.Producer;
 import com.intellij.util.containers.ContainerUtil;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import javax.swing.*;
 import java.util.List;
+import java.util.Map;
+import java.util.function.Supplier;
 
 import static com.intellij.openapi.roots.ui.configuration.SdkListItem.*;
 
 public final class SdkListModel extends AbstractListModel<SdkListItem> implements ComboBoxPopupState<SdkListItem> {
   private final boolean myIsSearching;
   private final List<SdkListItem> myItems;
-  private final Producer<? extends Sdk> myGetProjectSdk;
-  private final ImmutableMap<SdkListItem, @NlsContexts.Separator String> mySeparators;
+  private final Supplier<? extends Sdk> myGetProjectSdk;
+  private final Map<SdkListItem, @NlsContexts.Separator String> mySeparators;
 
   public static @NotNull SdkListModel emptyModel() {
-    return new SdkListModel(false, ImmutableList.of(), () -> null);
+    return new SdkListModel(false, List.of(), () -> null);
   }
 
   SdkListModel(boolean isSearching,
                @NotNull List<? extends SdkListItem> items,
-               @NotNull Producer<? extends Sdk> getProjectSdk) {
+               @NotNull Supplier<? extends Sdk> getProjectSdk) {
     myIsSearching = isSearching;
     myItems = List.copyOf(items);
     myGetProjectSdk = getProjectSdk;
@@ -38,7 +38,8 @@ public final class SdkListModel extends AbstractListModel<SdkListItem> implement
     boolean mySuggestedSep = false;
     ImmutableMap.Builder<SdkListItem, String> sep = ImmutableMap.builder();
 
-    int lastSepIndex = 0; //putting 0 to avoid first separator
+    // putting 0 to avoid the first separator
+    int lastSepIndex = 0;
     for (int i = 0; i < myItems.size(); i++) {
       SdkListItem it = myItems.get(i);
 
@@ -75,7 +76,7 @@ public final class SdkListModel extends AbstractListModel<SdkListItem> implement
 
   @Nullable
   Sdk resolveProjectSdk() {
-    return myGetProjectSdk.produce();
+    return myGetProjectSdk.get();
   }
 
   @Override
