@@ -1,18 +1,16 @@
-// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.ide.actions;
 
-import com.intellij.diagnostic.LoadingState;
 import com.intellij.execution.ExecutionException;
 import com.intellij.execution.configurations.GeneralCommandLine;
 import com.intellij.execution.process.CapturingProcessHandler;
-import com.intellij.execution.process.ProcessOutput;
 import com.intellij.execution.util.ExecUtil;
 import com.intellij.ide.IdeBundle;
 import com.intellij.notification.Notification;
 import com.intellij.notification.NotificationType;
-import com.intellij.notification.Notifications;
 import com.intellij.openapi.actionSystem.ActionUpdateThread;
 import com.intellij.openapi.actionSystem.AnActionEvent;
+import com.intellij.openapi.actionSystem.remoting.ActionRemoteBehaviorSpecification;
 import com.intellij.openapi.application.ApplicationBundle;
 import com.intellij.openapi.application.ApplicationNamesInfo;
 import com.intellij.openapi.application.PathManager;
@@ -30,29 +28,28 @@ import com.intellij.ui.AppUIUtil;
 import com.intellij.ui.AppUIUtilKt;
 import com.intellij.util.ExceptionUtil;
 import com.intellij.util.Restarter;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import javax.swing.*;
-import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Map;
 
-public final class CreateDesktopEntryAction extends DumbAwareAction {
+@ApiStatus.Internal
+public final class CreateDesktopEntryAction extends DumbAwareAction implements ActionRemoteBehaviorSpecification.Disabled {
   private static final Logger LOG = Logger.getInstance(CreateDesktopEntryAction.class);
 
   public static boolean isAvailable() {
-    return SystemInfo.isXWindow && !ExternalUpdateManager.isRoaming() && SystemInfo.hasXdgOpen();
+    return SystemInfo.isUnix && !SystemInfo.isMac && !ExternalUpdateManager.isCreatingDesktopEntries() && SystemInfo.hasXdgOpen();
   }
 
   @Override
   public void update(@NotNull AnActionEvent event) {
-    boolean enabled = isAvailable();
-    event.getPresentation().setEnabledAndVisible(enabled);
+    event.getPresentation().setEnabledAndVisible(isAvailable());
   }
 
   @Override
@@ -64,23 +61,23 @@ public final class CreateDesktopEntryAction extends DumbAwareAction {
   public void actionPerformed(@NotNull AnActionEvent event) {
     if (!isAvailable()) return;
 
-    Project project = event.getProject();
-    CreateDesktopEntryDialog dialog = new CreateDesktopEntryDialog(project);
+    var project = event.getProject();
+    var dialog = new CreateDesktopEntryDialog(project);
     if (!dialog.showAndGet()) {
       return;
     }
 
-    boolean globalEntry = dialog.myGlobalEntryCheckBox.isSelected();
+    var globalEntry = dialog.myGlobalEntryCheckBox.isSelected();
+    //noinspection UsagesOfObsoleteApi
     new Task.Backgroundable(project, ApplicationBundle.message("desktop.entry.progress")) {
       @Override
       public void run(@NotNull ProgressIndicator indicator) {
         try {
           createDesktopEntry(globalEntry);
 
-          String message = ApplicationBundle.message("desktop.entry.success", ApplicationNamesInfo.getInstance().getProductName());
-          Notifications.Bus.notify(
-            new Notification(Notifications.SYSTEM_MESSAGES_GROUP_ID, IdeBundle.message("notification.title.desktop.entry.created"), message, NotificationType.INFORMATION),
-            getProject());
+          var title = IdeBundle.message("notification.title.desktop.entry.created");
+          var message = ApplicationBundle.message("desktop.entry.success", ApplicationNamesInfo.getInstance().getProductName());
+          new Notification("System Messages", title, message, NotificationType.INFORMATION).notify(getProject());
         }
         catch (Exception e) {
           reportFailure(e, getProject());
@@ -89,28 +86,28 @@ public final class CreateDesktopEntryAction extends DumbAwareAction {
     }.queue();
   }
 
+  public static @NotNull String getDesktopEntryName() {
+    return AppUIUtil.INSTANCE.getFrameClass() + ".desktop";
+  }
+
   public static void createDesktopEntry(boolean globalEntry) throws Exception {
     if (!isAvailable()) return;
 
-    Path entry = null;
+    check();
+    var entry = prepare();
     try {
-      check();
-      entry = prepare();
       install(entry, globalEntry);
     }
     finally {
-      if (entry != null) {
-        Files.delete(entry);
-      }
+      Files.delete(entry);
     }
   }
 
-  public static void reportFailure(@NotNull Exception e, @Nullable final Project project) {
+  private static void reportFailure(Exception e, @Nullable Project project) {
     LOG.warn(e);
-    final String message = ExceptionUtil.getNonEmptyMessage(e, IdeBundle.message("notification.content.internal error"));
-    Notifications.Bus.notify(
-      new Notification(Notifications.SYSTEM_MESSAGES_GROUP_ID, IdeBundle.message("notification.title.desktop.entry.creation.failed"), message, NotificationType.ERROR),
-      project);
+    var title = IdeBundle.message("notification.title.desktop.entry.creation.failed");
+    var message = ExceptionUtil.getNonEmptyMessage(e, IdeBundle.message("notification.content.internal error"));
+    new Notification("System Messages", title, message, NotificationType.ERROR).notify(project);
   }
 
   private static void check() throws ExecutionException, InterruptedException {
@@ -119,35 +116,31 @@ public final class CreateDesktopEntryAction extends DumbAwareAction {
   }
 
   private static Path prepare() throws IOException {
-    String binPath = PathManager.getBinPath();
-    assert new File(binPath).isDirectory() : "Invalid bin path: '" + binPath + "'";
+    var binPath = PathManager.getBinPath();
+    assert Files.isDirectory(Path.of(binPath)) : "Invalid bin path: '" + binPath + "'";
 
-    String iconPath = AppUIUtilKt.findAppIcon();
-    if (iconPath == null) {
-      throw new RuntimeException(ApplicationBundle.message("desktop.entry.icon.missing", binPath));
-    }
+    var iconPath = AppUIUtilKt.findAppIcon();
+    if (iconPath == null) throw new RuntimeException(ApplicationBundle.message("desktop.entry.icon.missing", binPath));
 
-    Path starter = Restarter.getIdeStarter();
-    if (starter == null) {
-      throw new RuntimeException(ApplicationBundle.message("desktop.entry.script.missing", binPath));
-    }
-    String execPath = StringUtil.wrapWithDoubleQuote(starter.toString());
+    var starter = Restarter.getIdeStarter();
+    if (starter == null) throw new RuntimeException(ApplicationBundle.message("desktop.entry.script.missing", binPath));
 
-    ApplicationNamesInfo names = ApplicationNamesInfo.getInstance();
-
-    String name = names.getFullProductNameWithEdition();
-    String comment = StringUtil.notNullize(names.getMotto(), name);
-    String wmClass = AppUIUtil.getFrameClass();
-    Map<String, String> vars = Map.of("$NAME$", name, "$SCRIPT$", execPath, "$ICON$", iconPath, "$COMMENT$", comment, "$WM_CLASS$", wmClass);
-    String content = ExecUtil.loadTemplate(CreateDesktopEntryAction.class.getClassLoader(), "entry.desktop", vars);
-    Path entryFile = Paths.get(PathManager.getTempPath(), wmClass + ".desktop");
+    var names = ApplicationNamesInfo.getInstance();
+    var name = names.getFullProductNameWithEdition();
+    var content = ExecUtil.loadTemplate(CreateDesktopEntryAction.class.getClassLoader(), "entry.desktop", Map.of(
+      "$NAME$", name,
+      "$SCRIPT$", StringUtil.wrapWithDoubleQuote(starter.toString()),
+      "$ICON$", iconPath,
+      "$COMMENT$", StringUtil.notNullize(names.getMotto(), name),
+      "$WM_CLASS$", AppUIUtil.INSTANCE.getFrameClass()));
+    var entryFile = Path.of(PathManager.getTempPath(), getDesktopEntryName());
     Files.writeString(entryFile, content);
     return entryFile;
   }
 
   private static void install(Path entryFile, boolean globalEntry) throws IOException, ExecutionException {
     if (globalEntry) {
-      File script = ExecUtil.createTempExecutableScript(
+      var script = ExecUtil.createTempExecutableScript(
         "create_desktop_entry_", ".sh",
         "#!/bin/sh\n" +
         "xdg-desktop-menu install --mode system '" + entryFile + "' && xdg-desktop-menu forceupdate --mode system\n");
@@ -166,33 +159,24 @@ public final class CreateDesktopEntryAction extends DumbAwareAction {
 
   private static void exec(GeneralCommandLine command, @Nls @Nullable String prompt) throws IOException, ExecutionException {
     command.setRedirectErrorStream(true);
-    ProcessOutput result = prompt != null ? execAndGetOutputWithWizardSupport(ExecUtil.sudoCommand(command, prompt)): execAndGetOutputWithWizardSupport(command);
-    int exitCode = result.getExitCode();
+    var result = new CapturingProcessHandler(prompt != null ? ExecUtil.sudoCommand(command, prompt) : command).runProcess();
+    var exitCode = result.getExitCode();
     if (exitCode != 0) {
-      String message = "Command '" + (prompt != null ? "sudo " : "") + command.getCommandLineString() + "' returned " + exitCode;
-      String output = result.getStdout();
-      if (!StringUtil.isEmptyOrSpaces(output)) message += "\nOutput: " + output.trim();
+      var message = "Command '" + (prompt != null ? "sudo " : "") + command.getCommandLineString() + "' returned " + exitCode;
+      var output = result.getStdout();
+      if (!output.isBlank()) message += "\nOutput: " + output.trim();
       throw new RuntimeException(message);
     }
   }
 
-  private static ProcessOutput execAndGetOutputWithWizardSupport(GeneralCommandLine cmd) throws ExecutionException {
-    return new CapturingProcessHandler(cmd) {
-      @Override
-      public boolean hasPty() {
-        if (!LoadingState.COMPONENTS_REGISTERED.isOccurred()) return false;
-        return super.hasPty();
-      }
-    }.runProcess();
-  }
-
-  public static class CreateDesktopEntryDialog extends DialogWrapper {
+  public static final class CreateDesktopEntryDialog extends DialogWrapper {
     private static final @NlsSafe String APP_NAME_PLACEHOLDER = "$APP_NAME$";
+
     private JPanel myContentPane;
     private JLabel myLabel;
     private JCheckBox myGlobalEntryCheckBox;
 
-    public CreateDesktopEntryDialog(final Project project) {
+    public CreateDesktopEntryDialog(Project project) {
       super(project);
       init();
       setTitle(ApplicationBundle.message("desktop.entry.title"));
