@@ -1,12 +1,11 @@
-// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.ui;
 
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.util.SystemInfo;
 import com.intellij.util.MathUtil;
 import com.intellij.util.ObjectUtils;
-import com.intellij.util.ui.EmptyIcon;
-import com.intellij.util.ui.JBInsets;
+import com.intellij.util.ui.JBSwingUtilities;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
@@ -19,11 +18,9 @@ import java.awt.event.MouseEvent;
 import static java.lang.Math.abs;
 
 public class Splitter extends JPanel implements Splittable {
-  private static final Icon SplitGlueH = EmptyIcon.create(6, 17);
-  private static final Icon SplitGlueV = EmptyIcon.create(17, 6);
   private static final Logger LOG = Logger.getInstance(Splitter.class);
-  @NonNls public static final String PROP_PROPORTION = "proportion";
-  @NonNls public static final String PROP_ORIENTATION = "orientation";
+  public static final @NonNls String PROP_PROPORTION = "proportion";
+  public static final @NonNls String PROP_ORIENTATION = "orientation";
 
   private int myDividerWidth;
   /**
@@ -38,6 +35,7 @@ public class Splitter extends JPanel implements Splittable {
   private final float myMaxProp;
 
 
+  @ApiStatus.Internal
   protected float myProportion;// first size divided by (first + second)
   private Float myLagProportion;
 
@@ -54,8 +52,7 @@ public class Splitter extends JPanel implements Splittable {
     HONOR_THE_FIRST_MIN_SIZE,
     HONOR_THE_SECOND_MIN_SIZE
   }
-  @NotNull
-  private LackOfSpaceStrategy myLackOfSpaceStrategy = LackOfSpaceStrategy.SIMPLE_RATIO;
+  private @NotNull LackOfSpaceStrategy myLackOfSpaceStrategy = LackOfSpaceStrategy.SIMPLE_RATIO;
 
   public enum DividerPositionStrategy {
     KEEP_PROPORTION, //default
@@ -63,8 +60,7 @@ public class Splitter extends JPanel implements Splittable {
     KEEP_SECOND_SIZE,
     DISTRIBUTE
   }
-  @NotNull
-  private DividerPositionStrategy myDividerPositionStrategy = DividerPositionStrategy.KEEP_PROPORTION;
+  private @NotNull DividerPositionStrategy myDividerPositionStrategy = DividerPositionStrategy.KEEP_PROPORTION;
 
 
   /**
@@ -177,16 +173,14 @@ public class Splitter extends JPanel implements Splittable {
   public void setLackOfSpaceStrategy(@NotNull LackOfSpaceStrategy strategy) {
     myLackOfSpaceStrategy = strategy;
   }
-  @NotNull
-  public LackOfSpaceStrategy getLackOfSpaceStrategy() {
+  public @NotNull LackOfSpaceStrategy getLackOfSpaceStrategy() {
     return myLackOfSpaceStrategy;
   }
   public void setDividerPositionStrategy(@NotNull DividerPositionStrategy dividerPositionStrategy) {
     myDividerPositionStrategy = dividerPositionStrategy;
   }
 
-  @NotNull
-  public DividerPositionStrategy getDividerPositionStrategy() {
+  public @NotNull DividerPositionStrategy getDividerPositionStrategy() {
     return myDividerPositionStrategy;
   }
 
@@ -321,7 +315,7 @@ public class Splitter extends JPanel implements Splittable {
   }
 
   private static boolean isComponentVisible(JComponent component) {
-    return !isNull(component) && component.isVisible() && !component.getBounds().isEmpty();
+    return !NullableComponent.Check.isNull(component) && component.isVisible() && !component.getBounds().isEmpty();
   }
 
   private static float getDistributeSizeChange(int size1, int mSize1, int pSize1, int mxSize1,
@@ -421,13 +415,14 @@ public class Splitter extends JPanel implements Splittable {
       mySkipNextLayout = false;
       return;
     }
-    int width = getWidth();
-    int height = getHeight();
+    var insets = getInsets();
+    int width = getWidth() - insets.left - insets.right;
+    int height = getHeight() - insets.top - insets.bottom;
 
     int total = isVertical() ? height : width;
     if (total <= 0) return;
 
-    if (!isNull(myFirstComponent) && myFirstComponent.isVisible() && !isNull(mySecondComponent) && mySecondComponent.isVisible()) {
+    if (!NullableComponent.Check.isNull(myFirstComponent) && myFirstComponent.isVisible() && !NullableComponent.Check.isNull(mySecondComponent) && mySecondComponent.isVisible()) {
       // both first and second components are visible
       Rectangle firstRect = new Rectangle();
       Rectangle dividerRect = new Rectangle();
@@ -448,14 +443,14 @@ public class Splitter extends JPanel implements Splittable {
       int iSize2 = Math.max(0, total - iSize1 - d);
 
       if (isVertical()) {
-        firstRect.setBounds(0, 0, width, iSize1);
-        dividerRect.setBounds(0, iSize1, width, d);
-        secondRect.setBounds(0, iSize1 + d, width, iSize2);
+        firstRect.setBounds(insets.left, insets.top, width, iSize1);
+        dividerRect.setBounds(insets.left, insets.top + iSize1, width, d);
+        secondRect.setBounds(insets.left, insets.top + iSize1 + d, width, iSize2);
       }
       else {
-        firstRect.setBounds(0, 0, iSize1, height);
-        dividerRect.setBounds(iSize1, 0, d, height);
-        secondRect.setBounds((iSize1 + d), 0, iSize2, height);
+        firstRect.setBounds(insets.left, insets.top, iSize1, height);
+        dividerRect.setBounds(insets.left + iSize1, insets.top, d, height);
+        secondRect.setBounds((insets.left + iSize1 + d), insets.top, iSize2, height);
       }
       myDivider.setVisible(true);
       myFirstComponent.setBounds(firstRect);
@@ -464,29 +459,29 @@ public class Splitter extends JPanel implements Splittable {
       //myFirstComponent.revalidate();
       //mySecondComponent.revalidate();
     }
-    else if (!isNull(myFirstComponent) && myFirstComponent.isVisible()) { // only first component is visible
+    else if (!NullableComponent.Check.isNull(myFirstComponent) && myFirstComponent.isVisible()) { // only first component is visible
       hideNull(mySecondComponent);
       myDivider.setVisible(false);
-      myFirstComponent.setBounds(0, 0, width, height);
+      myFirstComponent.setBounds(insets.left, insets.top, width, height);
       //myFirstComponent.revalidate();
     }
-    else if (!isNull(mySecondComponent) && mySecondComponent.isVisible()) { // only second component is visible
+    else if (!NullableComponent.Check.isNull(mySecondComponent) && mySecondComponent.isVisible()) { // only second component is visible
       hideNull(myFirstComponent);
       myDivider.setVisible(false);
-      mySecondComponent.setBounds(0, 0, width, height);
+      mySecondComponent.setBounds(insets.left, insets.top, width, height);
       //mySecondComponent.revalidate();
     }
     else { // both components are null or invisible
       myDivider.setVisible(false);
       if (myFirstComponent != null) {
-        myFirstComponent.setBounds(0, 0, 0, 0);
+        myFirstComponent.setBounds(insets.left, insets.top, 0, 0);
         //myFirstComponent.revalidate();
       }
       else {
         hideNull(myFirstComponent);
       }
       if (mySecondComponent != null) {
-        mySecondComponent.setBounds(0, 0, 0, 0);
+        mySecondComponent.setBounds(insets.left, insets.top, 0, 0);
         //mySecondComponent.revalidate();
       }
       else {
@@ -536,11 +531,8 @@ public class Splitter extends JPanel implements Splittable {
     return isVertical() ? size.getHeight() : size.getWidth();
   }
 
-  static boolean isNull(Component component) {
-    return NullableComponent.Check.isNull(component);
-  }
-
-  static void hideNull(Component component) {
+  @ApiStatus.Internal
+  public static void hideNull(Component component) {
     if (component instanceof NullableComponent) {
       if (!component.getBounds().equals(myNullBounds)) {
         component.setBounds(myNullBounds);
@@ -598,7 +590,7 @@ public class Splitter extends JPanel implements Splittable {
     proportion = MathUtil.clamp(proportion, myMinProp, myMaxProp);
     float oldProportion = myProportion;
     myProportion = proportion;
-    firePropertyChange(PROP_PROPORTION, new Float(oldProportion), new Float(myProportion));
+    firePropertyChange(PROP_PROPORTION, Float.valueOf(oldProportion), Float.valueOf(myProportion));
     revalidate();
     repaint();
   }
@@ -723,9 +715,8 @@ public class Splitter extends JPanel implements Splittable {
     return view == null ? c : view;
   }
 
-  @NotNull
   @Override
-  public Component asComponent() {
+  public @NotNull Component asComponent() {
     return this;
   }
 
@@ -748,7 +739,7 @@ public class Splitter extends JPanel implements Splittable {
       myResizeEnabled = true;
       mySwitchOrientationEnabled = false;
       setFocusable(false);
-      enableEvents(MouseEvent.MOUSE_EVENT_MASK | MouseEvent.MOUSE_MOTION_EVENT_MASK);
+      enableEvents(AWTEvent.MOUSE_EVENT_MASK | AWTEvent.MOUSE_MOTION_EVENT_MASK);
       //setOpaque(false);
       setOrientation(myVerticalSplit);
     }
@@ -764,10 +755,6 @@ public class Splitter extends JPanel implements Splittable {
       if (!myShowDividerControls && !myShowDividerIcon) {
         return;
       }
-
-      Icon glueIcon = isVerticalSplit ? SplitGlueV : SplitGlueH;
-      add(new JLabel(glueIcon), new GridBagConstraints(0, 0, 1, 1, 0, 0, GridBagConstraints.CENTER, GridBagConstraints.NONE,
-                                                       JBInsets.emptyInsets(), 0, 0));
 
       revalidate();
       repaint();
@@ -830,6 +817,11 @@ public class Splitter extends JPanel implements Splittable {
     @Override
     public void setSwitchOrientationEnabled(boolean switchOrientationEnabled) {
       mySwitchOrientationEnabled = switchOrientationEnabled;
+    }
+
+    @Override
+    protected Graphics getComponentGraphics(Graphics g) {
+      return JBSwingUtilities.runGlobalCGTransform(this, super.getComponentGraphics(g));
     }
   }
 }
