@@ -1,4 +1,4 @@
-// Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2024 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.xdebugger.impl.breakpoints;
 
 import com.intellij.configurationStore.XmlSerializer;
@@ -6,7 +6,6 @@ import com.intellij.openapi.Disposable;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.ModalityState;
 import com.intellij.openapi.application.ReadAction;
-import com.intellij.openapi.application.WriteAction;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.extensions.ExtensionPointListener;
 import com.intellij.openapi.extensions.PluginDescriptor;
@@ -22,95 +21,76 @@ import com.intellij.util.SmartList;
 import com.intellij.util.concurrency.SequentialTaskExecutor;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.containers.MultiMap;
-import com.intellij.util.messages.MessageBusConnection;
+import com.intellij.util.messages.SimpleMessageBusConnection;
+import com.intellij.util.ui.UIUtil;
 import com.intellij.xdebugger.XDebugSession;
 import com.intellij.xdebugger.XDebuggerUtil;
 import com.intellij.xdebugger.XSourcePosition;
 import com.intellij.xdebugger.breakpoints.*;
 import com.intellij.xdebugger.impl.BreakpointManagerState;
 import com.intellij.xdebugger.impl.XDebuggerManagerImpl;
+import kotlinx.coroutines.CoroutineScope;
 import one.util.streamex.StreamEx;
 import org.jdom.Element;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import javax.swing.*;
 import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutorService;
+import java.util.concurrent.locks.ReentrantLock;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
+import java.util.function.Function;
 
+import static com.intellij.util.progress.CancellationUtil.withLockMaybeCancellable;
+
+@ApiStatus.Internal
 public final class XBreakpointManagerImpl implements XBreakpointManager {
   private static final Logger LOG = Logger.getInstance(XBreakpointManagerImpl.class);
+
+  private final ReentrantLock myLock = new ReentrantLock();
 
   private final MultiMap<XBreakpointType, XBreakpointBase<?, ?, ?>> myBreakpoints = MultiMap.createLinkedSet();
   private final Map<XBreakpointType, Set<XBreakpointBase<?, ?, ?>>> myDefaultBreakpoints = new LinkedHashMap<>();
   private final Map<XBreakpointType, BreakpointState<?, ?, ?>> myBreakpointsDefaults = new LinkedHashMap<>();
   private final Set<XBreakpointBase<?, ?, ?>> myAllBreakpoints = new LinkedHashSet<>();
-  private final Map<XBreakpointType, EventDispatcher<XBreakpointListener>> myDispatchers = new HashMap<>();
-  private XBreakpointsDialogState myBreakpointsDialogSettings;
-  private volatile EventDispatcher<XBreakpointListener> myAllBreakpointsDispatcher;
+  private final Map<XBreakpointType, EventDispatcher<XBreakpointListener>> myDispatchers = new ConcurrentHashMap<>();
+  private volatile XBreakpointsDialogState myBreakpointsDialogSettings;
   private final XLineBreakpointManager myLineBreakpointManager;
   private final Project myProject;
   private final XDebuggerManagerImpl myDebuggerManager;
   private final XDependentBreakpointManager myDependentBreakpointManager;
   private long myTime;
-  private String myDefaultGroup;
+  private volatile String myDefaultGroup;
   private RemovedBreakpointData myLastRemovedBreakpoint = null;
   private volatile boolean myFirstLoadDone = false;
 
-  public XBreakpointManagerImpl(@NotNull Project project, @NotNull XDebuggerManagerImpl debuggerManager, @NotNull MessageBusConnection messageBusConnection) {
+  public XBreakpointManagerImpl(@NotNull Project project,
+                                @NotNull XDebuggerManagerImpl debuggerManager,
+                                SimpleMessageBusConnection messageBusConnection,
+                                @NotNull CoroutineScope coroutineScope) {
     myProject = project;
     myDebuggerManager = debuggerManager;
     myDependentBreakpointManager = new XDependentBreakpointManager(this, messageBusConnection);
-    myLineBreakpointManager = new XLineBreakpointManager(project);
-
-    messageBusConnection.subscribe(XBreakpointListener.TOPIC, new XBreakpointListener() {
-      @SuppressWarnings("unchecked")
-      @Override
-      public void breakpointAdded(@NotNull XBreakpoint breakpoint) {
-        if (myAllBreakpointsDispatcher != null) {
-          myAllBreakpointsDispatcher.getMulticaster().breakpointAdded(breakpoint);
-        }
-      }
-
-      @SuppressWarnings("unchecked")
-      @Override
-      public void breakpointRemoved(@NotNull XBreakpoint breakpoint) {
-        if (myAllBreakpointsDispatcher != null) {
-          myAllBreakpointsDispatcher.getMulticaster().breakpointRemoved(breakpoint);
-        }
-      }
-
-      @SuppressWarnings("unchecked")
-      @Override
-      public void breakpointChanged(@NotNull XBreakpoint breakpoint) {
-        if (myAllBreakpointsDispatcher != null) {
-          myAllBreakpointsDispatcher.getMulticaster().breakpointChanged(breakpoint);
-        }
-      }
-
-      @SuppressWarnings("unchecked")
-      @Override
-      public void breakpointPresentationUpdated(@NotNull XBreakpoint breakpoint, @Nullable XDebugSession session) {
-        if (myAllBreakpointsDispatcher != null) {
-          myAllBreakpointsDispatcher.getMulticaster().breakpointPresentationUpdated(breakpoint, session);
-        }
-      }
-    });
+    myLineBreakpointManager = new XLineBreakpointManager(project, coroutineScope);
 
     XBreakpointType.EXTENSION_POINT_NAME.addExtensionPointListener(new ExtensionPointListener<>() {
+      @SuppressWarnings("unchecked")
       @Override
       public void extensionAdded(@NotNull XBreakpointType type, @NotNull PluginDescriptor pluginDescriptor) {
         //the project may be 'temporarily disposed' in tests if this class was created from a light test
         if (project.isDisposed()) return;
-        //noinspection unchecked
-        WriteAction.run(() -> addDefaultBreakpoint(type));
+        var breakpoint = createDefaultBreakpoint(type);
+        if (breakpoint != null) {
+          addBreakpoint(breakpoint, true, false);
+        }
       }
 
       @Override
       public void extensionRemoved(@NotNull XBreakpointType type, @NotNull PluginDescriptor pluginDescriptor) {
-        WriteAction.run(() -> {
+        withLockMaybeCancellable(myLock, () -> {
           //noinspection unchecked
           for (Object b : getBreakpoints(type)) {
             XBreakpoint<?> breakpoint = (XBreakpoint<?>)b;
@@ -173,57 +153,58 @@ public final class XBreakpointManagerImpl implements XBreakpointManager {
   }
 
   @Override
-  @NotNull
-  public <T extends XBreakpointProperties> XBreakpoint<T> addBreakpoint(final XBreakpointType<XBreakpoint<T>,T> type, @Nullable final T properties) {
+  public @NotNull <T extends XBreakpointProperties> XBreakpoint<T> addBreakpoint(final XBreakpointType<XBreakpoint<T>,T> type, final @Nullable T properties) {
     return doAddBreakpoint(type, properties, false);
   }
 
-  @NotNull
-  public <T extends XBreakpointProperties> XBreakpoint<T> addDefaultBreakpoint(final XBreakpointType<XBreakpoint<T>,T> type, @Nullable final T properties) {
+  public @NotNull <T extends XBreakpointProperties> XBreakpoint<T> addDefaultBreakpoint(final XBreakpointType<XBreakpoint<T>,T> type, final @Nullable T properties) {
     return doAddBreakpoint(type, properties, true);
   }
 
-  @NotNull
-  private <T extends XBreakpointProperties> XBreakpoint<T> doAddBreakpoint(XBreakpointType<XBreakpoint<T>, T> type, @Nullable T properties, boolean defaultBreakpoint) {
-    ApplicationManager.getApplication().assertWriteAccessAllowed();
-    XBreakpointBase<?, T, ?> breakpoint = createBreakpoint(type, properties, true, defaultBreakpoint);
-    addBreakpoint(breakpoint, defaultBreakpoint, true);
-    return breakpoint;
+  private @NotNull <T extends XBreakpointProperties> XBreakpoint<T> doAddBreakpoint(XBreakpointType<XBreakpoint<T>, T> type, @Nullable T properties, boolean defaultBreakpoint) {
+    return withLockMaybeCancellable(myLock, () -> {
+      XBreakpointBase<?, T, ?> breakpoint = createBreakpoint(type, properties, true, defaultBreakpoint);
+      addBreakpoint(breakpoint, defaultBreakpoint, true);
+      return breakpoint;
+    });
   }
 
   private <T extends XBreakpointProperties> XBreakpointBase<?, T, ?> createBreakpoint(XBreakpointType<XBreakpoint<T>, T> type,
                                                                                       T properties, final boolean enabled,
                                                                                       boolean defaultBreakpoint) {
-    BreakpointState<?,T,?> state = new BreakpointState<>(enabled,
-                                                         type.getId(),
-                                                         defaultBreakpoint ? 0 : ++myTime, type.getDefaultSuspendPolicy());
-    getBreakpointDefaults(type).applyDefaults(state);
-    state.setGroup(myDefaultGroup);
-    return new XBreakpointBase<XBreakpoint<T>,T, BreakpointState<?,T,?>>(type, this, properties, state);
+    return withLockMaybeCancellable(myLock, () -> {
+      BreakpointState<?, T, ?> state = new BreakpointState<>(enabled,
+                                                             type.getId(),
+                                                             defaultBreakpoint ? 0 : ++myTime, type.getDefaultSuspendPolicy());
+      getBreakpointDefaults(type).applyDefaults(state);
+      state.setGroup(myDefaultGroup);
+      return new XBreakpointBase<XBreakpoint<T>, T, BreakpointState<?, T, ?>>(type, this, properties, state);
+    });
   }
 
   private <T extends XBreakpointProperties> void addBreakpoint(final XBreakpointBase<?, T, ?> breakpoint, final boolean defaultBreakpoint,
                                                                boolean initUI) {
     XBreakpointType type = breakpoint.getType();
-    if (defaultBreakpoint) {
-      Set<XBreakpointBase<?, ?, ?>> typeDefaultBreakpoints = myDefaultBreakpoints.computeIfAbsent(type, k -> new LinkedHashSet<>());
-      typeDefaultBreakpoints.add(breakpoint);
-    }
-    else {
-      myBreakpoints.putValue(type, breakpoint);
-      if (initUI) {
-        BreakpointsUsageCollector.reportNewBreakpoint(breakpoint, type, getDebuggerManager().getCurrentSession() != null);
+
+    withLockMaybeCancellable(myLock, () -> {
+      if (defaultBreakpoint) {
+        myDefaultBreakpoints.computeIfAbsent(type, k -> new LinkedHashSet<>()).add(breakpoint);
       }
-    }
-    myAllBreakpoints.add(breakpoint);
-    if (breakpoint instanceof XLineBreakpointImpl) {
-      myLineBreakpointManager.registerBreakpoint((XLineBreakpointImpl)breakpoint, initUI);
-    }
+      else {
+        myBreakpoints.putValue(type, breakpoint);
+        if (initUI) {
+          BreakpointsUsageCollector.reportNewBreakpoint(breakpoint, type, getDebuggerManager().getCurrentSession() != null);
+        }
+      }
+      myAllBreakpoints.add(breakpoint);
+      if (breakpoint instanceof XLineBreakpointImpl) {
+        myLineBreakpointManager.registerBreakpoint((XLineBreakpointImpl)breakpoint, initUI);
+      }
+    });
     sendBreakpointEvent(type, listener -> listener.breakpointAdded(breakpoint));
   }
 
-  @NotNull
-  private XBreakpointListener<XBreakpoint<?>> getBreakpointDispatcherMulticaster() {
+  private @NotNull XBreakpointListener<XBreakpoint<?>> getBreakpointDispatcherMulticaster() {
     //noinspection unchecked
     return myProject.getMessageBus().syncPublisher(XBreakpointListener.TOPIC);
   }
@@ -234,37 +215,46 @@ public final class XBreakpointManagerImpl implements XBreakpointManager {
     }
   }
 
-  public void fireBreakpointChanged(XBreakpointBase<?, ?, ?> breakpoint) {
-    if (!myAllBreakpoints.contains(breakpoint)) {
-      return;
-    }
-
-    if (breakpoint instanceof XLineBreakpointImpl) {
-      myLineBreakpointManager.breakpointChanged((XLineBreakpointImpl)breakpoint);
-    }
-    sendBreakpointEvent(breakpoint.getType(), listener -> listener.breakpointChanged(breakpoint));
+  private boolean isRegistered(XBreakpoint<?> breakpoint) {
+    return withLockMaybeCancellable(myLock, () -> myAllBreakpoints.contains(breakpoint));
   }
-  
-  public void fireBreakpointPresentationUpdated(XBreakpoint<?> breakpoint, @Nullable XDebugSession session) {
-    if (!myAllBreakpoints.contains(breakpoint)) {
-      return;
+
+  public void fireBreakpointChanged(XBreakpointBase<?, ?, ?> breakpoint) {
+    if (isRegistered(breakpoint)) {
+      if (breakpoint instanceof XLineBreakpointImpl) {
+        myLineBreakpointManager.breakpointChanged((XLineBreakpointImpl)breakpoint);
+      }
+      sendBreakpointEvent(breakpoint.getType(), listener -> listener.breakpointChanged(breakpoint));
     }
-    
-    sendBreakpointEvent(breakpoint.getType(), listener -> listener.breakpointPresentationUpdated(breakpoint, session));
+  }
+
+  public void fireBreakpointPresentationUpdated(XBreakpoint<?> breakpoint, @Nullable XDebugSession session) {
+    if (isRegistered(breakpoint)) {
+      sendBreakpointEvent(breakpoint.getType(), listener -> listener.breakpointPresentationUpdated(breakpoint, session));
+    }
   }
 
   @Override
-  public void removeBreakpoint(@NotNull final XBreakpoint<?> breakpoint) {
-    ApplicationManager.getApplication().assertWriteAccessAllowed();
-    doRemoveBreakpoint(breakpoint);
+  public void removeBreakpoint(final @NotNull XBreakpoint<?> breakpoint) {
+    removeBreakpoints(List.of(breakpoint));
   }
 
-  public void removeDefaultBreakpoint(@NotNull final XBreakpoint<?> breakpoint) {
-    ApplicationManager.getApplication().assertWriteAccessAllowed();
-    if (!isDefaultBreakpoint(breakpoint)) {
-      throw new IllegalStateException("Trying to remove not default breakpoint " + breakpoint);
-    }
-    doRemoveBreakpointImpl(breakpoint, true);
+  void removeBreakpoints(@NotNull Collection<? extends XBreakpoint> toRemove) {
+    withLockMaybeCancellable(myLock, () -> toRemove.forEach(this::doRemoveBreakpoint));
+  }
+
+  public void removeAllBreakpoints() {
+    withLockMaybeCancellable(myLock, () -> List.copyOf(myAllBreakpoints).forEach(this::doRemoveBreakpoint));
+  }
+
+  @SuppressWarnings("unused")
+  public void removeDefaultBreakpoint(final @NotNull XBreakpoint<?> breakpoint) {
+    withLockMaybeCancellable(myLock, () -> {
+      if (!isDefaultBreakpoint(breakpoint)) {
+        throw new IllegalStateException("Trying to remove not default breakpoint " + breakpoint);
+      }
+      doRemoveBreakpointImpl(breakpoint, true);
+    });
   }
 
   private void doRemoveBreakpoint(XBreakpoint<?> breakpoint) {
@@ -279,20 +269,25 @@ public final class XBreakpointManagerImpl implements XBreakpointManager {
 
   private void doRemoveBreakpointImpl(XBreakpoint<?> breakpoint, boolean isDefaultBreakpoint) {
     XBreakpointType type = breakpoint.getType();
-    XBreakpointBase<?,?,?> breakpointBase = (XBreakpointBase<?,?,?>)breakpoint;
-    if (isDefaultBreakpoint) {
-      Set<XBreakpointBase<?, ?, ?>> typeDefaultBreakpoints = myDefaultBreakpoints.get(breakpoint.getType());
-      if (typeDefaultBreakpoints != null) {
-        typeDefaultBreakpoints.remove(breakpoint);
+    XBreakpointBase<?, ?, ?> breakpointBase = (XBreakpointBase<?, ?, ?>)breakpoint;
+
+    withLockMaybeCancellable(myLock, () -> {
+      if (isDefaultBreakpoint) {
+        Set<XBreakpointBase<?, ?, ?>> typeDefaultBreakpoints = myDefaultBreakpoints.get(breakpoint.getType());
+        if (typeDefaultBreakpoints != null) {
+          typeDefaultBreakpoints.remove(breakpoint);
+        }
       }
-    } else {
-      myBreakpoints.remove(type, breakpointBase);
-    }
-    myAllBreakpoints.remove(breakpointBase);
-    if (breakpointBase instanceof XLineBreakpointImpl) {
-      myLineBreakpointManager.unregisterBreakpoint((XLineBreakpointImpl)breakpointBase);
-    }
-    breakpointBase.dispose();
+      else {
+        myBreakpoints.remove(type, breakpointBase);
+      }
+      myAllBreakpoints.remove(breakpointBase);
+      if (breakpointBase instanceof XLineBreakpointImpl) {
+        myLineBreakpointManager.unregisterBreakpoint((XLineBreakpointImpl)breakpointBase);
+      }
+    });
+
+    UIUtil.invokeLaterIfNeeded(() -> breakpointBase.dispose());
     sendBreakpointEvent(type, listener -> listener.breakpointRemoved(breakpoint));
   }
 
@@ -309,133 +304,119 @@ public final class XBreakpointManagerImpl implements XBreakpointManager {
   }
 
   @Override
-  @NotNull
-  public <T extends XBreakpointProperties> XLineBreakpoint<T> addLineBreakpoint(final XLineBreakpointType<T> type,
-                                                                                @NotNull final String fileUrl,
-                                                                                final int line,
-                                                                                @Nullable final T properties) {
+  public @NotNull <T extends XBreakpointProperties> XLineBreakpoint<T> addLineBreakpoint(final XLineBreakpointType<T> type,
+                                                                                         final @NotNull String fileUrl,
+                                                                                         final int line,
+                                                                                         final @Nullable T properties) {
     return addLineBreakpoint(type, fileUrl, line, properties, false);
   }
 
   @Override
-  @NotNull
-  public <T extends XBreakpointProperties> XLineBreakpoint<T> addLineBreakpoint(final XLineBreakpointType<T> type,
-                                                                                @NotNull final String fileUrl,
-                                                                                final int line,
-                                                                                @Nullable final T properties,
-                                                                                boolean temporary) {
+  public @NotNull <T extends XBreakpointProperties> XLineBreakpoint<T> addLineBreakpoint(final XLineBreakpointType<T> type,
+                                                                                         final @NotNull String fileUrl,
+                                                                                         final int line,
+                                                                                         final @Nullable T properties,
+                                                                                         boolean temporary) {
     return addLineBreakpoint(type, fileUrl, line, properties, temporary, true);
   }
 
-  @NotNull
-  public <T extends XBreakpointProperties> XLineBreakpoint<T> addLineBreakpoint(final XLineBreakpointType<T> type,
-                                                                                @NotNull final String fileUrl,
-                                                                                final int line,
-                                                                                @Nullable final T properties,
-                                                                                boolean temporary,
-                                                                                boolean initUI) {
-    ApplicationManager.getApplication().assertWriteAccessAllowed();
-    LineBreakpointState<T> state = new LineBreakpointState<>(true, type.getId(), fileUrl, line, temporary,
-                                                             ++myTime, type.getDefaultSuspendPolicy());
-    getBreakpointDefaults(type).applyDefaults(state);
-    state.setGroup(myDefaultGroup);
-    XLineBreakpointImpl<T> breakpoint = new XLineBreakpointImpl<>(type, this, properties,
-                                                                  state);
-    addBreakpoint(breakpoint, false, initUI);
-    return breakpoint;
+  public @NotNull <T extends XBreakpointProperties> XLineBreakpoint<T> addLineBreakpoint(final XLineBreakpointType<T> type,
+                                                                                         final @NotNull String fileUrl,
+                                                                                         final int line,
+                                                                                         final @Nullable T properties,
+                                                                                         boolean temporary,
+                                                                                         boolean initUI) {
+    return withLockMaybeCancellable(myLock, () -> {
+      LineBreakpointState<T> state = new LineBreakpointState<>(true, type.getId(), fileUrl, line, temporary,
+                                                               ++myTime, type.getDefaultSuspendPolicy());
+      getBreakpointDefaults(type).applyDefaults(state);
+      state.setGroup(myDefaultGroup);
+      XLineBreakpointImpl<T> breakpoint = new XLineBreakpointImpl<>(type, this, properties,
+                                                                    state);
+      addBreakpoint(breakpoint, false, initUI);
+      return breakpoint;
+    });
   }
 
   @Override
   public XBreakpointBase<?,?,?> @NotNull [] getAllBreakpoints() {
-    ApplicationManager.getApplication().assertReadAccessAllowed();
-    return myAllBreakpoints.toArray(new XBreakpointBase[0]);
+    return withLockMaybeCancellable(myLock, () -> myAllBreakpoints.toArray(new XBreakpointBase[0]));
   }
 
   @Override
   @SuppressWarnings("unchecked")
-  @NotNull
-  public <B extends XBreakpoint<?>> Collection<? extends B> getBreakpoints(@NotNull final XBreakpointType<B,?> type) {
-    ApplicationManager.getApplication().assertReadAccessAllowed();
-    List<B> result = new ArrayList<>(getDefaultBreakpoints(type));
-    result.addAll((Collection<? extends B>)myBreakpoints.get(type));
-    return Collections.unmodifiableList(result);
+  public @NotNull <B extends XBreakpoint<?>> Collection<? extends B> getBreakpoints(final @NotNull XBreakpointType<B,?> type) {
+    return withLockMaybeCancellable(myLock, () -> {
+      List<B> result = new ArrayList<>(getDefaultBreakpoints(type));
+      result.addAll((Collection<? extends B>)myBreakpoints.get(type));
+      return Collections.unmodifiableList(result);
+    });
   }
 
-  @NotNull
   @Override
-  public <B extends XBreakpoint<?>> Collection<? extends B> getBreakpoints(@NotNull Class<? extends XBreakpointType<B, ?>> typeClass) {
+  public @NotNull <B extends XBreakpoint<?>> Collection<? extends B> getBreakpoints(@NotNull Class<? extends XBreakpointType<B, ?>> typeClass) {
     XBreakpointType<B, ?> type = XDebuggerUtil.getInstance().findBreakpointType(typeClass);
     LOG.assertTrue(type != null, "Unregistered breakpoint type " + typeClass + ", registered: " + Arrays.toString(XBreakpointType.EXTENSION_POINT_NAME.getExtensions()));
     return getBreakpoints(type);
   }
 
   @Override
-  @NotNull
-  public <B extends XBreakpoint<?>> Set<B> getDefaultBreakpoints(@NotNull XBreakpointType<B, ?> type) {
-    Set<XBreakpointBase<?, ?, ?>> breakpointsSet = myDefaultBreakpoints.get(type);
-    if (breakpointsSet == null) {
-      return Collections.emptySet();
-    }
-    //noinspection unchecked
-    return breakpointsSet.stream().map(breakpoint -> (B)breakpoint).collect(Collectors.toSet());
+  public @NotNull <B extends XBreakpoint<?>> Set<B> getDefaultBreakpoints(@NotNull XBreakpointType<B, ?> type) {
+    return withLockMaybeCancellable(myLock, () -> {
+      Set<XBreakpointBase<?, ?, ?>> breakpointsSet = myDefaultBreakpoints.get(type);
+      if (breakpointsSet == null) {
+        return Collections.emptySet();
+      }
+      //noinspection unchecked
+      return (Set<B>)Set.copyOf(breakpointsSet);
+    });
   }
 
   @Override
-  @Nullable
-  public <P extends XBreakpointProperties> XLineBreakpoint<P> findBreakpointAtLine(@NotNull final XLineBreakpointType<P> type,
-                                                                                   @NotNull final VirtualFile file,
-                                                                                   final int line) {
-    ApplicationManager.getApplication().assertReadAccessAllowed();
-    //noinspection unchecked
-    return StreamEx.of(myBreakpoints.get(type))
-      .select(XLineBreakpoint.class)
-      .findFirst(b -> b.getFileUrl().equals(file.getUrl()) && b.getLine() == line)
-      .orElse(null);
+  public @NotNull <B extends XLineBreakpoint<P>, P extends XBreakpointProperties> Collection<B> findBreakpointsAtLine(@NotNull XLineBreakpointType<P> type,
+                                                                                                         @NotNull VirtualFile file,
+                                                                                                         int line) {
+    return withLockMaybeCancellable(myLock, () -> {
+      //noinspection unchecked
+      return (Collection<B>)((StreamEx<XLineBreakpoint<P>>)(StreamEx<?>)StreamEx.of(myBreakpoints.get(type))
+        .select(XLineBreakpoint.class)
+        .filter(b -> b.getFileUrl().equals(file.getUrl()) && b.getLine() == line))
+        .toList();
+    });
+  }
+
+  @Override
+  public @Nullable <P extends XBreakpointProperties> XLineBreakpoint<P> findBreakpointAtLine(final @NotNull XLineBreakpointType<P> type,
+                                                                                             final @NotNull VirtualFile file,
+                                                                                             final int line) {
+    return ContainerUtil.getFirstItem(findBreakpointsAtLine(type, file, line));
   }
 
   @Override
   public boolean isDefaultBreakpoint(@NotNull XBreakpoint<?> breakpoint) {
-    return ContainerUtil.exists(myDefaultBreakpoints.values(), s -> s.contains(breakpoint));
+    return withLockMaybeCancellable(myLock, () ->
+      ContainerUtil.exists(myDefaultBreakpoints.values(), s -> s.contains(breakpoint)));
   }
 
-  private <T extends XBreakpointProperties> EventDispatcher<XBreakpointListener> getOrCreateDispatcher(final XBreakpointType<?,T> type) {
+  private <T extends XBreakpointProperties<?>> EventDispatcher<XBreakpointListener> getOrCreateDispatcher(final XBreakpointType<?,T> type) {
     return myDispatchers.computeIfAbsent(type, k -> EventDispatcher.create(XBreakpointListener.class));
   }
 
   @Override
-  public <B extends XBreakpoint<P>, P extends XBreakpointProperties> void addBreakpointListener(@NotNull final XBreakpointType<B,P> type, @NotNull final XBreakpointListener<B> listener) {
+  public <B extends XBreakpoint<P>, P extends XBreakpointProperties> void addBreakpointListener(final @NotNull XBreakpointType<B,P> type, final @NotNull XBreakpointListener<B> listener) {
     getOrCreateDispatcher(type).addListener(listener);
   }
 
   @Override
-  public <B extends XBreakpoint<P>, P extends XBreakpointProperties> void removeBreakpointListener(@NotNull final XBreakpointType<B,P> type,
-                                                                                                   @NotNull final XBreakpointListener<B> listener) {
+  public <B extends XBreakpoint<P>, P extends XBreakpointProperties> void removeBreakpointListener(final @NotNull XBreakpointType<B,P> type,
+                                                                                                   final @NotNull XBreakpointListener<B> listener) {
     getOrCreateDispatcher(type).removeListener(listener);
   }
 
   @Override
-  public <B extends XBreakpoint<P>, P extends XBreakpointProperties> void addBreakpointListener(@NotNull final XBreakpointType<B,P> type, @NotNull final XBreakpointListener<B> listener,
+  public <B extends XBreakpoint<P>, P extends XBreakpointProperties> void addBreakpointListener(final @NotNull XBreakpointType<B,P> type, final @NotNull XBreakpointListener<B> listener,
                                                                                                 final Disposable parentDisposable) {
     getOrCreateDispatcher(type).addListener(listener, parentDisposable);
-  }
-
-  @Override
-  public void addBreakpointListener(@NotNull final XBreakpointListener<XBreakpoint<?>> listener) {
-    getDispatcher().addListener(listener);
-  }
-
-  @Override
-  public void removeBreakpointListener(@NotNull final XBreakpointListener<XBreakpoint<?>> listener) {
-    getDispatcher().removeListener(listener);
-  }
-
-  private EventDispatcher<XBreakpointListener> getDispatcher() {
-    synchronized (myDispatchers) {
-      if (myAllBreakpointsDispatcher == null) {
-        myAllBreakpointsDispatcher = EventDispatcher.create(XBreakpointListener.class);
-      }
-      return myAllBreakpointsDispatcher;
-    }
   }
 
   @Override
@@ -458,53 +439,59 @@ public final class XBreakpointManagerImpl implements XBreakpointManager {
     myLineBreakpointManager.queueBreakpointUpdate(breakpoint, () -> fireBreakpointPresentationUpdated(breakpoint, null));
   }
 
-  @NotNull
-  public BreakpointManagerState saveState(@NotNull BreakpointManagerState state) {
-    myDependentBreakpointManager.saveState();
+  @ApiStatus.Internal
+  public @NotNull BreakpointManagerState saveState(@NotNull BreakpointManagerState state) {
+    // create default breakpoints map without locking
+    Map<XBreakpointType, XBreakpointBase> defaultBreakpointsMap = StreamEx.of(createDefaultBreakpoints()).toMap(XBreakpointBase::getType, Function.identity());
 
-    List<BreakpointState<?, ?, ?>> defaultBreakpoints = new SmartList<>();
-    for (Set<XBreakpointBase<?, ?, ?>> typeDefaultBreakpoints : myDefaultBreakpoints.values()) {
-      if (!ContainerUtil.exists(typeDefaultBreakpoints, breakpoint -> differsFromDefault(breakpoint.getType(), breakpoint.getState()))) {
-        continue;
+    return withLockMaybeCancellable(myLock, () -> {
+      myDependentBreakpointManager.saveState();
+
+      List<BreakpointState<?, ?, ?>> defaultBreakpoints = new SmartList<>();
+      for (Set<XBreakpointBase<?, ?, ?>> typeDefaultBreakpoints : myDefaultBreakpoints.values()) {
+        if (!ContainerUtil.exists(typeDefaultBreakpoints,
+                                  breakpoint -> differsFromDefault(defaultBreakpointsMap, breakpoint.getType(), breakpoint.getState()))) {
+          continue;
+        }
+        for (XBreakpointBase<?, ?, ?> breakpoint : typeDefaultBreakpoints) {
+          final BreakpointState breakpointState = breakpoint.getState();
+          defaultBreakpoints.add(breakpointState);
+        }
       }
-      for (XBreakpointBase<?, ?, ?> breakpoint : typeDefaultBreakpoints) {
-        final BreakpointState breakpointState = breakpoint.getState();
-        defaultBreakpoints.add(breakpointState);
+
+      List<BreakpointState<?, ?, ?>> breakpoints = new SmartList<>();
+      for (XBreakpointBase<?, ?, ?> breakpoint : myBreakpoints.values()) {
+        breakpoints.add(breakpoint.getState());
       }
-    }
 
-    List<BreakpointState<?, ?, ?>> breakpoints = new SmartList<>();
-    for (XBreakpointBase<?,?,?> breakpoint : myBreakpoints.values()) {
-      breakpoints.add(breakpoint.getState());
-    }
-
-    List<BreakpointState<?, ?, ?>> breakpointsDefaults = new SmartList<>();
-    for (Map.Entry<XBreakpointType, BreakpointState<?,?,?>> entry : myBreakpointsDefaults.entrySet()) {
-      if (statesAreDifferent(entry.getValue(), createBreakpointDefaults(entry.getKey()), false)) {
-        breakpointsDefaults.add(entry.getValue());
+      List<BreakpointState<?, ?, ?>> breakpointsDefaults = new SmartList<>();
+      for (Map.Entry<XBreakpointType, BreakpointState<?, ?, ?>> entry : myBreakpointsDefaults.entrySet()) {
+        if (statesAreDifferent(entry.getValue(), createBreakpointDefaults(entry.getKey()), false)) {
+          breakpointsDefaults.add(entry.getValue());
+        }
       }
-    }
 
-    state.getDefaultBreakpoints().clear();
-    state.getDefaultBreakpoints().addAll(defaultBreakpoints);
-    state.getBreakpoints().clear();
-    state.getBreakpoints().addAll(breakpoints);
-    state.getBreakpointsDefaults().clear();
-    state.getBreakpointsDefaults().addAll(breakpointsDefaults);
+      state.getDefaultBreakpoints().clear();
+      state.getDefaultBreakpoints().addAll(defaultBreakpoints);
+      state.getBreakpoints().clear();
+      state.getBreakpoints().addAll(breakpoints);
+      state.getBreakpointsDefaults().clear();
+      state.getBreakpointsDefaults().addAll(breakpointsDefaults);
 
-    state.setBreakpointsDialogProperties(myBreakpointsDialogSettings);
-    state.setDefaultGroup(myDefaultGroup);
-    return state;
+      state.setBreakpointsDialogProperties(myBreakpointsDialogSettings);
+      state.setDefaultGroup(myDefaultGroup);
+      return state;
+    });
   }
 
-  private <P extends XBreakpointProperties> boolean differsFromDefault(XBreakpointType<?, P> type, BreakpointState state) {
-    final XBreakpoint<P> defaultBreakpoint = createDefaultBreakpoint(type);
+  private static <P extends XBreakpointProperties> boolean differsFromDefault(Map<XBreakpointType, XBreakpointBase> defaultBreakpoints,
+                                                                              XBreakpointType<?, P> type,
+                                                                              BreakpointState state) {
+    var defaultBreakpoint = defaultBreakpoints.get(type);
     if (defaultBreakpoint == null) {
       return false;
     }
-
-    BreakpointState defaultState = ((XBreakpointBase<?, ?, ?>)defaultBreakpoint).getState();
-    return statesAreDifferent(state, defaultState, false);
+    return statesAreDifferent(state, defaultBreakpoint.getState(), false);
   }
 
   public static boolean statesAreDifferent(BreakpointState state1, BreakpointState state2, boolean ignoreTimestamp) {
@@ -524,55 +511,68 @@ public final class XBreakpointManagerImpl implements XBreakpointManager {
     return res;
   }
 
+  @ApiStatus.Internal
   public void loadState(@NotNull BreakpointManagerState state) {
-    myBreakpointsDialogSettings = state.getBreakpointsDialogProperties();
+    // create default breakpoint without locking
+    var defaultBreakpoints = createDefaultBreakpoints();
 
-    myAllBreakpoints.clear();
-    myDefaultBreakpoints.clear();
-    myBreakpointsDefaults.clear();
-
+    // make sure that no RW lock is taken under myLock
     ApplicationManager.getApplication().runReadAction(() -> {
-      state.getDefaultBreakpoints().forEach(breakpointState -> loadBreakpoint(breakpointState, true));
+      withLockMaybeCancellable(myLock, () -> {
+        myBreakpointsDialogSettings = state.getBreakpointsDialogProperties();
 
-      XBreakpointUtil.breakpointTypes().remove(myDefaultBreakpoints::containsKey).forEach(this::addDefaultBreakpoint);
+        myAllBreakpoints.clear();
+        myDefaultBreakpoints.clear();
+        myBreakpointsDefaults.clear();
 
-      new ArrayList<>(myBreakpoints.values()).forEach(this::doRemoveBreakpoint);
+        state.getDefaultBreakpoints().forEach(breakpointState -> loadBreakpoint(breakpointState, true));
 
-      ContainerUtil.notNullize(state.getBreakpoints()).forEach(breakpointState -> loadBreakpoint(breakpointState, false));
+        //noinspection unchecked
+        StreamEx.of(defaultBreakpoints)
+          .remove(b -> myDefaultBreakpoints.containsKey(b.getType()))
+          .forEach(b -> addBreakpoint(b, true, false));
 
-      for (BreakpointState defaults : state.getBreakpointsDefaults()) {
-        XBreakpointType<?, ?> type = XBreakpointUtil.findType(defaults.getTypeId());
-        if (type != null) {
-          myBreakpointsDefaults.put(type, defaults);
+        List.copyOf(myBreakpoints.values()).forEach(this::doRemoveBreakpoint);
+
+        ContainerUtil.notNullize(state.getBreakpoints()).forEach(breakpointState -> loadBreakpoint(breakpointState, false));
+
+        for (BreakpointState defaults : state.getBreakpointsDefaults()) {
+          XBreakpointType<?, ?> type = XBreakpointUtil.findType(defaults.getTypeId());
+          if (type != null) {
+            myBreakpointsDefaults.put(type, defaults);
+          }
+          else {
+            LOG.warn("Unknown breakpoint type " + defaults.getTypeId());
+          }
         }
-        else {
-          LOG.warn("Unknown breakpoint type " + defaults.getTypeId());
-        }
-      }
 
-      myDependentBreakpointManager.loadState();
+        myDependentBreakpointManager.loadState();
+        myLineBreakpointManager.updateBreakpointsUI();
+        myDefaultGroup = state.getDefaultGroup();
+        myFirstLoadDone = true;
+      });
     });
-    myLineBreakpointManager.updateBreakpointsUI();
-    myDefaultGroup = state.getDefaultGroup();
-    myFirstLoadDone = true;
   }
 
   public void noStateLoaded() {
-    myDefaultBreakpoints.clear();
-    XBreakpointUtil.breakpointTypes().forEach(this::addDefaultBreakpoint);
-    myFirstLoadDone = true;
+    // create default breakpoint without locking
+    var defaultBreakpoints = createDefaultBreakpoints();
+
+    withLockMaybeCancellable(myLock, () -> {
+      myDefaultBreakpoints.clear();
+      //noinspection unchecked
+      defaultBreakpoints.forEach(b -> addBreakpoint(b, true, false));
+      myFirstLoadDone = true;
+    });
   }
 
-  private <P extends XBreakpointProperties> void addDefaultBreakpoint(@NotNull XBreakpointType<?, P> type) {
-    XBreakpoint<P> breakpoint = createDefaultBreakpoint(type);
-    if (breakpoint != null) {
-      addBreakpoint((XBreakpointBase<?, P, ?>)breakpoint, true, false);
-    }
+  private List<? extends XBreakpointBase> createDefaultBreakpoints() {
+    return XBreakpointUtil.breakpointTypes().map(this::createDefaultBreakpoint).nonNull().toList();
   }
 
-  @Nullable
-  private <P extends XBreakpointProperties> XBreakpoint<P> createDefaultBreakpoint(final XBreakpointType<? extends XBreakpoint<P>, P> type) {
-    return type.createDefaultBreakpoint(properties -> {
+  private @Nullable <P extends XBreakpointProperties> XBreakpointBase<?, P, ?> createDefaultBreakpoint(final XBreakpointType<? extends XBreakpoint<P>, P> type) {
+    assert !myLock.isHeldByCurrentThread();
+    return (XBreakpointBase<?, P, ?>)type.createDefaultBreakpoint(properties -> {
       //noinspection unchecked
       return createBreakpoint((XBreakpointType<XBreakpoint<P>, P>)type, properties, false, true);
     });
@@ -595,7 +595,8 @@ public final class XBreakpointManagerImpl implements XBreakpointManager {
   }
 
   public Set<String> getAllGroups() {
-    return StreamEx.of(myAllBreakpoints).map(XBreakpointBase::getGroup).nonNull().toSet();
+    return withLockMaybeCancellable(myLock, () ->
+      StreamEx.of(myAllBreakpoints).map(XBreakpointBase::getGroup).nonNull().toSet());
   }
 
   public String getDefaultGroup() {
@@ -606,8 +607,7 @@ public final class XBreakpointManagerImpl implements XBreakpointManager {
     myDefaultGroup = defaultGroup;
   }
 
-  @Nullable
-  private XBreakpointBase<?,?,?> createBreakpoint(final BreakpointState breakpointState) {
+  private @Nullable XBreakpointBase<?,?,?> createBreakpoint(final BreakpointState breakpointState) {
     XBreakpointType<?,?> type = XBreakpointUtil.findType(breakpointState.getTypeId());
     if (type == null) {
       LOG.warn("Unknown breakpoint type " + breakpointState.getTypeId());
@@ -617,42 +617,43 @@ public final class XBreakpointManagerImpl implements XBreakpointManager {
     return breakpointState.createBreakpoint(type, this);
   }
 
-  @NotNull
-  public BreakpointState getBreakpointDefaults(@NotNull XBreakpointType type) {
-    return myBreakpointsDefaults.computeIfAbsent(type, k -> createBreakpointDefaults(type));
+  public @NotNull BreakpointState getBreakpointDefaults(@NotNull XBreakpointType type) {
+    return withLockMaybeCancellable(myLock, () ->
+      myBreakpointsDefaults.computeIfAbsent(type, k -> createBreakpointDefaults(type)));
   }
 
   @Nullable
   <T extends XBreakpointProperties> XLineBreakpoint<T> copyLineBreakpoint(@NotNull XLineBreakpoint<T> source,
                                                                           @NotNull String fileUrl,
                                                                           int line) {
-    ApplicationManager.getApplication().assertWriteAccessAllowed();
-    if (!(source instanceof XLineBreakpointImpl<?>)) {
-      return null;
-    }
-    myDependentBreakpointManager.saveState();
-    final LineBreakpointState sourceState = ((XLineBreakpointImpl<?>)source).getState();
-
-    Element element = XmlSerializer.serialize(sourceState);
-    LineBreakpointState newState = element == null ? new LineBreakpointState() : XmlSerializer.deserialize(element, LineBreakpointState.class);
-    newState.setLine(line);
-    newState.setFileUrl(fileUrl);
-
-    //noinspection unchecked
-    final XLineBreakpointImpl<T> breakpoint = (XLineBreakpointImpl<T>)createBreakpoint(newState);
-    if (breakpoint != null) {
-      addBreakpoint(breakpoint, false, true);
-      final XBreakpoint<?> masterBreakpoint = myDependentBreakpointManager.getMasterBreakpoint(source);
-      if (masterBreakpoint != null) {
-        myDependentBreakpointManager.setMasterBreakpoint(breakpoint, masterBreakpoint, sourceState.getDependencyState().isLeaveEnabled());
+    return withLockMaybeCancellable(myLock, () -> {
+      if (!(source instanceof XLineBreakpointImpl<?>)) {
+        return null;
       }
-    }
+      myDependentBreakpointManager.saveState();
+      final LineBreakpointState sourceState = ((XLineBreakpointImpl<?>)source).getState();
 
-    return breakpoint;
+      Element element = XmlSerializer.serialize(sourceState);
+      LineBreakpointState newState =
+        element == null ? new LineBreakpointState() : XmlSerializer.deserialize(element, LineBreakpointState.class);
+      newState.setLine(line);
+      newState.setFileUrl(fileUrl);
+
+      //noinspection unchecked
+      XLineBreakpointImpl<T> breakpoint = (XLineBreakpointImpl<T>)createBreakpoint(newState);
+      if (breakpoint != null) {
+        addBreakpoint(breakpoint, false, true);
+        final XBreakpoint<?> masterBreakpoint = myDependentBreakpointManager.getMasterBreakpoint(source);
+        if (masterBreakpoint != null) {
+          myDependentBreakpointManager.setMasterBreakpoint(breakpoint, masterBreakpoint, sourceState.getDependencyState().isLeaveEnabled());
+        }
+      }
+
+      return breakpoint;
+    });
   }
 
-  @NotNull
-  private static BreakpointState createBreakpointDefaults(@NotNull XBreakpointType type) {
+  private static @NotNull BreakpointState createBreakpointDefaults(@NotNull XBreakpointType type) {
     BreakpointState state = new BreakpointState();
     state.setTypeId(type.getId());
     state.setSuspendPolicy(type.getDefaultSuspendPolicy());
@@ -663,13 +664,12 @@ public final class XBreakpointManagerImpl implements XBreakpointManager {
     myLastRemovedBreakpoint = new RemovedBreakpointData(breakpoint);
   }
 
-  @Nullable
-  public XBreakpointBase getLastRemovedBreakpoint() {
+  public @Nullable XBreakpointBase getLastRemovedBreakpoint() {
     return myLastRemovedBreakpoint != null ? myLastRemovedBreakpoint.myBreakpoint : null;
   }
 
-  @Nullable
-  public XBreakpoint restoreLastRemovedBreakpoint() {
+  public @Nullable XBreakpoint restoreLastRemovedBreakpoint() {
+    // FIXME[inline-bp]: support multiple breakpoints restore
     if (myLastRemovedBreakpoint != null) {
       XBreakpoint breakpoint = myLastRemovedBreakpoint.restore();
       myLastRemovedBreakpoint = null;
