@@ -1,18 +1,4 @@
-/*
- * Copyright 2000-2017 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.jps.incremental.groovy;
 
 import com.intellij.util.containers.ContainerUtil;
@@ -32,10 +18,11 @@ import org.jetbrains.jps.model.JpsModel;
 import org.jetbrains.jps.model.module.JpsModule;
 
 import java.io.File;
+import java.nio.file.Path;
 import java.util.*;
 
 public class CheckResourcesTarget extends BuildTarget<GroovyResourceRootDescriptor> {
-  @NotNull private final JpsModule myModule;
+  private final @NotNull JpsModule myModule;
 
   CheckResourcesTarget(@NotNull JpsModule module, @NotNull Type targetType) {
     super(targetType);
@@ -47,9 +34,8 @@ public class CheckResourcesTarget extends BuildTarget<GroovyResourceRootDescript
     return myModule.getName();
   }
 
-  @Nullable
   @Override
-  public GroovyResourceRootDescriptor findRootDescriptor(@NotNull String rootId, @NotNull BuildRootIndex rootIndex) {
+  public @Nullable GroovyResourceRootDescriptor findRootDescriptor(@NotNull String rootId, @NotNull BuildRootIndex rootIndex) {
     List<GroovyResourceRootDescriptor> descriptors = rootIndex.getRootDescriptors(new File(rootId),
                                                                                   Collections.singletonList((Type)getTargetType()),
                                                                                   null);
@@ -61,9 +47,8 @@ public class CheckResourcesTarget extends BuildTarget<GroovyResourceRootDescript
     return ((Type)getTargetType()).myTests;
   }
 
-  @NotNull
   @Override
-  public String getPresentableName() {
+  public @NotNull String getPresentableName() {
     return "Check Groovy Resources for '" + myModule.getName() + "' " + (isTests() ? "tests" : "production");
   }
 
@@ -82,35 +67,31 @@ public class CheckResourcesTarget extends BuildTarget<GroovyResourceRootDescript
     return result;
   }
 
-  @NotNull
   @Override
-  public List<GroovyResourceRootDescriptor> computeRootDescriptors(@NotNull JpsModel model,
-                                                                   @NotNull ModuleExcludeIndex index,
-                                                                   @NotNull IgnoredFileIndex ignoredFileIndex,
-                                                                   @NotNull BuildDataPaths dataPaths) {
+  public @NotNull List<GroovyResourceRootDescriptor> computeRootDescriptors(@NotNull JpsModel model,
+                                                                            @NotNull ModuleExcludeIndex index,
+                                                                            @NotNull IgnoredFileIndex ignoredFileIndex,
+                                                                            @NotNull BuildDataPaths dataPaths) {
     ResourcesTarget target = new ResourcesTarget(myModule, ResourcesTargetType.getInstance(isTests()));
     List<ResourceRootDescriptor> resources = target.computeRootDescriptors(model, index, ignoredFileIndex, dataPaths);
     return ContainerUtil.map(resources, descriptor -> new GroovyResourceRootDescriptor(descriptor, this));
   }
 
-  @NotNull
   @Override
-  public Collection<File> getOutputRoots(@NotNull CompileContext context) {
-    return Collections.singletonList(getOutputRoot(context));
+  public @NotNull Collection<File> getOutputRoots(@NotNull CompileContext context) {
+    return List.of(getOutputRoot(context).toFile());
   }
 
-  @NotNull
-  File getOutputRoot(CompileContext context) {
-    File commonRoot = new File(context.getProjectDescriptor().dataManager.getDataPaths().getDataStorageRoot(), "groovyResources");
-    return new File(commonRoot, myModule.getName() + File.separator + getTargetType().getTypeId());
+  @NotNull Path getOutputRoot(CompileContext context) {
+    Path commonRoot = context.getProjectDescriptor().dataManager.getDataPaths().getDataStorageDir().resolve("groovyResources");
+    return commonRoot.resolve(myModule.getName() + File.separator + getTargetType().getTypeId());
   }
 
   public static final Type PRODUCTION = new Type(false);
   public static final Type TESTS = new Type(true);
   static final List<Type> TARGET_TYPES = Arrays.asList(PRODUCTION, TESTS);
 
-  @NotNull
-  public JpsModule getModule() {
+  public @NotNull JpsModule getModule() {
     return myModule;
   }
 
@@ -140,23 +121,20 @@ public class CheckResourcesTarget extends BuildTarget<GroovyResourceRootDescript
       myTests = tests;
     }
 
-    @NotNull
     @Override
-    public List<CheckResourcesTarget> computeAllTargets(@NotNull JpsModel model) {
+    public @NotNull List<CheckResourcesTarget> computeAllTargets(@NotNull JpsModel model) {
       return ContainerUtil.map(model.getProject().getModules(), module -> new CheckResourcesTarget(module, this));
     }
 
-    @NotNull
     @Override
-    public BuildTargetLoader<CheckResourcesTarget> createLoader(@NotNull JpsModel model) {
+    public @NotNull BuildTargetLoader<CheckResourcesTarget> createLoader(@NotNull JpsModel model) {
       final Map<String, JpsModule> modules = new HashMap<>();
       for (JpsModule module : model.getProject().getModules()) {
         modules.put(module.getName(), module);
       }
       return new BuildTargetLoader<CheckResourcesTarget>() {
-        @Nullable
         @Override
-        public CheckResourcesTarget createTarget(@NotNull String targetId) {
+        public @Nullable CheckResourcesTarget createTarget(@NotNull String targetId) {
           JpsModule module = modules.get(targetId);
           return module != null ? new CheckResourcesTarget(module, Type.this) : null;
         }
