@@ -1,8 +1,9 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.jps.incremental.groovy;
 
 import com.intellij.openapi.util.io.FileFilters;
 import com.intellij.openapi.util.io.FileUtil;
+import com.intellij.openapi.util.io.FileUtilRt;
 import com.intellij.util.containers.MultiMap;
 import org.jetbrains.groovy.compiler.rt.OutputItem;
 import org.jetbrains.jps.ModuleChunk;
@@ -14,7 +15,7 @@ import org.jetbrains.jps.incremental.ModuleBuildTarget;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.Collections;
+import java.nio.file.Path;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
@@ -51,8 +52,7 @@ class CompilingGroovycRunner extends JpsGroovycRunner<JavaSourceRootDescriptor, 
     final BuildRootIndex rootsIndex = context.getProjectDescriptor().getBuildRootIndex();
     for (ModuleBuildTarget target : generationOutputs.keySet()) {
       File root = new File(generationOutputs.get(target));
-      rootsIndex.associateTempRoot(context, target, new JavaSourceRootDescriptor(root, target, true, true, "", Collections.emptySet(),
-                                                                                 FileFilters.EVERYTHING));
+      rootsIndex.associateTempRoot(context, target, JavaSourceRootDescriptor.createJavaSourceRootDescriptor(root, target, true, true, "", Set.of(), FileFilters.EVERYTHING));
     }
   }
 
@@ -62,7 +62,7 @@ class CompilingGroovycRunner extends JpsGroovycRunner<JavaSourceRootDescriptor, 
       GroovyBuilder.STUB_TO_SRC.set(context, stubToSrc = new HashMap<>());
     }
     for (OutputItem item : compiled.values()) {
-      stubToSrc.put(FileUtil.toSystemIndependentName(item.outputPath), item.sourcePath);
+      stubToSrc.put(FileUtilRt.toSystemIndependentName(item.outputPath), item.sourcePath);
     }
   }
 
@@ -73,9 +73,9 @@ class CompilingGroovycRunner extends JpsGroovycRunner<JavaSourceRootDescriptor, 
     if (!myForStubs) return super.getGenerationOutputs(context, chunk, finalOutputs);
 
     Map<ModuleBuildTarget, String> generationOutputs = new HashMap<>();
-    File commonRoot = GroovyBuilder.getStubRoot(context);
+    Path commonRoot = GroovyBuilder.getStubRoot(context);
     for (ModuleBuildTarget target : chunk.getTargets()) {
-      File targetRoot = new File(commonRoot, target.getModule().getName() + File.separator + target.getTargetType().getTypeId());
+      File targetRoot = commonRoot.resolve(target.getModule().getName() + File.separator + target.getTargetType().getTypeId()).toFile();
       if (targetRoot.exists() && !FileUtil.deleteWithRenaming(targetRoot)) {
         throw new IOException("External build cannot clean " + targetRoot.getPath());
       }
