@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2025 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package org.jetbrains.jps.incremental.groovy;
 
 import com.intellij.openapi.util.Key;
@@ -19,16 +19,15 @@ import java.io.File;
 import java.io.IOException;
 import java.util.*;
 
-public class GroovyResourceChecker extends TargetBuilder<GroovyResourceRootDescriptor, CheckResourcesTarget> {
+public final class GroovyResourceChecker extends TargetBuilder<GroovyResourceRootDescriptor, CheckResourcesTarget> {
   public static final Key<Boolean> CHECKING_RESOURCES_REBUILD = Key.create("CHECKING_RESOURCES");
 
   public GroovyResourceChecker() {
     super(CheckResourcesTarget.TARGET_TYPES);
   }
 
-  @NotNull
   @Override
-  public String getPresentableName() {
+  public @NotNull String getPresentableName() {
     return GroovyJpsBundle.message("builder.resource.checker");
   }
 
@@ -38,9 +37,9 @@ public class GroovyResourceChecker extends TargetBuilder<GroovyResourceRootDescr
   }
 
   @Override
-  public void build(@NotNull final CheckResourcesTarget target,
+  public void build(@NotNull CheckResourcesTarget target,
                     @NotNull DirtyFilesHolder<GroovyResourceRootDescriptor, CheckResourcesTarget> holder,
-                    @NotNull final BuildOutputConsumer outputConsumer,
+                    @NotNull BuildOutputConsumer outputConsumer,
                     @NotNull CompileContext context) throws ProjectBuildException, IOException {
     if (context.getBuilderParameter(CHECKING_RESOURCES_REBUILD.toString()) == null) {
       return;
@@ -54,13 +53,11 @@ public class GroovyResourceChecker extends TargetBuilder<GroovyResourceRootDescr
     });
   }
 
-  @NotNull
-  private static ModuleChunk singleModuleChunk(final JpsModule module) {
+  private static @NotNull ModuleChunk singleModuleChunk(final JpsModule module) {
     return new ModuleChunk(Collections.singleton(new ModuleBuildTarget(module, JavaModuleBuildTargetType.PRODUCTION)));
   }
 
-  private static class ResourceCheckingGroovycRunner extends JpsGroovycRunner<GroovyResourceRootDescriptor, CheckResourcesTarget> {
-
+  private static final class ResourceCheckingGroovycRunner extends JpsGroovycRunner<GroovyResourceRootDescriptor, CheckResourcesTarget> {
     private final CheckResourcesTarget myTarget;
 
     ResourceCheckingGroovycRunner(CheckResourcesTarget target) {
@@ -70,7 +67,7 @@ public class GroovyResourceChecker extends TargetBuilder<GroovyResourceRootDescr
 
     @Override
     protected Map<CheckResourcesTarget, String> getCanonicalOutputs(CompileContext context, ModuleChunk chunk, Builder builder) {
-      return Collections.singletonMap(myTarget, myTarget.getOutputRoot(context).getPath());
+      return Map.of(myTarget, myTarget.getOutputRoot(context).toString());
     }
 
     @Override
@@ -95,8 +92,7 @@ public class GroovyResourceChecker extends TargetBuilder<GroovyResourceRootDescr
       return paths;
     }
 
-    @NotNull
-    private List<File> getVisibleResourceOutputs(CompileContext context, boolean tests) {
+    private @NotNull List<File> getVisibleResourceOutputs(CompileContext context, boolean tests) {
       List<File> resourceOutputs = new ArrayList<>();
       JpsJavaDependenciesEnumerator enumerator = JpsJavaExtensionService.dependencies(myTarget.getModule()).
         includedIn(JpsJavaClasspathKind.compile(tests)).
