@@ -2,6 +2,7 @@
 package com.jetbrains.python.debugger.containerview;
 
 import com.intellij.openapi.util.Pair;
+import com.intellij.ui.JBColor;
 import org.jetbrains.annotations.NotNull;
 
 import java.awt.*;
@@ -27,10 +28,13 @@ public final class PyNumericViewUtil {
     return 0;
   }
 
-  public static Color rangedValueToColor(double rangedValue)
-  {
-    //noinspection UseJBColor
-    return  new Color((int)Math.round(255 * rangedValue), 0, (int)Math.round(255 * (1 - rangedValue)), 130);
+  public static Color rangedValueToColor(double rangedValue) {
+    if (JBColor.isBright()) {
+      return Color.getHSBColor(240 / 360f, (float)rangedValue * 0.7f, 1f);
+    }
+    else {
+      return Color.getHSBColor(240 / 360f, 220 / 360f, (float)rangedValue * 0.7f);
+    }
   }
 
   /**
@@ -52,6 +56,7 @@ public final class PyNumericViewUtil {
   }
 
   private static Pair<Double, Double> parsePyComplex(@NotNull String pyComplexValue) {
+    if (pyComplexValue.equals("nan")) return null;
     if (pyComplexValue.startsWith("(") && pyComplexValue.endsWith(")")) {
       pyComplexValue = pyComplexValue.substring(1, pyComplexValue.length() - 1);
     }
@@ -60,14 +65,14 @@ public final class PyNumericViewUtil {
       String real = matcher.group(1);
       String imag = matcher.group(2);
       if (imag == null && real.contains("j")) {
-        return new Pair<>(new Double(0.0), Double.parseDouble(real.substring(0, real.length() - 1)));
+        return new Pair<>(Double.valueOf(0.0), Double.parseDouble(real.substring(0, real.length() - 1)));
       }
       else if (imag != null) {
         return new Pair<>(Double.parseDouble(real), Double.parseDouble(imag.substring(0, imag.length() - 1)));
       }
     }
     else {
-      throw new IllegalArgumentException("Not a valid python complex value: " + pyComplexValue);
+      throw new NumberFormatException("Not a valid python complex value: " + pyComplexValue);
     }
     return null;
   }
